@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -22,7 +22,6 @@
  */
 package org.apache.hive.beeline;
 
-import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.Closeable;
 import java.io.EOFException;
@@ -30,11 +29,11 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.io.PrintStream;
 import java.io.SequenceInputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
 import java.net.JarURLConnection;
 import java.net.URL;
 import java.net.URLConnection;
@@ -51,8 +50,8 @@ import java.sql.SQLWarning;
 import java.sql.Statement;
 import java.text.ChoiceFormat;
 import java.text.MessageFormat;
-import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -60,26 +59,26 @@ import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedHashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Objects;
 import java.util.Properties;
 import java.util.ResourceBundle;
-import java.util.ServiceLoader;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.StringTokenizer;
 import java.util.TreeMap;
 import java.util.TreeSet;
-import java.util.concurrent.TimeUnit;
 import java.util.jar.Attributes;
 import java.util.jar.Manifest;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipFile;
+
+import jline.console.completer.Completer;
+import jline.console.completer.StringsCompleter;
+import jline.console.completer.FileNameCompleter;
+import jline.console.ConsoleReader;
+import jline.console.history.FileHistory;
 
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.GnuParser;
@@ -88,32 +87,21 @@ import org.apache.commons.cli.Options;
 import org.apache.commons.cli.ParseException;
 import org.apache.hadoop.fs.FSDataInputStream;
 import org.apache.hadoop.fs.FileSystem;
-import org.apache.hadoop.hive.conf.Constants;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.io.IOUtils;
 import org.apache.hive.beeline.cli.CliOptionsProcessor;
-import org.apache.hive.beeline.hs2connection.BeelineConfFileParseException;
-import org.apache.hive.beeline.hs2connection.BeelineSiteParseException;
-import org.apache.hive.beeline.hs2connection.BeelineSiteParser;
-import org.apache.hive.beeline.hs2connection.HS2ConnectionFileParser;
-import org.apache.hive.beeline.hs2connection.HS2ConnectionFileUtils;
-import org.apache.hive.beeline.hs2connection.HiveSiteHS2ConnectionFileParser;
-import org.apache.hive.beeline.hs2connection.UserHS2ConnectionFileParser;
 import org.apache.hive.common.util.ShutdownHookManager;
-import org.apache.hive.common.util.HiveStringUtils;
-import org.apache.hive.jdbc.HiveConnection;
-import org.apache.hive.jdbc.JdbcUriParseException;
-import org.apache.hive.jdbc.Utils;
-import org.apache.hive.jdbc.Utils.JdbcConnectionParams;
+import org.apache.hive.beeline.hs2connection.BeelineHS2ConnectionFileParseException;
+import org.apache.hive.beeline.hs2connection.HS2ConnectionFileUtils;
+import org.apache.hive.beeline.hs2connection.UserHS2ConnectionFileParser;
+import org.apache.hive.beeline.hs2connection.HS2ConnectionFileParser;
+import org.apache.hive.beeline.hs2connection.HiveSiteHS2ConnectionFileParser;
 import org.apache.thrift.transport.TTransportException;
 
 import com.google.common.annotations.VisibleForTesting;
 
-import jline.console.ConsoleReader;
-import jline.console.completer.Completer;
-import jline.console.completer.FileNameCompleter;
-import jline.console.completer.StringsCompleter;
-import jline.console.history.FileHistory;
+import org.apache.hive.jdbc.Utils;
+import org.apache.hive.jdbc.Utils.JdbcConnectionParams;
 
 /**
  * A console SQL shell with command completion.
@@ -150,7 +138,6 @@ public class BeeLine implements Closeable {
   private OutputFile recordOutputFile = null;
   private PrintStream outputStream = new PrintStream(System.out, true);
   private PrintStream errorStream = new PrintStream(System.err, true);
-  private InputStream inputStream = System.in;
   private ConsoleReader consoleReader;
   private List<String> batch = null;
   private final Reflector reflector = new Reflector(this);
@@ -160,10 +147,6 @@ public class BeeLine implements Closeable {
   private FileHistory history;
   // Indicates if this instance of beeline is running in compatibility mode, or beeline mode
   private boolean isBeeLine = true;
-
-  // Indicates that we are in test mode.
-  // Print only the errors, the operation log and the query results.
-  private boolean isTestMode = false;
 
   private static final Options options = new Options();
 
@@ -180,7 +163,7 @@ public class BeeLine implements Closeable {
   private static final String HIVE_VAR_PREFIX = "--hivevar";
   private static final String HIVE_CONF_PREFIX = "--hiveconf";
   private static final String PROP_FILE_PREFIX = "--property-file";
-  public static final String PASSWD_MASK = "[passwd stripped]";
+  static final String PASSWD_MASK = "[passwd stripped]";
 
   private final Map<Object, Object> formats = map(new Object[] {
       "vertical", new VerticalOutputFormat(this),
@@ -192,8 +175,6 @@ public class BeeLine implements Closeable {
       "tsv", new DeprecatedSeparatedValuesOutputFormat(this, '\t'),
       "xmlattr", new XMLAttributeOutputFormat(this),
       "xmlelements", new XMLElementOutputFormat(this),
-      "json", new JSONOutputFormat(this),
-      "jsonfile", new JSONFileOutputFormat(this),
   });
 
   private List<String> supportedLocalDriver =
@@ -293,8 +274,6 @@ public class BeeLine implements Closeable {
       new ReflectiveCommandHandler(this, new String[]{"addlocaldriverjar"},
           null),
       new ReflectiveCommandHandler(this, new String[]{"addlocaldrivername"},
-          null),
-      new ReflectiveCommandHandler(this, new String[]{"delimiter"},
           null)
   };
 
@@ -319,23 +298,15 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("driver class")
-        .withDescription("The driver class to use")
+        .withDescription("the driver class to use")
         .create('d'));
 
     // -u <database url>
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("database url")
-        .withDescription("The JDBC URL to connect to")
+        .withDescription("the JDBC URL to connect to")
         .create('u'));
-
-    // -c <named url in the beeline-hs2-connection.xml>
-    options.addOption(OptionBuilder
-        .hasArg()
-        .withArgName("named JDBC URL in beeline-site.xml")
-        .withDescription("The named JDBC URL to connect to, which should be present in "
-            + "beeline-site.xml as the value of beeline.hs2.jdbc.url.<namedUrl>")
-        .create('c'));
 
     // -r
     options.addOption(OptionBuilder
@@ -347,14 +318,14 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("username")
-        .withDescription("The username to connect as")
+        .withDescription("the username to connect as")
         .create('n'));
 
     // -p <password>
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("password")
-        .withDescription("The password to connect as")
+        .withDescription("the password to connect as")
         .hasOptionalArg()
         .create('p'));
 
@@ -362,7 +333,7 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("password-file")
-        .withDescription("The password file to read password from")
+        .withDescription("the password file to read password from")
         .withLongOpt("password-file")
         .create('w'));
 
@@ -370,41 +341,35 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("authType")
-        .withDescription("The authentication type")
+        .withDescription("the authentication type")
         .create('a'));
 
     // -i <init file>
     options.addOption(OptionBuilder
-        .hasArgs()
+        .hasArg()
         .withArgName("init")
-        .withDescription("The script file for initialization")
+        .withDescription("script file for initialization")
         .create('i'));
 
     // -e <query>
     options.addOption(OptionBuilder
         .hasArgs()
         .withArgName("query")
-        .withDescription("The query that should be executed")
+        .withDescription("query that should be executed")
         .create('e'));
 
     // -f <script file>
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("file")
-        .withDescription("The script file that should be executed")
+        .withDescription("script file that should be executed")
         .create('f'));
 
     // -help
     options.addOption(OptionBuilder
         .withLongOpt("help")
-        .withDescription("Display this message")
+        .withDescription("display this message")
         .create('h'));
-    
-    // -getUrlsFromBeelineSite
-    options.addOption(OptionBuilder
-        .withLongOpt("getUrlsFromBeelineSite")
-        .withDescription("Print all urls from beeline-site.xml, if it is present in the classpath")
-        .create());
 
     // Substitution option --hivevar
     options.addOption(OptionBuilder
@@ -412,7 +377,7 @@ public class BeeLine implements Closeable {
         .hasArgs(2)
         .withArgName("key=value")
         .withLongOpt("hivevar")
-        .withDescription("Hive variable name and value")
+        .withDescription("hive variable name and value")
         .create());
 
     //hive conf option --hiveconf
@@ -428,7 +393,7 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withLongOpt("property-file")
-        .withDescription("The file to read configuration properties from")
+        .withDescription("the file to read configuration properties from")
         .create());
   }
 
@@ -494,7 +459,7 @@ public class BeeLine implements Closeable {
     try {
       return MessageFormat.format(
           new ChoiceFormat(resourceBundle.getString(res)).format(param),
-          new Object[] {Integer.valueOf(param)});
+          new Object[] {new Integer(param)});
     } catch (Exception e) {
       return res + ": " + param;
     }
@@ -523,7 +488,7 @@ public class BeeLine implements Closeable {
 
   protected String locElapsedTime(long milliseconds) {
     if (getOpts().getShowElapsedTime()) {
-      return loc("time-ms", new Object[] {Double.valueOf(milliseconds / 1000d)});
+      return loc("time-ms", new Object[] {new Double(milliseconds / 1000d)});
     }
     return "";
   }
@@ -728,7 +693,7 @@ public class BeeLine implements Closeable {
 
     private boolean isBeeLineOpt(String arg) {
       return arg.startsWith("--") && !(HIVE_VAR_PREFIX.equals(arg) || (HIVE_CONF_PREFIX.equals(arg))
-          || "--help".equals(arg) || PROP_FILE_PREFIX.equals(arg) || "--getUrlsFromBeelineSite".equals(arg));
+          || "--help".equals(arg) || PROP_FILE_PREFIX.equals(arg));
     }
   }
 
@@ -765,7 +730,7 @@ public class BeeLine implements Closeable {
 
     dbName = commandLine.getOptionValue("database");
     getOpts().setVerbose(Boolean.parseBoolean(commandLine.getOptionValue("verbose")));
-    getOpts().setSilent(Boolean.parseBoolean(commandLine.getOptionValue("silent")));
+    getOpts().setSilent(Boolean.parseBoolean(commandLine.getOptionValue("slient")));
 
     int code = 0;
     if (commandLine.getOptionValues("e") != null) {
@@ -813,17 +778,12 @@ public class BeeLine implements Closeable {
     // and uses it to connect if found
     // no-op if the file is not present
     if(!connSuccessful && !exit) {
-      connSuccessful = defaultBeelineConnect(cl);
-    }
-    if (exit) {
-      return 1;
+      connSuccessful = defaultBeelineConnect();
     }
 
     int code = 0;
     if (cl.getOptionValues('e') != null) {
       commands = Arrays.asList(cl.getOptionValues('e'));
-      opts.setAllowMultiLineCommand(false); //When using -e, command is always a single line
-
     }
 
     if (!commands.isEmpty() && getOpts().getScriptFile() != null) {
@@ -862,12 +822,6 @@ public class BeeLine implements Closeable {
       getOpts().setHelpAsked(true);
       return true;
     }
-    
-    if (cl.hasOption("getUrlsFromBeelineSite")) {
-      printBeelineSiteUrls();
-      getOpts().setBeelineSiteUrlsAsked(true);
-      return true;
-    }
 
     Properties hiveVars = cl.getOptionProperties("hivevar");
     for (String key : hiveVars.stringPropertyNames()) {
@@ -898,24 +852,8 @@ public class BeeLine implements Closeable {
     getOpts().setInitFiles(cl.getOptionValues("i"));
     getOpts().setScriptFile(cl.getOptionValue("f"));
 
-    if (url != null) {
-      String hplSqlMode = Utils.parsePropertyFromUrl(url, Constants.MODE);
-      if ("HPLSQL".equalsIgnoreCase(hplSqlMode)) {
-        getOpts().setDelimiter("/");
-        getOpts().setEntireLineAsCommand(true);
-      }
-      // Specifying username/password/driver explicitly will override the values from the url;
-      // make sure we don't override the values present in the url with empty values.
-      if (user == null) {
-        user = Utils.parsePropertyFromUrl(url, JdbcConnectionParams.AUTH_USER);
-      }
-      if (pass == null) {
-        pass = Utils.parsePropertyFromUrl(url, JdbcConnectionParams.AUTH_PASSWD);
-      }
-      if (driver == null) {
-        driver = Utils.parsePropertyFromUrl(url, JdbcConnectionParams.PROPERTY_DRIVER);
-      }
 
+    if (url != null) {
       String com;
       String comForDebug;
       if(pass != null) {
@@ -926,11 +864,7 @@ public class BeeLine implements Closeable {
         comForDebug = constructCmdUrl(url, user, driver, true);
       }
       debug(comForDebug);
-      if (!dispatch(com)) {
-        exit = true;
-        return false;
-      }
-      return true;
+      return dispatch(com);
     }
     // load property file
     String propertyFile = cl.getOptionValue("property-file");
@@ -943,47 +877,7 @@ public class BeeLine implements Closeable {
       if (!dispatch("!properties " + propertyFile)) {
         exit = true;
         return false;
-      } else {
-        return true;
       }
-    }
-    return false;
-  }
-
-  private void printBeelineSiteUrls() {
-    BeelineSiteParser beelineSiteParser = getUserBeelineSiteParser();
-    if (!beelineSiteParser.configExists()) {
-      output("No beeline-site.xml in the path", true);
-    }
-    if (beelineSiteParser.configExists()) {
-      // Get the named url from user specific config file if present
-      try {
-        Properties userNamedConnectionURLs = beelineSiteParser.getConnectionProperties();
-        userNamedConnectionURLs.remove(BeelineSiteParser.DEFAULT_NAMED_JDBC_URL_PROPERTY_KEY);
-        StringBuilder sb = new StringBuilder("urls: ");
-        for (Entry<Object, Object> entry : userNamedConnectionURLs.entrySet()) {
-          String urlFromBeelineSite = (String) entry.getValue();
-          if (isZkBasedUrl(urlFromBeelineSite)) {
-            List<String> jdbcUrls = HiveConnection.getAllUrlStrings(urlFromBeelineSite);
-            for (String jdbcUrl : jdbcUrls) {
-              sb.append(jdbcUrl + ", ");
-            }
-          } else {
-            sb.append(urlFromBeelineSite + ", ");
-          }
-        }
-        output(sb.toString(), true);
-      } catch (Exception e) {
-        output(e.getMessage(), true);
-        return;
-      }
-    }
-  }
-  
-  private boolean isZkBasedUrl(String urlFromBeelineSite) {
-    String zkJdbcUriParam = ("serviceDiscoveryMode=zooKeeper").toLowerCase();
-    if (urlFromBeelineSite.toLowerCase().contains(zkJdbcUriParam)) {
-      return true;
     }
     return false;
   }
@@ -1086,21 +980,17 @@ public class BeeLine implements Closeable {
   public void updateOptsForCli() {
     getOpts().updateBeeLineOptsFromConf();
     getOpts().setShowHeader(false);
-    getOpts().setEscapeCRLF(false);
     getOpts().setOutputFormat("dsv");
     getOpts().setDelimiterForDSV(' ');
     getOpts().setNullEmptyString(true);
   }
 
-  public int begin(String[] args, InputStream inputStream) throws IOException {
-    return begin(args, inputStream, true);
-  }
   /**
    * Start accepting input from stdin, and dispatch it
    * to the appropriate {@link CommandHandler} until the
    * global variable <code>exit</code> is true.
    */
-  public int begin(String[] args, InputStream inputStream, boolean keepHistory) throws IOException {
+  public int begin(String[] args, InputStream inputStream) throws IOException {
     try {
       // load the options first, so we can override on the command line
       getOpts().load();
@@ -1108,9 +998,7 @@ public class BeeLine implements Closeable {
       // nothing
     }
 
-    if (keepHistory) {
-      setupHistory();
-    }
+    setupHistory();
 
     //add shutdown hook to cleanup the beeline for smooth exit
     addBeelineShutdownHook();
@@ -1134,9 +1022,6 @@ public class BeeLine implements Closeable {
     if (getOpts().isHelpAsked()) {
       return 0;
     }
-    if (getOpts().isBeelineSiteUrlsAsked()) {
-      return 0;
-    }
     if (getOpts().getScriptFile() != null) {
       return executeFile(getOpts().getScriptFile());
     }
@@ -1153,110 +1038,50 @@ public class BeeLine implements Closeable {
    * if there connection is not made return false
    *
    */
-  private boolean defaultBeelineConnect(CommandLine cl) {
+  private boolean defaultBeelineConnect() {
     String url;
     try {
-      url = getDefaultConnectionUrl(cl);
+      url = getDefaultConnectionUrl();
       if (url == null) {
         debug("Default hs2 connection config file not found");
         return false;
       }
-    } catch (BeelineConfFileParseException e) {
+    } catch (BeelineHS2ConnectionFileParseException e) {
       error(e);
       return false;
     }
     return dispatch("!connect " + url);
   }
 
-  private String getDefaultConnectionUrl(CommandLine cl) throws BeelineConfFileParseException {
-    Properties mergedConnectionProperties = new Properties();
-    JdbcConnectionParams jdbcConnectionParams = null;
-    BeelineSiteParser beelineSiteParser = getUserBeelineSiteParser();
-    UserHS2ConnectionFileParser userHS2ConnFileParser = getUserHS2ConnFileParser();
-    Properties userConnectionProperties = new Properties();
 
-    if (!userHS2ConnFileParser.configExists() && !beelineSiteParser.configExists()) {
+  private String getDefaultConnectionUrl() throws BeelineHS2ConnectionFileParseException {
+    HS2ConnectionFileParser userHS2ConnFileParser = getUserHS2ConnFileParser();
+    if (!userHS2ConnFileParser.configExists()) {
       // nothing to do if there is no user HS2 connection configuration file
-      // or beeline-site.xml in the path
       return null;
     }
-
-    if (beelineSiteParser.configExists()) {
-      String urlFromCommandLineOption = cl.getOptionValue("u");
-      if (urlFromCommandLineOption != null) {
-        throw new BeelineSiteParseException(
-            "Not using beeline-site.xml since the user provided the url: " + urlFromCommandLineOption);
-      }
-      // Get the named url from user specific config file if present
-      Properties userNamedConnectionURLs = beelineSiteParser.getConnectionProperties();
-      if (!userNamedConnectionURLs.isEmpty()) {
-        String urlName = cl.getOptionValue("c");
-        String jdbcURL = HS2ConnectionFileUtils.getNamedUrl(userNamedConnectionURLs, urlName);
-        if (jdbcURL != null) {
-          try {
-            jdbcConnectionParams = Utils.extractURLComponents(jdbcURL, new Properties());
-          } catch (JdbcUriParseException e) {
-            throw new BeelineSiteParseException(
-                "Error in parsing jdbc url: " + jdbcURL + " from beeline-site.xml", e);
-          }
-        }
-      }
-    }
-
-    if (userHS2ConnFileParser.configExists()) {
-      // get the connection properties from user specific config file
-      userConnectionProperties = userHS2ConnFileParser.getConnectionProperties();
-    }
-
-    if (jdbcConnectionParams != null) {
-      String userName = cl.getOptionValue("n");
-      if (userName != null) {
-        jdbcConnectionParams.getSessionVars().put(JdbcConnectionParams.AUTH_USER, userName);
-      }
-      String password = cl.getOptionValue("p");
-      if (password != null) {
-        jdbcConnectionParams.getSessionVars().put(JdbcConnectionParams.AUTH_PASSWD, password);
-      }
-      String auth = cl.getOptionValue("a");
-      if (auth != null) {
-        jdbcConnectionParams.getSessionVars().put(JdbcConnectionParams.AUTH_TYPE, auth);
-      }
-      mergedConnectionProperties =
-          HS2ConnectionFileUtils.mergeUserConnectionPropertiesAndBeelineSite(
-              userConnectionProperties, jdbcConnectionParams);
-    } else {
-      mergedConnectionProperties = userConnectionProperties;
-    }
-
+    // get the connection properties from user specific config file
+    Properties userConnectionProperties = userHS2ConnFileParser.getConnectionProperties();
     // load the HS2 connection url properties from hive-site.xml if it is present in the classpath
     HS2ConnectionFileParser hiveSiteParser = getHiveSiteHS2ConnectionFileParser();
     Properties hiveSiteConnectionProperties = hiveSiteParser.getConnectionProperties();
     // add/override properties found from hive-site with user-specific properties
-    for (String key : mergedConnectionProperties.stringPropertyNames()) {
+    for (String key : userConnectionProperties.stringPropertyNames()) {
       if (hiveSiteConnectionProperties.containsKey(key)) {
         debug("Overriding connection url property " + key
             + " from user connection configuration file");
       }
-      hiveSiteConnectionProperties.setProperty(key, mergedConnectionProperties.getProperty(key));
+      hiveSiteConnectionProperties.setProperty(key, userConnectionProperties.getProperty(key));
     }
     // return the url based on the aggregated connection properties
     return HS2ConnectionFileUtils.getUrl(hiveSiteConnectionProperties);
   }
 
-
   /*
    * Increased visibility of this method is only for providing better test coverage
    */
   @VisibleForTesting
-  public BeelineSiteParser getUserBeelineSiteParser() {
-    return new BeelineSiteParser();
-  }
-
-  /*
-   * Increased visibility of this method is only for providing better test coverage
-   */
-  @VisibleForTesting
-  public UserHS2ConnectionFileParser getUserHS2ConnFileParser() {
+  public HS2ConnectionFileParser getUserHS2ConnFileParser() {
     return new UserHS2ConnectionFileParser();
   }
 
@@ -1269,31 +1094,18 @@ public class BeeLine implements Closeable {
   }
 
   int runInit() {
-    String[] initFiles = getOpts().getInitFiles();
-
-    //executionResult will be ERRNO_OK only if all initFiles execute successfully
-    int executionResult = ERRNO_OK;
-    boolean exitOnError = !getOpts().getForce();
-
+    String initFiles[] = getOpts().getInitFiles();
     if (initFiles != null && initFiles.length != 0) {
       for (String initFile : initFiles) {
         info("Running init script " + initFile);
         try {
-          int currentResult = executeFile(initFile);
-          if (currentResult != ERRNO_OK) {
-            executionResult = currentResult;
-
-            if (exitOnError) {
-              return executionResult;
-            }
-          }
+          return executeFile(initFile);
         } finally {
-          //exit beeline if there is initScript failure and --force is not set
-          exit = exitOnError && executionResult != ERRNO_OK;
+          exit = false;
         }
       }
     }
-    return executionResult;
+    return ERRNO_OK;
   }
 
   private int embeddedConnect() {
@@ -1338,16 +1150,7 @@ public class BeeLine implements Closeable {
         }
         fileStream = fs.open(path);
       } else {
-        org.apache.hadoop.fs.Path path = new org.apache.hadoop.fs.Path(fileName);
-        FileSystem fs;
-        HiveConf conf = new HiveConf();
-        if (!path.toUri().isAbsolute()) {
-          fs = FileSystem.getLocal(conf);
-          path = fs.makeQualified(path);
-        } else {
-          fs = FileSystem.get(path.toUri(), conf);
-        }
-        fileStream = fs.open(path);
+        fileStream = new FileInputStream(fileName);
       }
       return execute(initializeConsoleReader(fileStream), !getOpts().getForce());
     } catch (Throwable t) {
@@ -1360,15 +1163,12 @@ public class BeeLine implements Closeable {
 
   private int execute(ConsoleReader reader, boolean exitOnError) {
     int lastExecutionResult = ERRNO_OK;
-    Character mask = (System.getProperty("jline.terminal", "").equals("jline.UnsupportedTerminal")) ? null
-                       : ConsoleReader.NULL_MASK;
-
     while (!exit) {
       try {
         // Execute one instruction; terminate on executing a script if there is an error
         // in silent mode, prevent the query and prompt being echoed back to terminal
         String line = (getOpts().isSilent() && getOpts().getScriptFile() != null) ? reader
-            .readLine(null, mask) : reader.readLine(getPrompt());
+            .readLine(null, ConsoleReader.NULL_MASK) : reader.readLine(getPrompt());
 
         // trim line
         if (line != null) {
@@ -1377,9 +1177,7 @@ public class BeeLine implements Closeable {
 
         if (!dispatch(line)) {
           lastExecutionResult = ERRNO_OTHER;
-          if (exitOnError) {
-            break;
-          }
+          if (exitOnError) break;
         } else if (line != null) {
           lastExecutionResult = ERRNO_OK;
         }
@@ -1417,10 +1215,10 @@ public class BeeLine implements Closeable {
       // by appending a newline to the end of inputstream
       InputStream inputStreamAppendedNewline = new SequenceInputStream(inputStream,
           new ByteArrayInputStream((new String("\n")).getBytes()));
-      consoleReader = new ConsoleReader(inputStreamAppendedNewline, getErrorStream());
+      consoleReader = new ConsoleReader(inputStreamAppendedNewline, getOutputStream());
       consoleReader.setCopyPasteDetection(true); // jline will detect if <tab> is regular character
     } else {
-      consoleReader = new ConsoleReader(getInputStream(), getErrorStream());
+      consoleReader = new ConsoleReader();
     }
 
     //disable the expandEvents for the purpose of backward compatibility
@@ -1428,11 +1226,7 @@ public class BeeLine implements Closeable {
 
     try {
       // now set the output for the history
-      if (this.history != null) {
-        consoleReader.setHistory(this.history);
-      } else {
-        consoleReader.setHistoryEnabled(false);
-      }
+      consoleReader.setHistory(this.history);
     } catch (Exception e) {
       handleException(e);
     }
@@ -1493,9 +1287,11 @@ public class BeeLine implements Closeable {
       return true;
     }
 
-    line = HiveStringUtils.removeComments(line);
-
     if (line.trim().length() == 0) {
+      return true;
+    }
+
+    if (isComment(line)) {
       return true;
     }
 
@@ -1553,7 +1349,7 @@ public class BeeLine implements Closeable {
       return false;
     }
 
-    return !trimmed.endsWith(getOpts().getDelimiter());
+    return !trimmed.endsWith(";");
   }
 
   /**
@@ -1581,55 +1377,6 @@ public class BeeLine implements Closeable {
     // beeline also supports shell-style "#" prefix
     String lineTrimmed = line.trim();
     return lineTrimmed.startsWith("#") || lineTrimmed.startsWith("--");
-  }
-
-  String[] getCommands(File file) throws IOException {
-    List<String> cmds = new LinkedList<String>();
-    try (BufferedReader reader =
-             new BufferedReader(new InputStreamReader(new FileInputStream(file), "UTF-8"))) {
-      StringBuilder cmd = null;
-      while (true) {
-        String scriptLine = reader.readLine();
-
-        if (scriptLine == null) {
-          break;
-        }
-
-        String trimmedLine = scriptLine.trim();
-        if (getOpts().getTrimScripts()) {
-          scriptLine = trimmedLine;
-        }
-
-        if (cmd != null) {
-          // we're continuing an existing command
-          cmd.append("\n");
-          cmd.append(scriptLine);
-          if (trimmedLine.endsWith(getOpts().getDelimiter())) {
-            // this command has terminated
-            cmds.add(cmd.toString());
-            cmd = null;
-          }
-        } else {
-          // we're starting a new command
-          if (needsContinuation(scriptLine)) {
-            // multi-line
-            cmd = new StringBuilder(scriptLine);
-          } else {
-            // single-line
-            cmds.add(scriptLine);
-          }
-        }
-      }
-
-      if (cmd != null) {
-        // ### REVIEW: oops, somebody left the last command
-        // unterminated; should we fix it for them or complain?
-        // For now be nice and fix it.
-        cmd.append(getOpts().getDelimiter());
-        cmds.add(cmd.toString());
-      }
-    }
-    return cmds.toArray(new String[0]);
   }
 
   /**
@@ -1890,7 +1637,7 @@ public class BeeLine implements Closeable {
    */
   int getSize(ResultSet rs) {
     try {
-      if (rs.getType() == ResultSet.TYPE_FORWARD_ONLY) {
+      if (rs.getType() == rs.TYPE_FORWARD_ONLY) {
         return -1;
       }
       rs.last();
@@ -2004,7 +1751,7 @@ public class BeeLine implements Closeable {
 
 
   static Map<Object, Object> map(Object[] obs) {
-    Map<Object, Object> m = new LinkedHashMap<Object, Object>();
+    Map<Object, Object> m = new HashMap<Object, Object>();
     for (int i = 0; i < obs.length - 1; i += 2) {
       m.put(obs[i], obs[i + 1]);
     }
@@ -2201,7 +1948,7 @@ public class BeeLine implements Closeable {
         new Object[] {
             e.getMessage() == null ? "" : e.getMessage().trim(),
             e.getSQLState() == null ? "" : e.getSQLState().trim(),
-            Integer.valueOf(e.getErrorCode())}));
+            new Integer(e.getErrorCode())}));
 
     if (getOpts().getVerbose()) {
       e.printStackTrace(getErrorStream());
@@ -2217,32 +1964,38 @@ public class BeeLine implements Closeable {
     }
   }
 
-  boolean scanForDriver(final String url) {
-    Objects.requireNonNull(url);
 
+  boolean scanForDriver(String url) {
     try {
-      // Check drivers already registered
+      // already registered
       if (findRegisteredDriver(url) != null) {
         return true;
       }
 
-      // Scan classpath for drivers and load them
-      scanDrivers();
+      // first try known drivers...
+      scanDrivers(true);
 
-      // Try to find the driver again given the newly loaded drivers
       if (findRegisteredDriver(url) != null) {
         return true;
       }
 
-      // Find whether exists a local driver to accept the URL
+      // now really scan...
+      scanDrivers(false);
+
+      if (findRegisteredDriver(url) != null) {
+        return true;
+      }
+
+      // find whether exists a local driver to accept the url
       if (findLocalDriver(url) != null) {
         return true;
       }
-    } catch (Exception e) {
-      return error(e);
-    }
 
-    return false;
+      return false;
+    } catch (Exception e) {
+      debug(e.toString());
+      return false;
+    }
   }
 
 
@@ -2261,10 +2014,11 @@ public class BeeLine implements Closeable {
   }
 
   public Driver findLocalDriver(String url) throws Exception {
-    Objects.requireNonNull(url);
+    if(drivers == null){
+      return null;
+    }
 
-    Collection<Driver> currentDrivers = drivers == null ? Collections.emptyList() : drivers;
-    for (Driver d : currentDrivers) {
+    for (Driver d : drivers) {
       try {
         String clazzName = d.getClass().getName();
         Driver driver = (Driver) Class.forName(clazzName, true,
@@ -2273,10 +2027,10 @@ public class BeeLine implements Closeable {
           return driver;
         }
       } catch (SQLException e) {
-        throw e;
+        error(e);
+        throw new Exception(e);
       }
     }
-
     return null;
   }
 
@@ -2294,18 +2048,126 @@ public class BeeLine implements Closeable {
     supportedLocalDriver.add(driverClazz);
   }
 
-  Collection<Driver> scanDrivers() throws IOException {
-    final long start = System.nanoTime();
-
-    ServiceLoader<Driver> sqlDrivers = ServiceLoader.load(Driver.class);
-
-    Set<Driver> driverClasses = StreamSupport.stream(sqlDrivers.spliterator(), false).collect(Collectors.toSet());
-
-    final long finish = System.nanoTime();
-
-    info("Driver scan complete in " + TimeUnit.NANOSECONDS.toMillis(finish - start) + "ms");
-    return Collections.unmodifiableSet(driverClasses);
+  Driver[] scanDrivers(String line) throws IOException {
+    return scanDrivers(false);
   }
+
+
+  Driver[] scanDrivers(boolean knownOnly) throws IOException {
+    long start = System.currentTimeMillis();
+
+    Set<String> classNames = new HashSet<String>();
+
+    if (!knownOnly) {
+      classNames.addAll(Arrays.asList(
+          ClassNameCompleter.getClassNames()));
+    }
+
+    classNames.addAll(KNOWN_DRIVERS);
+
+    Set driverClasses = new HashSet();
+
+    for (Iterator<String> i = classNames.iterator(); i.hasNext();) {
+      String className = i.next().toString();
+
+      if (className.toLowerCase().indexOf("driver") == -1) {
+        continue;
+      }
+
+      try {
+        Class c = Class.forName(className, false,
+            Thread.currentThread().getContextClassLoader());
+        if (!Driver.class.isAssignableFrom(c)) {
+          continue;
+        }
+
+        if (Modifier.isAbstract(c.getModifiers())) {
+          continue;
+        }
+
+        // now instantiate and initialize it
+        driverClasses.add(c.newInstance());
+      } catch (Throwable t) {
+      }
+    }
+    info("scan complete in "
+        + (System.currentTimeMillis() - start) + "ms");
+    return (Driver[]) driverClasses.toArray(new Driver[0]);
+  }
+
+
+  private Driver[] scanDriversOLD(String line) {
+    long start = System.currentTimeMillis();
+
+    Set<String> paths = new HashSet<String>();
+    Set driverClasses = new HashSet();
+
+    for (StringTokenizer tok = new StringTokenizer(
+        System.getProperty("java.ext.dirs"),
+        System.getProperty("path.separator")); tok.hasMoreTokens();) {
+      File[] files = new File(tok.nextToken()).listFiles();
+      for (int i = 0; files != null && i < files.length; i++) {
+        paths.add(files[i].getAbsolutePath());
+      }
+    }
+
+    for (StringTokenizer tok = new StringTokenizer(
+        System.getProperty("java.class.path"),
+        System.getProperty("path.separator")); tok.hasMoreTokens();) {
+      paths.add(new File(tok.nextToken()).getAbsolutePath());
+    }
+
+    for (Iterator<String> i = paths.iterator(); i.hasNext();) {
+      File f = new File(i.next());
+      output(getColorBuffer().pad(loc("scanning", f.getAbsolutePath()), 60),
+          false);
+
+      try {
+        ZipFile zf = new ZipFile(f);
+        int total = zf.size();
+        int index = 0;
+
+        for (Enumeration zfEnum = zf.entries(); zfEnum.hasMoreElements();) {
+          ZipEntry entry = (ZipEntry) zfEnum.nextElement();
+          String name = entry.getName();
+          progress(index++, total);
+
+          if (name.endsWith(".class")) {
+            name = name.replace('/', '.');
+            name = name.substring(0, name.length() - 6);
+
+            try {
+              // check for the string "driver" in the class
+              // to see if we should load it. Not perfect, but
+              // it is far too slow otherwise.
+              if (name.toLowerCase().indexOf("driver") != -1) {
+                Class c = Class.forName(name, false,
+                    getClass().getClassLoader());
+                if (Driver.class.isAssignableFrom(c)
+                    && !(Modifier.isAbstract(
+                        c.getModifiers()))) {
+                  try {
+                    // load and initialize
+                    Class.forName(name);
+                  } catch (Exception e) {
+                  }
+                  driverClasses.add(c.newInstance());
+                }
+              }
+            } catch (Throwable t) {
+            }
+          }
+        }
+        progress(total, total);
+      } catch (Exception e) {
+      }
+    }
+
+    info("scan complete in "
+        + (System.currentTimeMillis() - start) + "ms");
+    return (Driver[]) driverClasses.toArray(new Driver[0]);
+  }
+
 
   // /////////////////////////////////////
   // ResultSet output formatting classes
@@ -2346,13 +2208,6 @@ public class BeeLine implements Closeable {
     if (signalHandler != null) {
       signalHandler.setStatement(stmnt);
     }
-
-    // If no fetch size is specified in beeline, let the driver figure it out
-    final int fetchSize = getOpts().getFetchSize();
-    if (fetchSize >= 0) {
-      stmnt.setFetchSize(fetchSize);
-    }
-
     return stmnt;
   }
 
@@ -2492,10 +2347,6 @@ public class BeeLine implements Closeable {
     return errorStream;
   }
 
-  InputStream getInputStream() {
-    return inputStream;
-  }
-
   ConsoleReader getConsoleReader() {
     return consoleReader;
   }
@@ -2533,20 +2384,5 @@ public class BeeLine implements Closeable {
 
   public void setCurrentDatabase(String currentDatabase) {
     this.currentDatabase = currentDatabase;
-  }
-
-  /**
-   * Setting the BeeLine into test mode.
-   * Print only the errors, the operation log and the query results.
-   * Should be used only by tests.
-   *
-   * @param isTestMode
-   */
-  void setIsTestMode(boolean isTestMode) {
-    this.isTestMode = isTestMode;
-  }
-
-  boolean isTestMode() {
-    return isTestMode;
   }
 }
