@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -25,21 +25,18 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Properties;
 
-import org.junit.Assert;
+import junit.framework.Assert;
 import junit.framework.TestCase;
 
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hive.serde.serdeConstants;
+import org.apache.hadoop.hive.serde2.SerDeUtils;
 import org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe;
 import org.apache.hadoop.io.Writable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.junit.Test;
 
-/**
- * TestHCatRecordSerDe.
- */
-public class TestHCatRecordSerDe {
+public class TestHCatRecordSerDe extends TestCase {
 
   private static final Logger LOG = LoggerFactory.getLogger(TestHCatRecordSerDe.class);
 
@@ -47,18 +44,18 @@ public class TestHCatRecordSerDe {
     Map<Properties, HCatRecord> data = new HashMap<Properties, HCatRecord>();
 
     List<Object> rlist = new ArrayList<Object>(11);
-    rlist.add(Byte.valueOf("123"));
-    rlist.add(Short.valueOf("456"));
-    rlist.add(Integer.valueOf(789));
-    rlist.add(Long.valueOf(1000L));
-    rlist.add(Double.valueOf(5.3D));
-    rlist.add(Float.valueOf(2.39F));
-    rlist.add("hcat and hadoop");
+    rlist.add(new Byte("123"));
+    rlist.add(new Short("456"));
+    rlist.add(new Integer(789));
+    rlist.add(new Long(1000L));
+    rlist.add(new Double(5.3D));
+    rlist.add(new Float(2.39F));
+    rlist.add(new String("hcat and hadoop"));
     rlist.add(null);
 
     List<Object> innerStruct = new ArrayList<Object>(2);
-    innerStruct.add("abc");
-    innerStruct.add("def");
+    innerStruct.add(new String("abc"));
+    innerStruct.add(new String("def"));
     rlist.add(innerStruct);
 
     List<Integer> innerList = new ArrayList<Integer>();
@@ -67,24 +64,24 @@ public class TestHCatRecordSerDe {
     rlist.add(innerList);
 
     Map<Short, String> map = new HashMap<Short, String>(3);
-    map.put(Short.valueOf("2"), "hcat is cool");
-    map.put(Short.valueOf("3"), "is it?");
-    map.put(Short.valueOf("4"), "or is it not?");
+    map.put(new Short("2"), "hcat is cool");
+    map.put(new Short("3"), "is it?");
+    map.put(new Short("4"), "or is it not?");
     rlist.add(map);
 
-    rlist.add(Boolean.TRUE);
+    rlist.add(new Boolean(true));
 
     List<Object> c1 = new ArrayList<Object>();
     List<Object> c1_1 = new ArrayList<Object>();
-    c1_1.add(Integer.valueOf(12));
+    c1_1.add(new Integer(12));
     List<Object> i2 = new ArrayList<Object>();
     List<Integer> ii1 = new ArrayList<Integer>();
-    ii1.add(Integer.valueOf(13));
-    ii1.add(Integer.valueOf(14));
+    ii1.add(new Integer(13));
+    ii1.add(new Integer(14));
     i2.add(ii1);
     Map<String, List<?>> ii2 = new HashMap<String, List<?>>();
     List<Integer> iii1 = new ArrayList<Integer>();
-    iii1.add(Integer.valueOf(15));
+    iii1.add(new Integer(15));
     ii2.put("phew", iii1);
     i2.add(ii2);
     c1_1.add(i2);
@@ -118,7 +115,6 @@ public class TestHCatRecordSerDe {
     return data;
   }
 
-  @Test
   public void testRW() throws Exception {
 
     Configuration conf = new Configuration();
@@ -128,7 +124,7 @@ public class TestHCatRecordSerDe {
       HCatRecord r = e.getValue();
 
       HCatRecordSerDe hrsd = new HCatRecordSerDe();
-      hrsd.initialize(conf, tblProps, null);
+      SerDeUtils.initializeSerDe(hrsd, conf, tblProps, null);
 
       LOG.info("ORIG: {}", r);
 
@@ -149,7 +145,7 @@ public class TestHCatRecordSerDe {
 
       // serialize using another serde, and read out that object repr.
       LazySimpleSerDe testSD = new LazySimpleSerDe();
-      testSD.initialize(conf, tblProps, null);
+      SerDeUtils.initializeSerDe(testSD, conf, tblProps, null);
 
       Writable s3 = testSD.serialize(s, hrsd.getObjectInspector());
       LOG.info("THREE: {}", s3);
