@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,8 +18,9 @@
  */
 package org.apache.hive.hcatalog.data;
 
-import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
+import java.sql.Date;
+import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -27,46 +28,40 @@ import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 
+import junit.framework.TestCase;
+
 import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.hive.common.type.Date;
 import org.apache.hadoop.hive.common.type.HiveChar;
 import org.apache.hadoop.hive.common.type.HiveDecimal;
 import org.apache.hadoop.hive.common.type.HiveVarchar;
-import org.apache.hadoop.hive.common.type.Timestamp;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.hive.serde.serdeConstants;
+import org.apache.hadoop.hive.serde2.SerDeUtils;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.io.Writable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-
-import static org.junit.Assert.assertTrue;
-import org.junit.Test;
-
-/**
- * TestJsonSerDe.
- */
-public class TestJsonSerDe {
+public class TestJsonSerDe extends TestCase {
 
   private static final Logger LOG = LoggerFactory.getLogger(TestJsonSerDe.class);
 
-  public List<Pair<Properties, HCatRecord>> getData() throws UnsupportedEncodingException {
+  public List<Pair<Properties, HCatRecord>> getData() {
     List<Pair<Properties, HCatRecord>> data = new ArrayList<Pair<Properties, HCatRecord>>();
 
     List<Object> rlist = new ArrayList<Object>(13);
-    rlist.add(Byte.valueOf("123"));
-    rlist.add(Short.valueOf("456"));
-    rlist.add(Integer.valueOf(789));
-    rlist.add(Long.valueOf(1000L));
-    rlist.add(Double.valueOf(5.3D));
-    rlist.add(Float.valueOf(2.39F));
-    rlist.add("hcat\nand\nhadoop");
+    rlist.add(new Byte("123"));
+    rlist.add(new Short("456"));
+    rlist.add(new Integer(789));
+    rlist.add(new Long(1000L));
+    rlist.add(new Double(5.3D));
+    rlist.add(new Float(2.39F));
+    rlist.add(new String("hcat\nand\nhadoop"));
     rlist.add(null);
 
     List<Object> innerStruct = new ArrayList<Object>(2);
-    innerStruct.add("abc");
-    innerStruct.add("def");
+    innerStruct.add(new String("abc"));
+    innerStruct.add(new String("def"));
     rlist.add(innerStruct);
 
     List<Integer> innerList = new ArrayList<Integer>();
@@ -75,24 +70,24 @@ public class TestJsonSerDe {
     rlist.add(innerList);
 
     Map<Short, String> map = new HashMap<Short, String>(3);
-    map.put(Short.valueOf("2"), "hcat is cool");
-    map.put(Short.valueOf("3"), "is it?");
-    map.put(Short.valueOf("4"), "or is it not?");
+    map.put(new Short("2"), "hcat is cool");
+    map.put(new Short("3"), "is it?");
+    map.put(new Short("4"), "or is it not?");
     rlist.add(map);
 
-    rlist.add(Boolean.TRUE);
+    rlist.add(new Boolean(true));
 
     List<Object> c1 = new ArrayList<Object>();
     List<Object> c1_1 = new ArrayList<Object>();
-    c1_1.add(Integer.valueOf(12));
+    c1_1.add(new Integer(12));
     List<Object> i2 = new ArrayList<Object>();
     List<Integer> ii1 = new ArrayList<Integer>();
-    ii1.add(Integer.valueOf(13));
-    ii1.add(Integer.valueOf(14));
+    ii1.add(new Integer(13));
+    ii1.add(new Integer(14));
     i2.add(ii1);
     Map<String, List<?>> ii2 = new HashMap<String, List<?>>();
     List<Integer> iii1 = new ArrayList<Integer>();
-    iii1.add(Integer.valueOf(15));
+    iii1.add(new Integer(15));
     ii2.put("phew", iii1);
     i2.add(ii2);
     c1_1.add(i2);
@@ -102,8 +97,7 @@ public class TestJsonSerDe {
     rlist.add(new HiveChar("hive\nchar", 10));
     rlist.add(new HiveVarchar("hive\nvarchar", 20));
     rlist.add(Date.valueOf("2014-01-07"));
-    rlist.add(Timestamp.ofEpochMilli(System.currentTimeMillis()));
-    rlist.add("hive\nbinary".getBytes("UTF-8"));
+    rlist.add(new Timestamp(System.currentTimeMillis()));
 
     List<Object> nlist = new ArrayList<Object>(13);
     nlist.add(null); // tinyint
@@ -124,16 +118,15 @@ public class TestJsonSerDe {
     nlist.add(null); //varchar(20)
     nlist.add(null); //date
     nlist.add(null); //timestamp
-    nlist.add(null); //binary
 
     String typeString =
         "tinyint,smallint,int,bigint,double,float,string,string,"
             + "struct<a:string,b:string>,array<int>,map<smallint,string>,boolean,"
             + "array<struct<i1:int,i2:struct<ii1:array<int>,ii2:map<string,struct<iii1:int>>>>>," +
-                "decimal(5,2),char(10),varchar(20),date,timestamp,binary";
+                "decimal(5,2),char(10),varchar(20),date,timestamp";
     Properties props = new Properties();
 
-    props.put(serdeConstants.LIST_COLUMNS, "ti,si,i,bi,d,f,s,n,r,l,m,b,c1,bd,hc,hvc,dt,ts,bin");
+    props.put(serdeConstants.LIST_COLUMNS, "ti,si,i,bi,d,f,s,n,r,l,m,b,c1,bd,hc,hvc,dt,ts");
     props.put(serdeConstants.LIST_COLUMN_TYPES, typeString);
 //    props.put(Constants.SERIALIZATION_NULL_FORMAT, "\\N");
 //    props.put(Constants.SERIALIZATION_FORMAT, "1");
@@ -143,7 +136,6 @@ public class TestJsonSerDe {
     return data;
   }
 
-  @Test
   public void testRW() throws Exception {
 
     Configuration conf = new Configuration();
@@ -153,33 +145,32 @@ public class TestJsonSerDe {
       HCatRecord r = e.second;
 
       HCatRecordSerDe hrsd = new HCatRecordSerDe();
-      hrsd.initialize(conf, tblProps, null);
+      SerDeUtils.initializeSerDe(hrsd, conf, tblProps, null);
 
       JsonSerDe jsde = new JsonSerDe();
-      jsde.initialize(conf, tblProps, null);
+      SerDeUtils.initializeSerDe(jsde, conf, tblProps, null);
 
       LOG.info("ORIG:{}", r);
 
       Writable s = hrsd.serialize(r, hrsd.getObjectInspector());
       LOG.info("ONE:{}", s);
 
-      HCatRecord o1 = (HCatRecord) hrsd.deserialize(s);
+      Object o1 = hrsd.deserialize(s);
       StringBuilder msg = new StringBuilder();
-      boolean isEqual = HCatDataCheckUtil.recordsEqual(r, o1);
+      boolean isEqual = HCatDataCheckUtil.recordsEqual(r, (HCatRecord) o1); 
       assertTrue(msg.toString(), isEqual);
 
       Writable s2 = jsde.serialize(o1, hrsd.getObjectInspector());
       LOG.info("TWO:{}", s2);
-      HCatRecord o2 = (HCatRecord) jsde.deserialize(s2);
+      Object o2 = jsde.deserialize(s2);
       LOG.info("deserialized TWO : {} ", o2);
       msg.setLength(0);
-      isEqual = HCatDataCheckUtil.recordsEqual(r, o2, msg);
+      isEqual = HCatDataCheckUtil.recordsEqual(r, (HCatRecord) o2, msg);
       assertTrue(msg.toString(), isEqual);
     }
 
   }
 
-  @Test
   public void testRobustRead() throws Exception {
     /**
      *  This test has been added to account for HCATALOG-436
@@ -206,10 +197,10 @@ public class TestJsonSerDe {
       LOG.info("modif tbl props:{}", internalTblProps);
 
       JsonSerDe wjsd = new JsonSerDe();
-      wjsd.initialize(conf, internalTblProps, null);
+      SerDeUtils.initializeSerDe(wjsd, conf, internalTblProps, null);
 
       JsonSerDe rjsd = new JsonSerDe();
-      rjsd.initialize(conf, tblProps, null);
+      SerDeUtils.initializeSerDe(rjsd, conf, tblProps, null);
 
       LOG.info("ORIG:{}", r);
 
@@ -270,7 +261,6 @@ public class TestJsonSerDe {
    * Then it should still work, and ignore the "x" and "t" field and "c" subfield of "s", and it
    * should read k as null.
    */
-  @Test
   public void testLooseJsonReadability() throws Exception {
     Configuration conf = new Configuration();
     Properties props = new Properties();
@@ -278,7 +268,7 @@ public class TestJsonSerDe {
     props.put(serdeConstants.LIST_COLUMNS, "s,k");
     props.put(serdeConstants.LIST_COLUMN_TYPES, "struct<a:int,b:string>,int");
     JsonSerDe rjsd = new JsonSerDe();
-    rjsd.initialize(conf, props, null);
+    SerDeUtils.initializeSerDe(rjsd, conf, props, null);
 
     Text jsonText = new Text("{ \"x\" : \"abc\" , "
         + " \"t\" : { \"a\":\"1\", \"b\":\"2\", \"c\":[ { \"x\":2 , \"y\":3 } , { \"x\":3 , \"y\":2 }] } ,"
@@ -298,7 +288,6 @@ public class TestJsonSerDe {
 
   }
 
-  @Test
   public void testUpperCaseKey() throws Exception {
     Configuration conf = new Configuration();
     Properties props = new Properties();
@@ -306,7 +295,7 @@ public class TestJsonSerDe {
     props.put(serdeConstants.LIST_COLUMNS, "empid,name");
     props.put(serdeConstants.LIST_COLUMN_TYPES, "int,string");
     JsonSerDe rjsd = new JsonSerDe();
-    rjsd.initialize(conf, props, null);
+    SerDeUtils.initializeSerDe(rjsd, conf, props, null);
 
     Text text1 = new Text("{ \"empId\" : 123, \"name\" : \"John\" } ");
     Text text2 = new Text("{ \"empId\" : 456, \"name\" : \"Jane\" } ");
@@ -328,7 +317,6 @@ public class TestJsonSerDe {
     return retval;
   }
 
-  @Test
   public void testMapValues() throws Exception {
     Configuration conf = new Configuration();
     Properties props = new Properties();
@@ -336,7 +324,7 @@ public class TestJsonSerDe {
     props.put(serdeConstants.LIST_COLUMNS, "a,b");
     props.put(serdeConstants.LIST_COLUMN_TYPES, "array<string>,map<string,int>");
     JsonSerDe rjsd = new JsonSerDe();
-    rjsd.initialize(conf, props, null);
+    SerDeUtils.initializeSerDe(rjsd, conf, props, null);
 
     Text text1 = new Text("{ \"a\":[\"aaa\"],\"b\":{\"bbb\":1}} ");
     Text text2 = new Text("{\"a\":[\"yyy\"],\"b\":{\"zzz\":123}}");
