@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -19,22 +19,22 @@
 package org.apache.hive.hplsql;
 
 import java.math.BigDecimal;
-import java.util.List;
+import java.sql.Connection;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
+import java.sql.ResultSetMetaData;
+import java.util.ArrayList;
 
 import org.antlr.v4.runtime.ParserRuleContext;
-import org.apache.hive.hplsql.executor.Metadata;
-import org.apache.hive.hplsql.executor.QueryExecutor;
-import org.apache.hive.hplsql.executor.QueryResult;
 
 public class Cmp implements Runnable {
   
   Exec exec;
-  private QueryExecutor queryExecutor;
   Timer timer = new Timer();  
   boolean trace = false;
   boolean info = false;
   
-  String query;
+  Query query;
   String conn;
   HplsqlParser.Cmp_stmtContext ctx;
   
@@ -42,23 +42,20 @@ public class Cmp implements Runnable {
   int failedTests = 0;
   int failedTestsHighDiff = 0;
   int failedTestsHighDiff10 = 0;
-  private QueryResult result;
-
-  Cmp(Exec e, QueryExecutor queryExecutor) {
-    exec = e;
+  
+  Cmp(Exec e) {
+    exec = e;  
     trace = exec.getTrace();
     info = exec.getInfo();
-    this.queryExecutor = queryExecutor;
   }
   
-  Cmp(Exec e, HplsqlParser.Cmp_stmtContext c, String q, String cn, QueryExecutor queryExecutor) {
-    exec = e;
+  Cmp(Exec e, HplsqlParser.Cmp_stmtContext c, Query q, String cn) {
+    exec = e;  
     trace = exec.getTrace();
     info = exec.getInfo();
     ctx = c;
     query = q;
     conn = cn;
-    this.queryExecutor = queryExecutor;
   }
   
   /**
@@ -70,9 +67,9 @@ public class Cmp implements Runnable {
     timer.start();
     StringBuilder conn1 = new StringBuilder();
     StringBuilder conn2 = new StringBuilder();
+    Query query1 = new Query();
+    Query query2 = new Query();
     Boolean equal = null;
-    Cmp cmp1 = null;
-    Cmp cmp2 = null;
     try {
       String sql1 = getSql(ctx, conn1, 0);
       String sql2 = getSql(ctx, conn2, 1);
@@ -80,11 +77,17 @@ public class Cmp implements Runnable {
         trace(ctx, "Query 1: " + sql1);
         trace(ctx, "Query 2: " + sql2);
       }
-      cmp1 = new Cmp(exec, ctx, sql1, conn1.toString(), queryExecutor);
-      cmp2 = new Cmp(exec, ctx, sql2, conn2.toString(), queryExecutor);
-      cmp1.run();
-      cmp2.run();
-      equal = compare(cmp1.result, cmp2.result);
+      query1.setSql(sql1);
+      query2.setSql(sql2);
+      Cmp cmp1 = new Cmp(exec, ctx, query1, conn1.toString());
+      Cmp cmp2 = new Cmp(exec, ctx, query2, conn2.toString());
+      Thread t1 = new Thread(cmp1);
+      Thread t2 = new Thread(cmp2);
+      t1.start();
+      t2.start();
+      t1.join();
+      t2.join();
+      equal = compare(query1, query2);      
     }
     catch(Exception e) {
       exec.signal(e);
@@ -109,30 +112,23 @@ public class Cmp implements Runnable {
         }
         info(ctx, message + ", " + timer.format());
       }
-      cmp1.closeQuery();
-      cmp2.closeQuery();
+      exec.closeQuery(query1, conn1.toString());
+      exec.closeQuery(query2, conn2.toString());
     }
     return 0;
   }
-
-  private void closeQuery() {
-    if (result != null) {
-      result.close();
-    }
-  }
-
+  
   /**
    * Get data for comparison from the source
    */
-  @Override
   public void run() {
-    result = queryExecutor.executeQuery(query, ctx);
+    exec.executeQuery(ctx, query, conn);
   }
   
   /**
    * Compare the results
    */
-  Boolean compare(QueryResult query1, QueryResult query2) {
+  Boolean compare(Query query1, Query query2) {
     if (query1.error()) { 
       exec.signal(query1);
       return null;
@@ -141,26 +137,28 @@ public class Cmp implements Runnable {
       exec.signal(query2);
       return null;
     }
-    if (query1 == null || query2 == null) {
-      exec.setSqlCode(SqlCodes.ERROR);
+    ResultSet rs1 = query1.getResultSet();
+    ResultSet rs2 = query2.getResultSet();
+    if (rs1 == null || rs2 == null) {
+      exec.setSqlCode(-1);
       return null;
     }
     boolean equal = true;
     tests = 0;
     failedTests = 0;
     try {
-      Metadata rm1 = query1.metadata();
-      Metadata rm2 = query2.metadata();
-      int cnt1 = rm1.columnCount();
-      int cnt2 = rm2.columnCount();
+      ResultSetMetaData rm1 = rs1.getMetaData();
+      ResultSetMetaData rm2 = rs2.getMetaData();
+      int cnt1 = rm1.getColumnCount();
+      int cnt2 = rm2.getColumnCount();
       tests = cnt1;
-      while (query1.next() && query2.next()) {
-        for (int i = 0; i < tests; i++) {
+      while (rs1.next() && rs2.next()) {
+        for (int i = 1; i <= tests; i++) {
           Var v1 = new Var(Var.Type.DERIVED_TYPE);
           Var v2 = new Var(Var.Type.DERIVED_TYPE);
-          v1.setValue(query1, i);
-          if (i < cnt2) {
-            v2.setValue(query2, i);
+          v1.setValue(rs1, rm1, i);
+          if (i <= cnt2) {
+            v2.setValue(rs2, rm2, i);
           }
           boolean e = true;
           if (!(v1.isNull() && v2.isNull()) && !v1.equals(v2)) {
@@ -169,7 +167,7 @@ public class Cmp implements Runnable {
             failedTests++;
           }
           if (trace || info) {
-            String m = rm1.columnName(i) + "\t" + v1.toString() + "\t" + v2.toString();
+            String m = rm1.getColumnName(i) + "\t" + v1.toString() + "\t" + v2.toString();
             if (!e) {
               m += "\tNot equal";
               BigDecimal diff = v1.percentDiff(v2);
@@ -210,13 +208,13 @@ public class Cmp implements Runnable {
       exec.signal(e);
       return null;
     }
-    return Boolean.valueOf(equal);
+    return new Boolean(equal);
   }
   
   /**
    * Define the SQL query to access data
    */
-  private String getSql(HplsqlParser.Cmp_stmtContext ctx, StringBuilder conn, int idx) throws Exception {
+  String getSql(HplsqlParser.Cmp_stmtContext ctx, StringBuilder conn, int idx) throws Exception {
     StringBuilder sql = new StringBuilder();
     String table = null;
     String query = null;
@@ -227,7 +225,7 @@ public class Cmp implements Runnable {
       query = evalPop(ctx.cmp_source(idx).select_stmt()).toString();
     }
     if (ctx.cmp_source(idx).T_AT() != null) {
-      conn.append(ctx.cmp_source(idx).qident().getText());
+      conn.append(ctx.cmp_source(idx).ident().getText());
     }
     else if (table != null) {
       conn.append(exec.getObjectConnection(ctx.cmp_source(idx).table_name().getText()));
@@ -255,13 +253,13 @@ public class Cmp implements Runnable {
   /**
    * Define SELECT listto access data
    */
-  private String getSelectList(HplsqlParser.Cmp_stmtContext ctx, String conn, String table, String query) throws Exception {
+  String getSelectList(HplsqlParser.Cmp_stmtContext ctx, String conn, String table, String query) throws Exception {
     StringBuilder sql = new StringBuilder();
     sql.append("COUNT(1) AS row_count");
     if (ctx.T_SUM() != null && table != null) {
       Row row = exec.meta.getRowDataType(ctx, conn, table);
       if (row != null) {
-        List<Column> cols = row.getColumns();
+        ArrayList<Column> cols = row.getColumns();
         int cnt = row.size();
         sql.append(",\n");
         for (int i = 0; i < cnt; i++) {
@@ -301,7 +299,7 @@ public class Cmp implements Runnable {
   /**
    * Evaluate the expression and pop value from the stack
    */
-  private Var evalPop(ParserRuleContext ctx) {
+  Var evalPop(ParserRuleContext ctx) {
     exec.visit(ctx);
     if (!exec.stack.isEmpty()) { 
       return exec.stackPop();
@@ -312,11 +310,11 @@ public class Cmp implements Runnable {
   /**
    * Trace and information
    */
-  private void trace(ParserRuleContext ctx, String message) {
+  public void trace(ParserRuleContext ctx, String message) {
     exec.trace(ctx, message);
   }
   
-  private void info(ParserRuleContext ctx, String message) {
+  public void info(ParserRuleContext ctx, String message) {
     exec.info(ctx, message);
   }
 }
