@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,23 +18,15 @@
 
 package org.apache.hive.hplsql;
 
-import static java.util.stream.IntStream.range;
-
+import java.sql.ResultSet;
+import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.List;
 import java.util.Stack;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.Token;
 import org.apache.hive.hplsql.Var.Type;
-import org.apache.hive.hplsql.executor.Metadata;
-import org.apache.hive.hplsql.executor.QueryException;
-import org.apache.hive.hplsql.executor.QueryExecutor;
-import org.apache.hive.hplsql.executor.QueryResult;
-import org.apache.hive.hplsql.objects.Table;
 
 /**
  * HPL/SQL statements execution
@@ -45,19 +37,15 @@ public class Stmt {
   Stack<Var> stack = null;
   Conf conf;
   Meta meta;
-  Console console;
   
-  boolean trace = false;
-  private QueryExecutor queryExecutor;
-
-  Stmt(Exec e, QueryExecutor queryExecutor) {
+  boolean trace = false; 
+  
+  Stmt(Exec e) {
     exec = e;  
     stack = exec.getStack();
     conf = exec.getConf();
     meta = exec.getMeta();
     trace = exec.getTrace();
-    console = exec.console;
-    this.queryExecutor = queryExecutor;;
   }
   
   /**
@@ -69,7 +57,8 @@ public class Stmt {
     Var cur = null;
     if (ctx.T_PROCEDURE() != null) {
       cur = exec.consumeReturnCursor(ctx.ident(1).getText());
-    } else if (ctx.T_RESULT() != null) {
+    }
+    else if (ctx.T_RESULT() != null) {
       cur = exec.findVariable(ctx.ident(1).getText());
       if (cur != null && cur.type != Type.RS_LOCATOR) {
         cur = null;
@@ -97,7 +86,7 @@ public class Stmt {
     for (int i = 0; i < cnt - 1; i++) {
       Var cur = exec.consumeReturnCursor(procedure);
       if (cur != null) {
-        String name = ctx.ident(i).getText();
+        String name = ctx.ident(i).getText(); 
         Var loc = exec.findVariable(name);
         if (loc == null) {
           loc = new Var(name, Type.RS_LOCATOR, cur.value);
@@ -119,17 +108,17 @@ public class Stmt {
     if (trace) {
       trace(ctx, "DECLARE CURSOR " + name);
     }
-    Cursor cursor = new Cursor(null);
+    Query query = new Query();
     if (ctx.expr() != null) {
-      cursor.setExprCtx(ctx.expr());
+      query.setExprCtx(ctx.expr());
     }
     else if (ctx.select_stmt() != null) {
-      cursor.setSelectCtx(ctx.select_stmt());
+      query.setSelectCtx(ctx.select_stmt());
     }
     if (ctx.cursor_with_return() != null) {
-      cursor.setWithReturn(true);
+      query.setWithReturn(true);
     }
-    Var var = new Var(name, Type.CURSOR, cursor);
+    Var var = new Var(name, Type.CURSOR, query);
     exec.addVariable(var);
     return 0; 
   }
@@ -152,13 +141,13 @@ public class Stmt {
     }
     sql.append(createTableDefinition(ctx.create_table_definition(), last));
     trace(ctx, sql.toString());
-    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
+    Query query = exec.executeSql(ctx, sql.toString(), exec.conf.defaultConnection);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0; 
   }  
 
@@ -181,9 +170,6 @@ public class Stmt {
         last = col.getStop();
       }
       exec.append(sql, ctx.T_CLOSE_P().getText(), last, ctx.T_CLOSE_P().getSymbol());
-    }
-    else if (ctx.T_LIKE() != null) {
-      sql.append(" ").append(ctx.T_LIKE().getText()).append(" ").append(evalPop(ctx.table_name()));
     }
     // CREATE TABLE AS SELECT statement
     else {
@@ -247,7 +233,7 @@ public class Stmt {
    */
   public Integer declareTemporaryTable(HplsqlParser.Declare_temporary_table_itemContext ctx) { 
     trace(ctx, "DECLARE TEMPORARY TABLE");
-    return createTemporaryTable(ctx.qident(), ctx.create_table_definition(), ctx.create_table_preoptions());
+    return createTemporaryTable(ctx.ident(), ctx.create_table_definition(), ctx.create_table_preoptions());
   }
   
   /**
@@ -265,11 +251,8 @@ public class Stmt {
     }
     if (ctx.T_IF() != null) {
       sql.append(exec.getText(ctx, ctx.T_IF().getSymbol(), ctx.T_EXISTS().getSymbol()) + " "); 
-    }
-    boolean oldBuildSql = exec.buildSql;
-    exec.buildSql = true;
+    }    
     sql.append(evalPop(ctx.expr()).toString());
-    exec.buildSql = oldBuildSql;
     int cnt = ctx.create_database_option().size();
     for (int i = 0; i < cnt; i++) {
       HplsqlParser.Create_database_optionContext option = ctx.create_database_option(i);
@@ -281,13 +264,13 @@ public class Stmt {
       }
     }
     trace(ctx, sql.toString());
-    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
+    Query query = exec.executeSql(ctx, sql.toString(), exec.conf.defaultConnection);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0;
   }
   
@@ -296,13 +279,13 @@ public class Stmt {
    */
   public Integer createLocalTemporaryTable(HplsqlParser.Create_local_temp_table_stmtContext ctx) { 
     trace(ctx, "CREATE LOCAL TEMPORARY TABLE");
-    return createTemporaryTable(ctx.qident(), ctx.create_table_definition(), ctx.create_table_preoptions());
+    return createTemporaryTable(ctx.ident(), ctx.create_table_definition(), ctx.create_table_preoptions());
    }
   
   /**
    * Create a temporary table statement 
    */
-  public Integer createTemporaryTable(HplsqlParser.QidentContext identCtx, HplsqlParser.Create_table_definitionContext defCtx,
+  public Integer createTemporaryTable(HplsqlParser.IdentContext identCtx, HplsqlParser.Create_table_definitionContext defCtx,
                                       HplsqlParser.Create_table_preoptionsContext optCtx) { 
     StringBuilder sql = new StringBuilder();
     String name = identCtx.getText();
@@ -333,7 +316,7 @@ public class Stmt {
       trace(null, sql.toString()); 
     }
     if (sql != null) {
-      QueryResult query = queryExecutor.executeQuery(sql.toString(), null);
+      Query query = exec.executeSql(null, sql.toString(), exec.conf.defaultConnection);
       if (query.error()) {
         exec.signal(query);
         return 1;
@@ -342,7 +325,7 @@ public class Stmt {
         exec.addManagedTable(name, managedName);
       }
       exec.setSqlSuccess();
-      query.close();
+      exec.closeQuery(query, exec.conf.defaultConnection);
     }    
     return 0; 
   }
@@ -354,28 +337,35 @@ public class Stmt {
     trace(ctx, "DESCRIBE");
     String sql = "DESCRIBE " + evalPop(ctx.table_name()).toString();   
     trace(ctx, sql);
-    QueryResult query = queryExecutor.executeQuery(sql, ctx);
+    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     try {
-      while (query.next()) {
-        for (int i = 0; i < query.columnCount(); i++) {
-          if (i > 0) {
-            console.print("\t");
+      ResultSet rs = query.getResultSet();
+      ResultSetMetaData rm = null;
+      if (rs != null) {
+        rm = rs.getMetaData();
+        int cols = rm.getColumnCount();
+        while (rs.next()) {
+          for (int i = 1; i <= cols; i++) {
+            if (i > 1) {
+              System.out.print("\t");
+            }
+            System.out.print(rs.getString(i));
           }
-          console.print(query.column(i, String.class));
+          System.out.println("");
         }
-        console.printLine("");
       }
-    } catch (QueryException e) {
+    }    
+    catch (SQLException e) {
       exec.signal(query);
-      query.close();
+      exec.closeQuery(query, exec.conf.defaultConnection);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0;
   }
   
@@ -391,11 +381,8 @@ public class Stmt {
         sql += "IF EXISTS ";
       }
       sql += evalPop(ctx.table_name()).toString();
-    } else if (ctx.T_PACKAGE() != null) {
-      exec.dropPackage(ctx, ctx.ident().getText().toUpperCase(), ctx.T_EXISTS() != null);
-    } else if (ctx.T_PROCEDURE() != null || ctx.T_FUNCTION() != null) {
-      exec.dropProcedure(ctx, ctx.ident().getText().toUpperCase(), ctx.T_EXISTS() != null);
-    } else if (ctx.T_DATABASE() != null || ctx.T_SCHEMA() != null) {
+    }
+    else if (ctx.T_DATABASE() != null || ctx.T_SCHEMA() != null) {
       sql = "DROP DATABASE ";
       if (ctx.T_EXISTS() != null) {
         sql += "IF EXISTS ";
@@ -404,13 +391,13 @@ public class Stmt {
     }
     if (sql != null) {
       trace(ctx, sql);
-      QueryResult query = queryExecutor.executeQuery(sql, ctx);
+      Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
       if (query.error()) {
         exec.signal(query);
         return 1;
       }
       exec.setSqlSuccess();
-      query.close();
+      exec.closeQuery(query, exec.conf.defaultConnection);
     }
     return 0; 
   }
@@ -422,13 +409,13 @@ public class Stmt {
     trace(ctx, "TRUNCATE");
     String sql = "TRUNCATE TABLE " + evalPop(ctx.table_name()).toString();    
     trace(ctx, sql);
-    QueryResult query = queryExecutor.executeQuery(sql, ctx);
+    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0; 
   }
   
@@ -437,51 +424,60 @@ public class Stmt {
    */
   public Integer open(HplsqlParser.Open_stmtContext ctx) { 
     trace(ctx, "OPEN");
-    Cursor cursor = null;
+    Query query = null;
     Var var = null;
-    String cursorName = ctx.ident().getText();
+    String cursor = ctx.L_ID().toString();   
     String sql = null;
     if (ctx.T_FOR() != null) {                             // SELECT statement or dynamic SQL
-      sql = ctx.expr() != null ? evalPop(ctx.expr()).toString() : evalPop(ctx.select_stmt()).toString();
-      cursor = new Cursor(sql);
-      var = exec.findCursor(cursorName);                      // Can be a ref cursor variable
-      if (var == null) {
-        var = new Var(cursorName, Type.CURSOR, cursor);
-        exec.addVariable(var);
-      } else {
-        var.setValue(cursor);
+      if (ctx.expr() != null) {
+        sql = evalPop(ctx.expr()).toString();
       }
-    } else {                                                 // Declared cursor
-      var = exec.findVariable(cursorName);
+      else {
+        sql = evalPop(ctx.select_stmt()).toString();
+      }
+      query = new Query(sql);
+      var = exec.findCursor(cursor);                      // Can be a ref cursor variable
+      if (var == null) {
+        var = new Var(cursor, Type.CURSOR, query);
+        exec.addVariable(var);
+      }
+      else {
+        var.setValue(query);
+      }
+    }
+    else {                                                 // Declared cursor
+      var = exec.findVariable(cursor);      
       if (var != null && var.type == Type.CURSOR) {
-        cursor = (Cursor) var.value;
-        if (cursor.getSqlExpr() != null) {
-          sql = evalPop(cursor.getSqlExpr()).toString();
-          cursor.setSql(sql);
-        } else if (cursor.getSqlSelect() != null) {
-          sql = evalPop(cursor.getSqlSelect()).toString();
-          cursor.setSql(sql);
+        query = (Query)var.value;
+        if (query.sqlExpr != null) {
+          sql = evalPop(query.sqlExpr).toString();
+          query.setSql(sql);
+        }
+        else if (query.sqlSelect != null) {
+          sql = evalPop(query.sqlSelect).toString();
+          query.setSql(sql);
         }
       }
     }
-    if (cursor != null) {
+    if (query != null) {
       if (trace) {
-        trace(ctx, cursorName + ": " + sql);
+        trace(ctx, cursor + ": " + sql);
       } 
-      cursor.open(queryExecutor, ctx);
-      QueryResult queryResult = cursor.getQueryResult();
-      if (queryResult.error()) {
-        exec.signal(queryResult);
+      exec.executeQuery(ctx, query, exec.conf.defaultConnection);
+      if (query.error()) {
+        exec.signal(query);
         return 1;
-      } else if (!exec.getOffline()) {
-        exec.setSqlCode(SqlCodes.SUCCESS);
       }
-      if (cursor.isWithReturn()) {
+      else if (!exec.getOffline()) {
+        exec.setSqlCode(0);
+      }
+      if (query.getWithReturn()) {
         exec.addReturnCursor(var);
       }
-    } else {
-      trace(ctx, "Cursor not found: " + cursorName);
-      exec.setSqlCode(SqlCodes.ERROR);
+    }
+    else {
+      trace(ctx, "Cursor not found: " + cursor);
+      exec.setSqlCode(-1);
       exec.signal(Signal.Type.SQLEXCEPTION);
       return 1;
     }
@@ -493,84 +489,73 @@ public class Stmt {
    */
   public Integer fetch(HplsqlParser.Fetch_stmtContext ctx) { 
     trace(ctx, "FETCH");
-    String name = ctx.ident(0).getText();
-    Var varCursor = exec.findCursor(name);
-    if (varCursor == null) {
+    String name = ctx.L_ID(0).toString();
+    Var cursor = exec.findCursor(name);
+    if (cursor == null) {
       trace(ctx, "Cursor not found: " + name);
-      exec.setSqlCode(SqlCodes.ERROR);
+      exec.setSqlCode(-1);
       exec.signal(Signal.Type.SQLEXCEPTION);
       return 1;
-    } else if (varCursor.value == null) {
+    }  
+    else if (cursor.value == null) {
       trace(ctx, "Cursor not open: " + name);
-      exec.setSqlCode(SqlCodes.ERROR);
+      exec.setSqlCode(-1);
       exec.signal(Signal.Type.SQLEXCEPTION);
       return 1;
-    } else if (exec.getOffline()) {
-      exec.setSqlCode(SqlCodes.NO_DATA_FOUND);
+    }  
+    else if (exec.getOffline()) {
+      exec.setSqlCode(100);
       exec.signal(Signal.Type.NOTFOUND);
       return 0;
     }
     // Assign values from the row to local variables
     try {
-      Cursor cursor = (Cursor) varCursor.value;
-      int cols = ctx.ident().size() - 1;
-      QueryResult queryResult = cursor.getQueryResult();
-
-      if (ctx.bulk_collect_clause() != null) {
-        long limit = ctx.fetch_limit() != null ? evalPop(ctx.fetch_limit().expr()).longValue() : -1;
-        long rowIndex = 1;
-        List<Table> tables = exec.intoTables(ctx, intoVariableNames(ctx, cols));
-        tables.forEach(Table::removeAll);
-        while (queryResult.next()) {
-          cursor.setFetch(true);
-          for (int i = 0; i < cols; i++) {
-            Table table = tables.get(i);
-            table.populate(queryResult, rowIndex, i);
-          }
-          rowIndex++;
-          if (limit != -1 && rowIndex -1 >= limit) {
-            break;
-          }
-        }
-      } else {
-        if(queryResult.next()) {
-          cursor.setFetch(true);
-          for(int i=0; i < cols; i++) {
-            Var var = exec.findVariable(ctx.ident(i + 1).getText());
+      Query query = (Query)cursor.value;
+      ResultSet rs = query.getResultSet();
+      ResultSetMetaData rsm = null;
+      if(rs != null) {
+        rsm = rs.getMetaData();
+      }
+      if(rs != null && rsm != null) {
+        int cols = ctx.L_ID().size() - 1;
+        if(rs.next()) {
+          query.setFetch(true);
+          for(int i=1; i <= cols; i++) {
+            Var var = exec.findVariable(ctx.L_ID(i).getText());
             if(var != null) {
               if (var.type != Var.Type.ROW) {
-                var.setValue(queryResult, i);
-              } else {
-                var.setRowValues(queryResult);
+                var.setValue(rs, rsm, i);
+              }
+              else {
+                var.setValues(rs, rsm);
               }
               if (trace) {
-                trace(ctx, var, queryResult.metadata(), i);
+                trace(ctx, var, rs, rsm, i);
               }
-            } else if(trace) {
-              trace(ctx, "Variable not found: " + ctx.ident(i + 1).getText());
+            } 
+            else if(trace) {
+              trace(ctx, "Variable not found: " + ctx.L_ID(i).getText());
             }
           }
           exec.incRowCount();
           exec.setSqlSuccess();
-        } else {
-          cursor.setFetch(false);
-          exec.setSqlCode(SqlCodes.NO_DATA_FOUND);
+        }
+        else {
+          query.setFetch(false);
+          exec.setSqlCode(100);
         }
       }
-    } catch (QueryException e) {
+      else {
+        exec.setSqlCode(-1);
+      }
+    } 
+    catch (SQLException e) {
       exec.setSqlCode(e);
       exec.signal(Signal.Type.SQLEXCEPTION, e.getMessage(), e);
     } 
     return 0; 
-  }
-
-  private List<String> intoVariableNames(HplsqlParser.Fetch_stmtContext ctx, int count) {
-    return range(0, count)
-            .mapToObj(i -> ctx.ident(i + 1).getText())
-            .collect(Collectors.toList());
-  }
-
-
+  }  
+  
   /**
    * CLOSE cursor statement
    */
@@ -579,9 +564,10 @@ public class Stmt {
     String name = ctx.L_ID().toString();
     Var var = exec.findVariable(name);
     if(var != null && var.type == Type.CURSOR) {
-      ((Cursor)var.value).close();
-      exec.setSqlCode(SqlCodes.SUCCESS);
-    } else if(trace) {
+      exec.closeQuery((Query)var.value, exec.conf.defaultConnection);
+      exec.setSqlCode(0);
+    }
+    else if(trace) {
       trace(ctx, "Cursor not found: " + name);
     }
     return 0; 
@@ -668,41 +654,50 @@ public class Stmt {
   public Integer assignFromSelect(HplsqlParser.Assignment_stmt_select_itemContext ctx) { 
     String sql = evalPop(ctx.select_stmt()).toString();
     if (trace) {
-      trace(ctx, sql);
+      trace(ctx, sql.toString());
     }
-    QueryResult query = queryExecutor.executeQuery(sql, ctx);
+    String conn = exec.getStatementConnection();
+    Query query = exec.executeQuery(ctx, sql.toString(), conn);
     if (query.error()) { 
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
     try {
-      int cnt = ctx.ident().size();
-      if (query.next()) {
-        for (int i = 0; i < cnt; i++) {
-          Var var = exec.findVariable(ctx.ident(i).getText());
-          if (var != null) {
-            var.setValue(query, i);
-            if (trace) {
-              trace(ctx, "COLUMN: " + query.metadata().columnName(i) + ", " + query.metadata().columnTypeName(i));
-              trace(ctx, "SET " + var.getName() + " = " + var.toString());
+      ResultSet rs = query.getResultSet();
+      ResultSetMetaData rm = null;
+      if (rs != null) {
+        rm = rs.getMetaData();
+        int cnt = ctx.ident().size();
+        if (rs.next()) {
+          for (int i = 1; i <= cnt; i++) {
+            Var var = exec.findVariable(ctx.ident(i-1).getText());
+            if (var != null) {
+              var.setValue(rs, rm, i);
+              if (trace) {
+                trace(ctx, "COLUMN: " + rm.getColumnName(i) + ", " + rm.getColumnTypeName(i));
+                trace(ctx, "SET " + var.getName() + " = " + var.toString());
+              }             
+            } 
+            else if(trace) {
+              trace(ctx, "Variable not found: " + ctx.ident(i-1).getText());
             }
           }
-          else if(trace) {
-            trace(ctx, "Variable not found: " + ctx.ident(i).getText());
-          }
+          exec.incRowCount();
+          exec.setSqlSuccess();
         }
-        exec.incRowCount();
-        exec.setSqlSuccess();
-      } else {
-        exec.setSqlCode(SqlCodes.NO_DATA_FOUND);
-        exec.signal(Signal.Type.NOTFOUND);
+        else {
+          exec.setSqlCode(100);
+          exec.signal(Signal.Type.NOTFOUND);
+        }
       }
-    } catch (QueryException e) {
+    }
+    catch (SQLException e) {
       exec.signal(query);
       return 1;
-    } finally {
-      query.close();
+    }
+    finally {
+      exec.closeQuery(query, conn);
     }
     return 0; 
   }
@@ -737,13 +732,13 @@ public class Stmt {
     sql.append(evalPop(ctx.table_name()).toString() + " ");
     sql.append(evalPop(ctx.select_stmt()).toString());
     trace(ctx, sql.toString());
-    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
+    Query query = exec.executeSql(ctx, sql.toString(), exec.conf.defaultConnection);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0; 
   }
   
@@ -802,14 +797,13 @@ public class Stmt {
     if (trace) {
       trace(ctx, sql.toString());
     }
-
-    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
+    Query query = exec.executeSql(ctx, sql.toString(), conn);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, conn);
     return 0; 
   }
   
@@ -825,14 +819,15 @@ public class Stmt {
     }
     sql.append(ctx.T_DIRECTORY().getText() + " " + evalPop(ctx.expr_file()).toSqlString() + " ");
     sql.append(evalPop(ctx.expr_select()).toString());
+    String conn = exec.getStatementConnection();
     trace(ctx, sql.toString());
-    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
+    Query query = exec.executeSql(ctx, sql.toString(), conn);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, conn);
     return 0; 
   }
   
@@ -846,7 +841,7 @@ public class Stmt {
       signal = exec.currentSignal;
     }
     if (signal != null) {
-      exec.setVariable(ctx.qident().getText(), signal.getValue());
+      exec.setVariable(ctx.ident().getText(), signal.getValue());
     }
     return 0; 
   }
@@ -856,7 +851,7 @@ public class Stmt {
    */
   public Integer getDiagnosticsRowCount(HplsqlParser.Get_diag_stmt_rowcount_itemContext ctx) {
     trace(ctx, "GET DIAGNOSTICS ROW_COUNT");
-    exec.setVariable(ctx.qident().getText(), exec.getRowCount());
+    exec.setVariable(ctx.ident().getText(), exec.getRowCount());
     return 0;  
   }
   
@@ -865,20 +860,20 @@ public class Stmt {
    */
   public Integer use(HplsqlParser.Use_stmtContext ctx) {
     trace(ctx, "USE");
-    return use(ctx, ctx.T_USE().toString() + " " + meta.normalizeIdentifierPart(ctx.expr().getText()));
+    return use(ctx, ctx.T_USE().toString() + " " + meta.normalizeIdentifierPart(evalPop(ctx.expr()).toString()));
   }
   
   public Integer use(ParserRuleContext ctx, String sql) {
     if(trace) {
       trace(ctx, "SQL statement: " + sql);
     }    
-    QueryResult query = queryExecutor.executeQuery(sql, ctx);
+    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
     if(query.error()) {
       exec.signal(query);
       return 1;
     }
-    exec.setSqlCode(SqlCodes.SUCCESS);
-    query.close();
+    exec.setSqlCode(0);
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0; 
   }
   
@@ -888,9 +883,9 @@ public class Stmt {
   public Integer values(HplsqlParser.Values_into_stmtContext ctx) { 
     trace(ctx, "VALUES statement");    
     int cnt = ctx.ident().size();        // Number of variables and assignment expressions
-    int ecnt = ctx.expr().size();
+    int ecnt = ctx.expr().size();    
     for (int i = 0; i < cnt; i++) {
-      String name = ctx.ident(i).getText();
+      String name = ctx.ident(i).getText();      
       if (i < ecnt) {
         visit(ctx.expr(i));
         Var var = exec.setVariable(name);        
@@ -932,7 +927,7 @@ public class Stmt {
     String cursor = ctx.L_ID().getText();
     String sql = evalPop(ctx.select_stmt()).toString();   
     trace(ctx, sql);
-    QueryResult query = exec.queryExecutor.executeQuery(sql, ctx);
+    Query query = exec.executeQuery(ctx, sql, exec.conf.defaultConnection);
     if (query.error()) { 
       exec.signal(query);
       return 1;
@@ -940,28 +935,33 @@ public class Stmt {
     trace(ctx, "SELECT completed successfully");
     exec.setSqlSuccess();
     try {
-      int cols = query.columnCount();
-      Row row = new Row();
-      for (int i = 0; i < cols; i++) {
-        row.addColumnDefinition(query.metadata().columnName(i), query.metadata().columnTypeName(i));
-      }
-      Var var = new Var(cursor, row);
-      exec.addVariable(var);
-      while (query.next()) {
-        var.setRowValues(query);
-        if (trace) {
-          trace(ctx, var, query.metadata(), 0);
+      ResultSet rs = query.getResultSet();
+      if (rs != null) {
+        ResultSetMetaData rm = rs.getMetaData();
+        int cols = rm.getColumnCount();
+        Row row = new Row();
+        for (int i = 1; i <= cols; i++) {
+          row.addColumn(rm.getColumnName(i), rm.getColumnTypeName(i));
         }
-        visit(ctx.block());
-        exec.incRowCount();
+        Var var = new Var(cursor, row);
+        exec.addVariable(var);
+        while (rs.next()) {
+          var.setValues(rs, rm);
+          if (trace) {
+            trace(ctx, var, rs, rm, 0);
+          }
+          visit(ctx.block());
+          exec.incRowCount();
+        }
       }
-    } catch (QueryException e) {
+    }
+    catch (SQLException e) {
       exec.signal(e);
-      query.close();
+      exec.closeQuery(query, exec.conf.defaultConnection);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, exec.conf.defaultConnection);
     exec.leaveScope();
     trace(ctx, "FOR CURSOR - LEFT");
     return 0; 
@@ -987,30 +987,15 @@ public class Stmt {
     return 0; 
   }
 
-  public Integer unconditionalLoop(HplsqlParser.Unconditional_loop_stmtContext ctx) {
-    trace(ctx, "UNCONDITIONAL LOOP - ENTERED");
-    String label = exec.labelPop();
-    while (true) {
-      exec.enterScope(Scope.Type.LOOP);
-      visit(ctx.block());
-      exec.leaveScope();
-      if (!canContinue(label)) {
-        break;
-      }
-    }
-    trace(ctx, "UNCONDITIONAL LOOP - LEFT");
-    return 0;
-  }
-
   /**
    * To set the Value index for FOR Statement
    */
   private Var setIndex(int start, int end, HplsqlParser.For_range_stmtContext ctx) {
 
     if (ctx.T_REVERSE() == null)
-      return new Var(ctx.L_ID().getText(), Long.valueOf(start));
+      return new Var(ctx.L_ID().getText(), new Long(start));
     else
-      return new Var(ctx.L_ID().getText(), Long.valueOf(end));
+      return new Var(ctx.L_ID().getText(), new Long(end));
   }
 
   /**
@@ -1019,9 +1004,9 @@ public class Stmt {
   private void updateIndex(int step, Var index, HplsqlParser.For_range_stmtContext ctx) {
 
     if (ctx.T_REVERSE() == null)
-      index.increment(step);
+      index.increment(new Long(step));
     else
-      index.decrement(step);
+      index.decrement(new Long(step));
   }
 
   /**
@@ -1037,54 +1022,57 @@ public class Stmt {
     if (trace) {
       trace(ctx, "SQL statement: " + sql);
     }
-    QueryResult query = queryExecutor.executeQuery(sql, ctx);
+    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
-    try {
-      if (ctx.T_INTO() != null) {
-        int cols = ctx.L_ID().size();
-        if (query.next()) {
-          for (int i = 0; i < cols; i++) {
-            Var var = exec.findVariable(ctx.L_ID(i).getText());
-            if (var != null) {
-              if (var.type != Type.ROW) {
-                var.setValue(query, i);
-              }
-              else {
-                var.setRowValues(query);
-              }
-              if (trace) {
-                trace(ctx, var, query.metadata(), i);
+    ResultSet rs = query.getResultSet();
+    if (rs != null) {
+      try {
+        ResultSetMetaData rm = rs.getMetaData();
+        if (ctx.T_INTO() != null) {
+          int cols = ctx.L_ID().size();
+          if (rs.next()) {
+            for (int i = 0; i < cols; i++) {
+              Var var = exec.findVariable(ctx.L_ID(i).getText());
+              if (var != null) {
+                if (var.type != Var.Type.ROW) {
+                  var.setValue(rs, rm, i + 1);
+                }
+                else {
+                  var.setValues(rs, rm);
+                }
+                if (trace) {
+                  trace(ctx, var, rs, rm, i + 1);
+                }
+              } 
+              else if (trace) {
+                trace(ctx, "Variable not found: " + ctx.L_ID(i).getText());
               }
             }
-            else if (trace) {
-              trace(ctx, "Variable not found: " + ctx.L_ID(i).getText());
-            }
+            exec.setSqlCode(0);
           }
-          exec.setSqlCode(SqlCodes.SUCCESS);
         }
-      }
-      // Print the results
-      else {
-        int cols = query.columnCount();
-        while(query.next()) {
-          for(int i = 0; i < cols; i++) {
-            if(i > 1) {
-              console.print("\t");
+        // Print the results
+        else {
+          int cols = rm.getColumnCount();
+          while(rs.next()) {
+            for(int i = 1; i <= cols; i++) {
+              if(i > 1) {
+                System.out.print("\t");
+              }
+              System.out.print(rs.getString(i));
             }
-            console.print(query.column(i, String.class));
+            System.out.println("");
           }
-          console.printLine("");
         }
-      }
-    } catch(QueryException e) {
-      exec.signal(query);
-      query.close();
-      return 1;
-    }
-    query.close();
+      } 
+      catch(SQLException e) {
+        exec.setSqlCode(e);
+      } 
+    }   
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0; 
   }
   
@@ -1092,9 +1080,11 @@ public class Stmt {
    * EXEC to execute a stored procedure
    */
   public Boolean execProc(HplsqlParser.Exec_stmtContext ctx) { 
-    String name = evalPop(ctx.expr()).toString().toUpperCase();
-    if (exec.functions.exec(name, ctx.expr_func_params())) {
-      return true;
+    String name = evalPop(ctx.expr()).toString();
+    if (exec.function.isProc(name)) {
+      if (exec.function.execProc(name, ctx.expr_func_params(), ctx)) {
+        return true;
+      }
     }
     return false;
   }
@@ -1154,13 +1144,13 @@ public class Stmt {
     trace(ctx, "UPDATE");
     String sql = exec.getFormattedText(ctx);
     trace(ctx, sql);
-    QueryResult query = queryExecutor.executeQuery(sql, ctx);
+    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0;
   }
   
@@ -1184,13 +1174,13 @@ public class Stmt {
       sql.append("TRUNCATE TABLE " + table);
     }
     trace(ctx, sql.toString());
-    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
+    Query query = exec.executeSql(ctx, sql.toString(), exec.conf.defaultConnection);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0;
   }
   
@@ -1201,13 +1191,13 @@ public class Stmt {
     trace(ctx, "MERGE");
     String sql = exec.getFormattedText(ctx);
     trace(ctx, sql);
-    QueryResult query = queryExecutor.executeQuery(sql, ctx);
+    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    query.close();
+    exec.closeQuery(query, exec.conf.defaultConnection);
     return 0;
   }
   
@@ -1217,7 +1207,7 @@ public class Stmt {
   public Integer print(HplsqlParser.Print_stmtContext ctx) { 
     trace(ctx, "PRINT");
     if (ctx.expr() != null) {
-      console.printLine(evalPop(ctx.expr()).toString());
+      System.out.println(evalPop(ctx.expr()).toString());
     }
 	  return 0; 
   }
@@ -1250,269 +1240,9 @@ public class Stmt {
     trace(ctx, "SIGNAL");
     Signal signal = new Signal(Signal.Type.USERDEFINED, ctx.ident().getText());
     exec.signal(signal);
-    return 0;
-  }  
-
-  /**
-   * SUMMARY statement
-   */
-  public Integer summary(HplsqlParser.Summary_stmtContext ctx) {
-    trace(ctx, "SUMMARY");
-    String table = null;
-    String select = null;
-    String conn = null;
-    Row row = null;
-    if (ctx.table_name() != null) {
-      table = evalPop(ctx.table_name()).toString();
-      conn = exec.getObjectConnection(table);
-      row = meta.getRowDataType(ctx, conn, table);      
-    }
-    else {
-      select = evalPop(ctx.select_stmt()).toString();
-      conn = exec.getStatementConnection();
-      row = meta.getRowDataTypeForSelect(ctx, conn, select);    
-    }
-    if (row == null) {
-      return 1;
-    }
-    Conn.Type connType = exec.getConnectionType(conn); 
-    if (ctx.T_TOP() == null) {
-      return summaryStat(ctx, table, select, row, conn, connType);
-    }    
-    else {
-      return summaryTop(ctx, table, select, row, conn, connType);
-    } 
+    return 0; 
   }  
   
-  // Summary for column statistics
-  public Integer summaryStat(HplsqlParser.Summary_stmtContext ctx, String table, String select,
-      Row row, String conn, Conn.Type connType) {
-    StringBuilder sql = new StringBuilder("SELECT COUNT(*)");
-    int maxColName = 11;
-    // Define summary metrics for each column
-    for(Column c : row.getColumns()) {
-      String col = c.getName();
-      if (connType == Conn.Type.HIVE) {
-        col = '`' + col + '`';
-      }
-      sql.append(",COUNT(" + col + "),");
-      sql.append("COUNT(DISTINCT " + col + "),");
-      sql.append("AVG(" + col + "),");
-      sql.append("MIN(" + col + "),");
-      sql.append("MAX(" + col + "),");
-      sql.append("STDDEV_SAMP(" + col + "),");
-      sql.append("PERCENTILE_APPROX(CAST(" + col + " AS DOUBLE),0.05),");
-      sql.append("PERCENTILE_APPROX(CAST(" + col + " AS DOUBLE),0.25),");
-      sql.append("PERCENTILE_APPROX(CAST(" + col + " AS DOUBLE),0.5),");
-      sql.append("PERCENTILE_APPROX(CAST(" + col + " AS DOUBLE),0.75),");
-      sql.append("PERCENTILE_APPROX(CAST(" + col + " AS DOUBLE),0.95)");
-      if (col.length() > maxColName) {
-        maxColName = col.length();
-      }
-    }
-    if (table != null) {
-      sql.append(" FROM (SELECT * FROM " + table); 
-      if (ctx.where_clause() != null) {
-        sql.append(" " + evalPop(ctx.where_clause()).toString());
-      }
-      if (ctx.T_LIMIT() != null) {
-        sql.append(" LIMIT ");
-        int limExp = 0;
-        if (ctx.T_TOP() != null) {
-          limExp = 1;
-        }
-        sql.append(evalPop(ctx.expr(limExp)).toString());
-      }
-      sql.append(") t");
-    }
-    else {
-      sql.append(" FROM (" + select + ") t");
-    }
-    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
-    if (query.error()) { 
-      exec.signal(query);
-      return 1;
-    }    
-    exec.setSqlSuccess();
-    try {
-      System.out.print("\n");
-      // The summary query returns only one row
-      if (query.next()) {
-        int i = 0, cc = 11;
-        String cntRows = query.column(0, String.class);
-        // Pad output
-        String fmt = String.format("%%-%ds\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s" +
-            "\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\n", maxColName + 1);
-        System.out.print(String.format(fmt, "Column", "Type", "Rows", "NonNull", "Unique", "Avg",
-            "Min", "Max", "StdDev", "p05", "p25", "p50", "p75", "p95"));
-        for(Column c : row.getColumns()) {
-          String avg = String.format("%.2f", query.column(3 + i*cc, Double.class));
-          String stddev = String.format("%.2f", query.column(6 + i*cc, Double.class));
-          String p05 = String.format("%.2f", query.column(7 + i*cc, Double.class));
-          String p25 = String.format("%.2f", query.column(8 + i*cc, Double.class));
-          String p50 = String.format("%.2f", query.column(9 + i*cc, Double.class));
-          String p75 = String.format("%.2f", query.column(10 + i*cc, Double.class));
-          String p95 = String.format("%.2f", query.column(11 + i*cc, Double.class));
-          System.out.print(String.format(fmt, c.getName(), c.getType(), cntRows, query.column(1 + i*cc, String.class),
-              query.column(2 + i*cc, String.class), avg, query.column(4 + i*cc, String.class), query.column(5 + i*cc, String.class),
-              stddev, p05, p25, p50, p75, p95));
-          i++;
-        }
-      }
-    }
-    catch (QueryException e) {
-      exec.signal(e);
-      query.close();
-      return 1;
-    }
-    query.close();
-    return 0; 
-  }
-  
-  // Summary for top column values
-  public Integer summaryTop(HplsqlParser.Summary_stmtContext ctx, String table, String select,
-     Row row, String conn, Conn.Type connType) {
-    StringBuilder sql = new StringBuilder("SELECT id, col, cnt FROM (" +
-      "SELECT id, col, cnt, ROW_NUMBER() OVER (PARTITION BY id ORDER BY cnt DESC) rn " +
-      "FROM (SELECT CAST(GROUPING__ID AS DECIMAL) id, COALESCE(");   // CAST AS INT does not work as expected (ID is still considered as STRING in ORDER BY for some reason)
-    int topNum = evalPop(ctx.expr(0)).intValue();
-    StringBuilder colsList = new StringBuilder();
-    StringBuilder colsGrList = new StringBuilder();
-    int i = 0;
-    for(Column c : row.getColumns()) {
-      String col = c.getName();
-      if (connType == Conn.Type.HIVE) {
-        col = '`' + col + '`';
-      }
-      if (i != 0) {
-        colsList.append(",");
-        colsGrList.append(",");
-      }
-      colsList.append(col);
-      colsGrList.append("(" + col + ")");
-      i++;
-    }
-    sql.append(colsList);
-    sql.append(") col, COUNT(*) cnt");
-    if (table != null) {
-      sql.append(" FROM (SELECT * FROM " + table); 
-      if (ctx.where_clause() != null) {
-        sql.append(" " + evalPop(ctx.where_clause()).toString());
-      }
-      if (ctx.T_LIMIT() != null) {
-        sql.append(" LIMIT " + evalPop(ctx.expr(1)).toString());
-      }
-      sql.append(") t");
-    }
-    else {
-      sql.append(" FROM (" + select + ") t");
-    }
-    sql.append(" GROUP BY ");
-    sql.append(colsList);
-    sql.append(" GROUPING SETS (");
-    sql.append(colsGrList);
-    sql.append(")) t) t WHERE rn <= " + topNum + " ORDER BY id, cnt DESC");
-    // Add LIMIT as Order by-s without limit can disabled for safety reasons
-    sql.append(" LIMIT " + topNum * row.size());
-    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
-    if (query.error()) { 
-      exec.signal(query);
-      return 1;
-    }    
-    exec.setSqlSuccess();
-    try {
-      int prevId = -1;
-      int grRow = 0;
-      int colNum = 0;
-      int maxLen = row.getColumn(colNum).getName().length();
-      ArrayList<String> outCols = new ArrayList<>();
-      ArrayList<Integer> outCnts = new ArrayList<>();
-      ArrayList<Integer> outLens = new ArrayList<>();
-      while (query.next()) {
-        int id = query.column(0, Integer.class);
-        String value = query.column(1, String.class);
-        int cnt = query.column(2, Integer.class);
-        if (prevId == -1) {
-          prevId = id;
-        }
-        // Still the same column
-        if (id == prevId) {
-          outCols.add(value);
-          outCnts.add(cnt);
-          if (value != null && value.length() > maxLen) {
-            maxLen = Math.min(value.length(), 300);
-          }
-          grRow++;
-        }
-        // First value for next column
-        else {
-          // Pad with empty rows if the number of values in group is less than TOP num
-          for (int j = grRow; j < topNum; j++) {
-            outCols.add("");
-            outCnts.add(0);
-            grRow++;
-          }
-          outCols.add(value);
-          outCnts.add(cnt);
-          outLens.add(maxLen);
-          colNum++;
-          maxLen = row.getColumn(colNum).getName().length();
-          if (value != null && value.length() > maxLen) {
-            maxLen = Math.min(value.length(), 300);
-          }
-          grRow = 1;
-          prevId = id;
-        }
-      }
-      for (int j = grRow; j < topNum; j++) {
-        outCols.add("");
-        outCnts.add(0);
-        grRow++;
-      }
-      if (maxLen != 0) {
-        outLens.add(maxLen);
-      }
-      System.out.print("\n");
-      // Output header
-      i = 0;
-      for(Column c : row.getColumns()) {
-        if (i != 0) {
-          System.out.print("\t");
-        }
-        String fmt = String.format("%%-%ds", outLens.get(i) + 11 + 3);
-        System.out.print(String.format(fmt, c.getName()));
-        i++;
-      }
-      System.out.print("\n");
-      // Output top values
-      for (int j = 0; j < topNum; j++) {
-        for(int k = 0; k < row.size(); k++) {
-          if (k != 0) {
-            System.out.print("\t");
-          }
-          int cnt = outCnts.get(j + k * topNum);
-          if (cnt != 0) { // skip padded values
-            String fmt = String.format("%%-%ds", outLens.get(k));
-            System.out.print(String.format(fmt, outCols.get(j + k * topNum)));
-            System.out.print(String.format("   %-11d", cnt));
-          }
-          else {
-            String fmt = String.format("%%-%ds", outLens.get(k) + 11 + 3);
-            System.out.print(String.format(fmt, ""));
-          }
-        }
-        System.out.print("\n");
-      }
-    }
-    catch (QueryException e) {
-      exec.signal(e);
-      query.close();
-      return 1;
-    }
-    query.close();
-    return 0; 
-  }
- 
   /**
    * RESIGNAL statement
    */
@@ -1623,8 +1353,8 @@ public class Stmt {
   void trace(ParserRuleContext ctx, String message) {
 	  exec.trace(ctx, message);
   }
-
-  void trace(ParserRuleContext ctx, Var var, Metadata metadata, int idx) {
-    exec.trace(ctx, var, metadata, idx);
+  
+  void trace(ParserRuleContext ctx, Var var, ResultSet rs, ResultSetMetaData rm, int idx) throws SQLException {
+    exec.trace(ctx, var, rs, rm, idx);
   }
 }
