@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -34,20 +34,16 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hive.common.StatsSetupConst;
 import org.apache.hadoop.hive.ql.CompilationOpContext;
 import org.apache.hadoop.hive.ql.ErrorMsg;
 import org.apache.hadoop.hive.ql.exec.mr.ExecMapperContext;
-import org.apache.hadoop.hive.ql.exec.vector.VectorizedRowBatch;
 import org.apache.hadoop.hive.ql.lib.Node;
 import org.apache.hadoop.hive.ql.metadata.HiveException;
 import org.apache.hadoop.hive.ql.parse.SemanticException;
 import org.apache.hadoop.hive.ql.plan.Explain;
 import org.apache.hadoop.hive.ql.plan.ExprNodeDesc;
-import org.apache.hadoop.hive.ql.plan.ExprNodeDescUtils;
 import org.apache.hadoop.hive.ql.plan.OpTraits;
 import org.apache.hadoop.hive.ql.plan.OperatorDesc;
 import org.apache.hadoop.hive.ql.plan.Statistics;
@@ -74,24 +70,22 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
 
   private static final long serialVersionUID = 1L;
 
-  public static final String HIVE_COUNTER_CREATED_FILES = "CREATED_FILES";
-  public static final String HIVE_COUNTER_CREATED_DYNAMIC_PARTITIONS = "CREATED_DYNAMIC_PARTITIONS";
-  public static final String HIVE_COUNTER_FATAL = "FATAL_ERROR";
+  public static final String HIVECOUNTERCREATEDFILES = "CREATED_FILES";
+  public static final String HIVECOUNTERFATAL = "FATAL_ERROR";
   public static final String CONTEXT_NAME_KEY = "__hive.context.name";
 
   private transient Configuration configuration;
-  protected CompilationOpContext cContext;
+  protected transient CompilationOpContext cContext;
   protected List<Operator<? extends OperatorDesc>> childOperators;
   protected List<Operator<? extends OperatorDesc>> parentOperators;
   protected String operatorId;
   protected final AtomicBoolean abortOp;
   private transient ExecMapperContext execContext;
   private transient boolean rootInitializeCalled = false;
-  protected transient long numRows = 0;
-  protected transient long runTimeNumRows = 0;
+  protected transient long runTimeNumRows;
+  protected int indexForTezUnion = -1;
   private transient Configuration hconf;
   protected final transient Collection<Future<?>> asyncInitOperations = new HashSet<>();
-  private String marker;
 
   // It can be optimized later so that an operator operator (init/close) is performed
   // only after that operation has been performed on all the parents. This will require
@@ -112,21 +106,9 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     // one of its parent is not in state CLOSE..
   }
 
-  /**
-   * Counters.
-   */
-  public enum Counter {
-    RECORDS_OUT_OPERATOR,
-    RECORDS_OUT_INTERMEDIATE
-  }
-
   protected transient State state = State.UNINIT;
 
   private boolean useBucketizedHiveInputFormat;
-
-  // Data structures specific for vectorized operators.
-  private transient boolean multiChildren;
-  private transient int[] selected;
 
   // dummy operator (for not increasing seqId)
   protected Operator(String name, CompilationOpContext cContext) {
@@ -136,7 +118,6 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     initOperatorId();
   }
 
-  /** Kryo ctor. */
   protected Operator() {
     childOperators = new ArrayList<Operator<? extends OperatorDesc>>();
     parentOperators = new ArrayList<Operator<? extends OperatorDesc>>();
@@ -158,7 +139,6 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   public Configuration getConfiguration() {
     return configuration;
   }
-
   public List<Operator<? extends OperatorDesc>> getChildOperators() {
     return childOperators;
   }
@@ -171,9 +151,18 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    * Implements the getChildren function for the Node Interface.
    */
   @Override
-  public List<Node> getChildren() {
-    List<Operator<? extends OperatorDesc>> childOps = getChildOperators();
-    return (childOps == null) ? null : new ArrayList<>(childOps);
+  public ArrayList<Node> getChildren() {
+
+    if (getChildOperators() == null) {
+      return null;
+    }
+
+    ArrayList<Node> ret_vec = new ArrayList<Node>();
+    for (Operator<? extends OperatorDesc> op : getChildOperators()) {
+      ret_vec.add(op);
+    }
+
+    return ret_vec;
   }
 
   public void setParentOperators(
@@ -229,6 +218,10 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   @SuppressWarnings("rawtypes")
   protected transient OutputCollector out;
   protected transient final Logger LOG = LoggerFactory.getLogger(getClass().getName());
+  protected transient final Logger PLOG = LoggerFactory.getLogger(Operator.class.getName()); // for simple disabling logs from all operators
+  protected transient final boolean isLogInfoEnabled = LOG.isInfoEnabled() && PLOG.isInfoEnabled();
+  protected transient final boolean isLogDebugEnabled = LOG.isDebugEnabled() && PLOG.isDebugEnabled();
+  protected transient final boolean isLogTraceEnabled = LOG.isTraceEnabled() && PLOG.isTraceEnabled();
   protected transient String alias;
   protected transient Reporter reporter;
   protected String id;
@@ -237,6 +230,17 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   protected transient ObjectInspector[] inputObjInspectors = new ObjectInspector[1];
   // for output rows of this operator
   protected transient ObjectInspector outputObjInspector;
+
+  /**
+   * A map of output column name to input expression map. This is used by
+   * optimizer and built during semantic analysis contains only key elements for
+   * reduce sink and group by op
+   */
+  protected Map<String, ExprNodeDesc> colExprMap;
+
+  public void setId(String id) {
+    this.id = id;
+  }
 
   /**
    * This function is not named getId(), to make sure java serialization does
@@ -292,7 +296,11 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    */
   protected boolean areAllParentsInitialized() {
     for (Operator<? extends OperatorDesc> parent : parentOperators) {
-      if (parent != null && parent.state != State.INIT) {
+      if (parent == null) {
+        //return true;
+        continue;
+      }
+      if (parent.state != State.INIT) {
         return false;
       }
     }
@@ -312,11 +320,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   @SuppressWarnings("unchecked")
   public final void initialize(Configuration hconf, ObjectInspector[] inputOIs)
       throws HiveException {
-
     this.done = false;
-    this.runTimeNumRows = 0; // initializeOp can be overridden
-    // Initializing data structures for vectorForward
-    this.selected = new int[VectorizedRowBatch.DEFAULT_SIZE];
     if (state == State.INIT) {
       return;
     }
@@ -326,18 +330,20 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
       return;
     }
 
-    LOG.info("Initializing Operator: {}", this);
+    if (isLogInfoEnabled) {
+      LOG.info("Initializing operator " + this);
+    }
 
     if (inputOIs != null) {
       inputObjInspectors = inputOIs;
     }
 
+    // initialize structure to maintain child op info. operator tree changes
     // while initializing so this need to be done here instead of constructor
     childOperatorsArray = new Operator[childOperators.size()];
     for (int i = 0; i < childOperatorsArray.length; i++) {
       childOperatorsArray[i] = childOperators.get(i);
     }
-    multiChildren = childOperatorsArray.length > 1;
     childOperatorsTag = new int[childOperatorsArray.length];
     for (int i = 0; i < childOperatorsArray.length; i++) {
       List<Operator<? extends OperatorDesc>> parentOperators =
@@ -363,20 +369,22 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
           || childOperatorsArray.length != childOperators.size()) {
         throw new AssertionError("Internal error during operator initialization");
       }
-
-      LOG.debug("Initialization Done: {}", this);
+      if (isLogDebugEnabled) {
+        LOG.debug("Initialization Done " + id + " " + getName());
+      }
 
       initializeChildren(hconf);
       isInitOk = true;
     } finally {
-      // TODO: ugly hack because Java does not have dtors and Tez input
-      // hangs on shutdown.
+      // TODO: ugly hack because Java doesn't have dtors and Tez input hangs on shutdown.
       if (!isInitOk) {
         cancelAsyncInitOps();
       }
     }
 
-    LOG.debug("Initialization Done - Reset: {}", this);
+    if (isLogDebugEnabled) {
+      LOG.debug("Initialization Done " + id + " " + getName() + " done is reset.");
+    }
 
     // let's wait on the async ops before continuing
     completeInitialization(asyncInitOperations);
@@ -436,6 +444,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
             }
           }
         }
+
       }
     }
 
@@ -446,6 +455,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
       }
       throw new HiveException("Async Initialization failed. abortRequested=" + abortOp.get(), asyncEx);
     }
+
 
     completeInitializationOp(os);
   }
@@ -462,8 +472,9 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public void initializeLocalWork(Configuration hconf) throws HiveException {
-    if (CollectionUtils.isNotEmpty(childOperators)) {
-      for (Operator<? extends OperatorDesc> childOp : childOperators) {
+    if (childOperators != null) {
+      for (int i =0; i<childOperators.size();i++) {
+        Operator<? extends OperatorDesc> childOp = this.childOperators.get(i);
         childOp.initializeLocalWork(hconf);
       }
     }
@@ -475,14 +486,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   protected void initializeOp(Configuration hconf) throws HiveException {
     this.hconf = hconf;
     rootInitializeCalled = true;
-  }
-
-  public String getCounterName(Counter counter, Configuration hconf) {
-    String context = hconf.get(Operator.CONTEXT_NAME_KEY, "");
-    if (StringUtils.isNotEmpty(context)) {
-      context = "_" + context.replace(" ", "_");
-    }
-    return counter + context;
+    runTimeNumRows = 0;
   }
 
   /**
@@ -491,14 +495,15 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    */
   protected void initializeChildren(Configuration hconf) throws HiveException {
     state = State.INIT;
-    LOG.debug("Operator Initialized: {}", this);
-
-    if (CollectionUtils.isEmpty(childOperators)) {
+    if (isLogDebugEnabled) {
+      LOG.debug("Operator " + id + " " + getName() + " initialized");
+    }
+    if (childOperators == null || childOperators.isEmpty()) {
       return;
     }
-
-    LOG.debug("Initializing Children: {}", this);
-
+    if (isLogDebugEnabled) {
+      LOG.debug("Initializing children of " + id + " " + getName());
+    }
     for (int i = 0; i < childOperatorsArray.length; i++) {
       childOperatorsArray[i].initialize(hconf, outputObjInspector, childOperatorsTag[i]);
       if (reporter != null) {
@@ -508,7 +513,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public void abort() {
-    LOG.info("Received Abort in Operator: {}", this);
+    LOG.info("Received abort in operator: {}", getName());
     abortOp.set(true);
   }
 
@@ -517,8 +522,8 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    */
   public void passExecContext(ExecMapperContext execContext) {
     this.setExecContext(execContext);
-    for (Operator<? extends OperatorDesc> childOp : childOperators) {
-      childOp.passExecContext(execContext);
+    for (int i = 0; i < childOperators.size(); i++) {
+        childOperators.get(i).passExecContext(execContext);
     }
   }
 
@@ -535,12 +540,14 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    */
   protected void initialize(Configuration hconf, ObjectInspector inputOI,
       int parentId) throws HiveException {
-    LOG.debug("Initializing Child : {}", this);
+    if (isLogDebugEnabled) {
+      LOG.debug("Initializing child " + id + " " + getName());
+    }
+    // Double the size of the array if needed
     if (parentId >= inputObjInspectors.length) {
-      // Determine the next power of 2 larger than the requested index
-      int newLength = 2;
+      int newLength = inputObjInspectors.length * 2;
       while (parentId >= newLength) {
-        newLength <<= 1;
+        newLength *= 2;
       }
       inputObjInspectors = Arrays.copyOf(inputObjInspectors, newLength);
     }
@@ -574,33 +581,45 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   public abstract void process(Object row, int tag) throws HiveException;
 
   protected final void defaultStartGroup() throws HiveException {
-    LOG.trace("Starting group");
+    if (isLogDebugEnabled) {
+      LOG.debug("Starting group");
+    }
 
-    if (CollectionUtils.isEmpty(childOperators))  {
-      LOG.trace("No children operators; start group done");
+    if (childOperators == null) {
       return;
     }
 
-    LOG.trace("Starting group for children");
+    if (isLogDebugEnabled) {
+      LOG.debug("Starting group for children:");
+    }
     for (Operator<? extends OperatorDesc> op : childOperators) {
       op.startGroup();
     }
-    LOG.trace("Start group done");
+
+    if (isLogDebugEnabled) {
+      LOG.debug("Start group Done");
+    }
   }
 
   protected final void defaultEndGroup() throws HiveException {
-    LOG.trace("Ending group");
+    if (isLogDebugEnabled) {
+      LOG.debug("Ending group");
+    }
 
-    if (CollectionUtils.isEmpty(childOperators)) {
-      LOG.trace("No children operators; end group done");
+    if (childOperators == null) {
       return;
     }
 
-    LOG.trace("Ending group for children");
+    if (isLogDebugEnabled) {
+      LOG.debug("Ending group for children:");
+    }
     for (Operator<? extends OperatorDesc> op : childOperators) {
       op.endGroup();
     }
-    LOG.trace("End group done");
+
+    if (isLogDebugEnabled) {
+      LOG.debug("End group Done");
+    }
   }
 
   // If a operator wants to do some work at the beginning of a group
@@ -613,44 +632,29 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     defaultEndGroup();
   }
 
-  // Tell the operator the status of the next key-grouped VectorizedRowBatch that will be delivered
-  // to the process method.  E.g. by reduce-shuffle.  These semantics are needed by PTF so it can
-  // efficiently add computed values to the last batch of a group key.
-  public void setNextVectorBatchGroupStatus(boolean isLastGroupBatch) throws HiveException {
-    // Do nothing.
-  }
-
   // an blocking operator (e.g. GroupByOperator and JoinOperator) can
   // override this method to forward its outputs
   public void flush() throws HiveException {
   }
 
-  // Recursive flush to flush all the tree operators
-  public void flushRecursive() throws HiveException {
-    flush();
-    if (CollectionUtils.isNotEmpty(childOperators)) {
-      for (Operator<?> child : childOperators) {
-        child.flushRecursive();
-      }
-    }
-  }
-
   public void processGroup(int tag) throws HiveException {
-    if (CollectionUtils.isNotEmpty(childOperators)) {
-      for (int i = 0; i < childOperatorsArray.length; i++) {
-        childOperatorsArray[i].processGroup(childOperatorsTag[i]);
-      }
+    if (childOperators == null || childOperators.isEmpty()) {
+      return;
+    }
+    for (int i = 0; i < childOperatorsArray.length; i++) {
+      childOperatorsArray[i].processGroup(childOperatorsTag[i]);
     }
   }
 
   protected boolean allInitializedParentsAreClosed() {
     if (parentOperators != null) {
       for (Operator<? extends OperatorDesc> parent : parentOperators) {
-        if (parent == null) {
+        if(parent==null){
           continue;
         }
-        LOG.debug("allInitializedParentsAreClosed? parent.state = {}",
-            parent.state);
+	if (isLogDebugEnabled) {
+	  LOG.debug("allInitializedParentsAreClosed? parent.state = " + parent.state);
+	}
         if (!(parent.state == State.CLOSE || parent.state == State.UNINIT)) {
           return false;
         }
@@ -663,7 +667,9 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   // since it is called by its parents' main thread, so no
   // more than 1 thread should call this close() function.
   public void close(boolean abort) throws HiveException {
-    LOG.debug("Close Called for Operator: {}", this);
+    if (isLogDebugEnabled) {
+      LOG.debug("close called for operator " + this);
+    }
 
     if (state == State.CLOSE) {
       return;
@@ -671,29 +677,24 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
 
     // check if all parents are finished
     if (!allInitializedParentsAreClosed()) {
-      LOG.debug("Not all parent operators are closed. Not closing.");
+      if (isLogDebugEnabled) {
+        LOG.debug("Not all parent operators are closed. Not closing.");
+      }
       return;
     }
 
     // set state as CLOSE as long as all parents are closed
     // state == CLOSE doesn't mean all children are also in state CLOSE
     state = State.CLOSE;
-    LOG.info("Closing Operator: {}", this);
+    if (isLogInfoEnabled) {
+      LOG.info("Closing operator " + this);
+    }
 
     abort |= abortOp.get();
 
+
     // call the operator specific close routine
     closeOp(abort);
-
-    // closeOp can be overriden
-    if (conf != null && conf.getRuntimeStatsTmpDir() != null) {
-      publishRunTimeStats();
-    }
-    LongWritable runTimeRowsWritable = new LongWritable(runTimeNumRows);
-    LongWritable recordCounter = new LongWritable(numRows);
-    statsMap.put(Counter.RECORDS_OUT_OPERATOR.name() + "_" + getOperatorId(), runTimeRowsWritable);
-    statsMap.put(getCounterName(Counter.RECORDS_OUT_INTERMEDIATE, hconf), recordCounter);
-    this.runTimeNumRows = 0;
 
     reporter = null;
 
@@ -704,13 +705,17 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
       }
 
       for (Operator<? extends OperatorDesc> op : childOperators) {
-        LOG.debug("Closing Child: {} ", op);
+        if (isLogDebugEnabled) {
+          LOG.debug("Closing child = " + op);
+        }
         op.close(abort);
       }
 
-      LOG.debug("Close Done: {}", this);
+      if (isLogDebugEnabled) {
+        LOG.debug(id + " Close done");
+      }
     } catch (HiveException e) {
-      LOG.warn("Caught exception while closing operator", e);
+      LOG.warn("Caught exception while closing operator: " + e.getMessage(), e);
       throw e;
     }
   }
@@ -720,6 +725,10 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    * should overwrite this funtion for their specific cleanup routine.
    */
   protected void closeOp(boolean abort) throws HiveException {
+    if (conf != null && conf.getRuntimeStatsTmpDir() != null) {
+      publishRunTimeStats();
+    }
+    runTimeNumRows = 0;
   }
 
   private boolean jobCloseDone = false;
@@ -748,8 +757,8 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     jobCloseOp(conf, success);
     jobCloseDone = true;
 
-    if (CollectionUtils.isNotEmpty(this.childOperators)) {
-      for (Operator<? extends OperatorDesc> op : this.childOperators) {
+    if (childOperators != null) {
+      for (Operator<? extends OperatorDesc> op : childOperators) {
         op.jobClose(conf, success);
       }
     }
@@ -895,63 +904,20 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     }
   }
 
-  /*
-   * Forward a VectorizedRowBatch to the children operators.
-   */
-  protected void vectorForward(VectorizedRowBatch batch)
-      throws HiveException {
-
-    if (getDone()) {
-      return;
-    }
-
-    // Data structures to store original values
-    final int size = batch.size;
-    runTimeNumRows += size;
-    final boolean selectedInUse = batch.selectedInUse;
-    final boolean saveState = (selectedInUse && multiChildren);
-    if (saveState) {
-      System.arraycopy(batch.selected, 0, selected, 0, size);
-    }
-
-    final int childSize = childOperatorsArray.length;
-    if (childSize == 1) {
-      childOperatorsArray[0].process(batch, childOperatorsTag[0]);
-      // if that single child is done, this operator is also done
-      if (childOperatorsArray[0].getDone()){
-        setDone(true);
-      }
-    } else {
-      int childrenDone = 0;
-      for (int i = 0; i < childOperatorsArray.length; i++) {
-        Operator<? extends OperatorDesc> o = childOperatorsArray[i];
-        if (o.getDone()) {
-          childrenDone++;
-        } else {
-          o.process(batch, childOperatorsTag[i]);
-
-          // Restore original values
-          batch.size = size;
-          batch.selectedInUse = selectedInUse;
-          if (saveState) {
-            System.arraycopy(selected, 0, batch.selected, 0, size);
-          }
-        }
-      }
-      // if all children are done, this operator is also done
-      if (childrenDone != 0 && childrenDone == childOperatorsArray.length) {
-        setDone(true);
-      }
+  public void resetStats() {
+    for (String e : statsMap.keySet()) {
+      statsMap.get(e).set(0L);
     }
   }
 
   public void reset(){
-    this.state = State.INIT;
+    this.state=State.INIT;
     if (childOperators != null) {
       for (Operator<? extends OperatorDesc> o : childOperators) {
         o.reset();
       }
     }
+
   }
 
   /**
@@ -972,7 +938,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public void logStats() {
-    if (LOG.isInfoEnabled() && !statsMap.isEmpty()) {
+    if (isLogInfoEnabled && !statsMap.isEmpty()) {
       StringBuilder sb = new StringBuilder();
       for (Map.Entry<String, LongWritable> e : statsMap.entrySet()) {
         sb.append(e.getKey()).append(":").append(e.getValue()).append(", ");
@@ -995,16 +961,11 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    * @return null if the operator doesn't change columns
    */
   public Map<String, ExprNodeDesc> getColumnExprMap() {
-    if (this.getConf() == null) {
-      return null;
-    }
-    return this.getConf().getColumnExprMap();
+    return colExprMap;
   }
 
   public void setColumnExprMap(Map<String, ExprNodeDesc> colExprMap) {
-    if (this.getConf() != null) {
-      this.getConf().setColumnExprMap(colExprMap);
-    }
+    this.colExprMap = colExprMap;
   }
 
   private String getLevelString(int level) {
@@ -1025,11 +986,10 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public String dump(int level, HashSet<Integer> seenOpts) {
-    Integer idObj = Integer.valueOf(id);
-    if (seenOpts.contains(idObj)) {
+    if (seenOpts.contains(new Integer(id))) {
       return null;
     }
-    seenOpts.add(idObj);
+    seenOpts.add(new Integer(id));
 
     StringBuilder s = new StringBuilder();
     String ls = getLevelString(level);
@@ -1108,16 +1068,12 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     return operatorId;
   }
 
-  public String getMarker() {
-    return marker;
-  }
-
-  public void setMarker(String marker) {
-    this.marker = marker;
-  }
-
   public void initOperatorId() {
-    this.operatorId = getName() + '_' + this.id;
+    setOperatorId(getName() + "_" + this.id);
+  }
+
+  public void setOperatorId(String operatorId) {
+    this.operatorId = operatorId;
   }
 
   /*
@@ -1166,8 +1122,9 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   // for each input file
   public void cleanUpInputFileChanged() throws HiveException {
     this.cleanUpInputFileChangedOp();
-    if (CollectionUtils.isNotEmpty(this.childOperators)) {
-      for (Operator<? extends OperatorDesc> op : this.childOperators) {
+    if(this.childOperators != null) {
+      for (int i = 0; i<this.childOperators.size();i++) {
+        Operator<? extends OperatorDesc> op = this.childOperators.get(i);
         op.cleanUpInputFileChanged();
       }
     }
@@ -1210,16 +1167,8 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     @SuppressWarnings("unchecked")
     T descClone = (T)conf.clone();
     // also clone the colExprMap by default
-    // we need a deep copy
-    ArrayList<ColumnInfo> colInfos =
-        new ArrayList<>(getSchema().getSignature());
-    Map<String, ExprNodeDesc> map = null;
-    Map<String, ExprNodeDesc> colExprMap = getColumnExprMap();
-    if (colExprMap != null) {
-      map = new HashMap<>(colExprMap);
-    }
     Operator<? extends OperatorDesc> ret = OperatorFactory.getAndMakeChild(
-            cContext, descClone, new RowSchema(colInfos), map, parentClones);
+            cContext, descClone, getSchema(), getColumnExprMap(), parentClones);
 
     return ret;
   }
@@ -1356,7 +1305,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
 
   @Override
   public String toString() {
-    return getName() + '[' + getIdentifier() + ']';
+    return getName() + "[" + getIdentifier() + "]";
   }
 
   public static String toString(Collection<TableScanOperator> top) {
@@ -1368,12 +1317,6 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
       }
       toString(builder, visited, op, 0);
     }
-    return builder.toString();
-  }
-
-  public static String toString(Operator<?> op) {
-    StringBuilder builder = new StringBuilder();
-    toString(builder, new HashSet<String>(), op, 0);
     return builder.toString();
   }
 
@@ -1405,28 +1348,40 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public Statistics getStatistics() {
-    return (conf == null) ? null : conf.getStatistics();
+    if (conf != null) {
+      return conf.getStatistics();
+    }
+
+    return null;
   }
 
   public OpTraits getOpTraits() {
-    return (conf == null) ? null : conf.getTraits();
+    if (conf != null) {
+      return conf.getTraits();
+    }
+
+    return null;
   }
 
   public void setOpTraits(OpTraits metaInfo) {
-    LOG.debug("Setting traits ({}) on: {}", metaInfo, this);
+    if (isLogDebugEnabled) {
+      LOG.debug("Setting traits (" + metaInfo + ") on " + this);
+    }
     if (conf != null) {
       conf.setTraits(metaInfo);
     } else {
-      LOG.warn("Cannot set traits when there is no descriptor: {}", this);
+      LOG.warn("Cannot set traits when there's no descriptor: " + this);
     }
   }
 
   public void setStatistics(Statistics stats) {
-    LOG.debug("Setting stats ({}) on: {}", stats, this);
+    if (isLogDebugEnabled) {
+      LOG.debug("Setting stats (" + stats + ") on " + this);
+    }
     if (conf != null) {
       conf.setStatistics(stats);
     } else {
-      LOG.warn("Cannot set stats when there is no descriptor: {}", this);
+      LOG.warn("Cannot set stats when there's no descriptor: " + this);
     }
   }
 
@@ -1477,12 +1432,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public void setCompilationOpContext(CompilationOpContext ctx) {
-    if (cContext == ctx) {
-      return;
-    }
     cContext = ctx;
-    id = String.valueOf(ctx.nextOperatorId());
-    initOperatorId();
   }
 
   /** @return Compilation operator context. Only available during compilation. */
@@ -1493,8 +1443,8 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   private void publishRunTimeStats() throws HiveException {
     StatsPublisher statsPublisher = new FSStatsPublisher();
     StatsCollectionContext sContext = new StatsCollectionContext(hconf);
+    sContext.setIndexForTezUnion(indexForTezUnion);
     sContext.setStatsTmpDir(conf.getRuntimeStatsTmpDir());
-    sContext.setContextSuffix(getOperatorId());
 
     if (!statsPublisher.connect(sContext)) {
       LOG.error("StatsPublishing error: cannot connect to database");
@@ -1516,43 +1466,11 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     }
   }
 
-  /**
-   * Decides whether two operators are logically the same.
-   * This can be used to merge same operators and avoid repeated computation.
-   */
-  public boolean logicalEquals(Operator other) {
-    return getClass().getName().equals(other.getClass().getName()) &&
-        (conf == other.getConf() || (conf != null && other.getConf() != null &&
-            conf.isSame(other.getConf())));
+  public int getIndexForTezUnion() {
+    return indexForTezUnion;
   }
 
-  /**
-   * Compares the whole operator tree with the other.
-   */
-  // Currently only used during re-optimization related parts.
-  // FIXME: HIVE-18703 should probably move this method somewhere else
-  public final boolean logicalEqualsTree(Operator<?> o) {
-    // XXX: this could easily become a hot-spot
-    if (!logicalEquals(o)) {
-      return false;
-    }
-    if (o.getNumParent() != getNumParent()) {
-      return false;
-    }
-    for (int i = 0; i < getNumParent(); i++) {
-      Operator<? extends OperatorDesc> copL = parentOperators.get(i);
-      Operator<? extends OperatorDesc> copR = o.parentOperators.get(i);
-      if (!copL.logicalEquals(copR)) {
-        return false;
-      }
-    }
-    return true;
-  }
-
-  public void replaceTabAlias(String oldAlias, String newAlias) {
-    ExprNodeDescUtils.replaceTabAlias(getConf().getColumnExprMap(), oldAlias, newAlias);
-    for (Operator<? extends OperatorDesc> c : getChildOperators()) {
-      c.replaceTabAlias(oldAlias, newAlias);
-    }
+  public void setIndexForTezUnion(int indexForTezUnion) {
+    this.indexForTezUnion = indexForTezUnion;
   }
 }
