@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -23,53 +23,34 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.hadoop.hive.conf.HiveConf;
-import org.apache.hadoop.hive.ql.ddl.DDLTask;
-import org.apache.hadoop.hive.ql.ddl.DDLWork;
 import org.apache.hadoop.hive.ql.exec.mr.MapRedTask;
 import org.apache.hadoop.hive.ql.exec.mr.MapredLocalTask;
-import org.apache.hadoop.hive.ql.exec.repl.AtlasDumpTask;
-import org.apache.hadoop.hive.ql.exec.repl.AtlasDumpWork;
-import org.apache.hadoop.hive.ql.exec.repl.AtlasLoadTask;
-import org.apache.hadoop.hive.ql.exec.repl.AtlasLoadWork;
-import org.apache.hadoop.hive.ql.exec.repl.ReplDumpTask;
-import org.apache.hadoop.hive.ql.exec.repl.ReplDumpWork;
-import org.apache.hadoop.hive.ql.exec.repl.ReplLoadTask;
-import org.apache.hadoop.hive.ql.exec.repl.ReplLoadWork;
-import org.apache.hadoop.hive.ql.exec.repl.AckTask;
-import org.apache.hadoop.hive.ql.exec.repl.AckWork;
-import org.apache.hadoop.hive.ql.exec.repl.ReplStateLogTask;
-import org.apache.hadoop.hive.ql.exec.repl.ReplStateLogWork;
-import org.apache.hadoop.hive.ql.exec.repl.DirCopyTask;
-import org.apache.hadoop.hive.ql.exec.repl.DirCopyWork;
-import org.apache.hadoop.hive.ql.exec.repl.RangerLoadWork;
-import org.apache.hadoop.hive.ql.exec.repl.RangerLoadTask;
-import org.apache.hadoop.hive.ql.exec.repl.RangerDumpWork;
-import org.apache.hadoop.hive.ql.exec.repl.RangerDumpTask;
-import org.apache.hadoop.hive.ql.exec.schq.ScheduledQueryMaintenanceTask;
 import org.apache.hadoop.hive.ql.exec.spark.SparkTask;
 import org.apache.hadoop.hive.ql.exec.tez.TezTask;
+import org.apache.hadoop.hive.ql.index.IndexMetadataChangeTask;
+import org.apache.hadoop.hive.ql.index.IndexMetadataChangeWork;
 import org.apache.hadoop.hive.ql.io.merge.MergeFileTask;
 import org.apache.hadoop.hive.ql.io.merge.MergeFileWork;
+import org.apache.hadoop.hive.ql.io.rcfile.stats.PartialScanTask;
+import org.apache.hadoop.hive.ql.io.rcfile.stats.PartialScanWork;
 import org.apache.hadoop.hive.ql.plan.ColumnStatsUpdateWork;
+import org.apache.hadoop.hive.ql.plan.ColumnStatsWork;
 import org.apache.hadoop.hive.ql.plan.ConditionalWork;
 import org.apache.hadoop.hive.ql.plan.CopyWork;
+import org.apache.hadoop.hive.ql.plan.DDLWork;
 import org.apache.hadoop.hive.ql.plan.DependencyCollectionWork;
 import org.apache.hadoop.hive.ql.plan.ExplainSQRewriteWork;
 import org.apache.hadoop.hive.ql.plan.ExplainWork;
-import org.apache.hadoop.hive.ql.plan.ExportWork;
 import org.apache.hadoop.hive.ql.plan.FetchWork;
+import org.apache.hadoop.hive.ql.plan.FunctionWork;
 import org.apache.hadoop.hive.ql.plan.MapredLocalWork;
 import org.apache.hadoop.hive.ql.plan.MapredWork;
 import org.apache.hadoop.hive.ql.plan.MoveWork;
 import org.apache.hadoop.hive.ql.plan.ReplCopyWork;
-import org.apache.hadoop.hive.ql.plan.ReplTxnWork;
 import org.apache.hadoop.hive.ql.plan.SparkWork;
+import org.apache.hadoop.hive.ql.plan.StatsNoJobWork;
 import org.apache.hadoop.hive.ql.plan.StatsWork;
 import org.apache.hadoop.hive.ql.plan.TezWork;
-import org.apache.hadoop.hive.ql.scheduled.ScheduledQueryMaintenanceWork;
-
-import com.google.common.annotations.VisibleForTesting;
-
 
 /**
  * TaskFactory implementation.
@@ -99,6 +80,8 @@ public final class TaskFactory {
     taskvec.add(new TaskTuple<CopyWork>(CopyWork.class, CopyTask.class));
     taskvec.add(new TaskTuple<ReplCopyWork>(ReplCopyWork.class, ReplCopyTask.class));
     taskvec.add(new TaskTuple<DDLWork>(DDLWork.class, DDLTask.class));
+    taskvec.add(new TaskTuple<FunctionWork>(FunctionWork.class,
+        FunctionTask.class));
     taskvec
         .add(new TaskTuple<ExplainWork>(ExplainWork.class, ExplainTask.class));
     taskvec
@@ -110,27 +93,22 @@ public final class TaskFactory {
 
     taskvec.add(new TaskTuple<MapredLocalWork>(MapredLocalWork.class,
         MapredLocalTask.class));
-    taskvec.add(new TaskTuple<StatsWork>(StatsWork.class, StatsTask.class));
+    taskvec.add(new TaskTuple<StatsWork>(StatsWork.class,
+        StatsTask.class));
+    taskvec.add(new TaskTuple<StatsNoJobWork>(StatsNoJobWork.class, StatsNoJobTask.class));
+    taskvec.add(new TaskTuple<ColumnStatsWork>(ColumnStatsWork.class, ColumnStatsTask.class));
     taskvec.add(new TaskTuple<ColumnStatsUpdateWork>(ColumnStatsUpdateWork.class, ColumnStatsUpdateTask.class));
     taskvec.add(new TaskTuple<MergeFileWork>(MergeFileWork.class,
         MergeFileTask.class));
     taskvec.add(new TaskTuple<DependencyCollectionWork>(DependencyCollectionWork.class,
         DependencyCollectionTask.class));
+    taskvec.add(new TaskTuple<PartialScanWork>(PartialScanWork.class,
+        PartialScanTask.class));
+    taskvec.add(new TaskTuple<IndexMetadataChangeWork>(IndexMetadataChangeWork.class,
+        IndexMetadataChangeTask.class));
     taskvec.add(new TaskTuple<TezWork>(TezWork.class, TezTask.class));
     taskvec.add(new TaskTuple<SparkWork>(SparkWork.class, SparkTask.class));
-    taskvec.add(new TaskTuple<>(ReplDumpWork.class, ReplDumpTask.class));
-    taskvec.add(new TaskTuple<>(ReplLoadWork.class, ReplLoadTask.class));
-    taskvec.add(new TaskTuple<>(ReplStateLogWork.class, ReplStateLogTask.class));
-    taskvec.add(new TaskTuple<AckWork>(AckWork.class, AckTask.class));
-    taskvec.add(new TaskTuple<RangerDumpWork>(RangerDumpWork.class, RangerDumpTask.class));
-    taskvec.add(new TaskTuple<RangerLoadWork>(RangerLoadWork.class, RangerLoadTask.class));
-    taskvec.add(new TaskTuple<AtlasDumpWork>(AtlasDumpWork.class, AtlasDumpTask.class));
-    taskvec.add(new TaskTuple<AtlasLoadWork>(AtlasLoadWork.class, AtlasLoadTask.class));
-    taskvec.add(new TaskTuple<ExportWork>(ExportWork.class, ExportTask.class));
-    taskvec.add(new TaskTuple<ReplTxnWork>(ReplTxnWork.class, ReplTxnTask.class));
-    taskvec.add(new TaskTuple<DirCopyWork>(DirCopyWork.class, DirCopyTask.class));
-    taskvec.add(new TaskTuple<ScheduledQueryMaintenanceWork>(ScheduledQueryMaintenanceWork.class,
-            ScheduledQueryMaintenanceTask.class));
+
   }
 
   private static ThreadLocal<Integer> tid = new ThreadLocal<Integer>() {
@@ -142,7 +120,7 @@ public final class TaskFactory {
 
   public static int getAndIncrementId() {
     int curValue = tid.get().intValue();
-    tid.set(Integer.valueOf(curValue + 1));
+    tid.set(new Integer(curValue + 1));
     return curValue;
   }
 
@@ -151,8 +129,8 @@ public final class TaskFactory {
   }
 
   @SuppressWarnings("unchecked")
-  @VisibleForTesting
-  static <T extends Serializable> Task<T> get(Class<T> workClass) {
+  public static <T extends Serializable> Task<T> get(Class<T> workClass,
+      HiveConf conf) {
 
     for (TaskTuple<? extends Serializable> t : taskvec) {
       if (t.workClass == workClass) {
@@ -169,24 +147,26 @@ public final class TaskFactory {
     throw new RuntimeException("No task for work class " + workClass.getName());
   }
 
-  public static <T extends Serializable> Task<T> get(T work, HiveConf conf) {
-    @SuppressWarnings("unchecked")
-    Task<T> ret = get((Class<T>) work.getClass());
+  public static <T extends Serializable> Task<T> get(T work, HiveConf conf,
+      Task<? extends Serializable>... tasklist) {
+    Task<T> ret = get((Class<T>) work.getClass(), conf);
     ret.setWork(work);
-    if (null != conf) {
-      ret.setConf(conf);
+    if (tasklist.length == 0) {
+      return (ret);
     }
-    return ret;
+
+    ArrayList<Task<? extends Serializable>> clist = new ArrayList<Task<? extends Serializable>>();
+    for (Task<? extends Serializable> tsk : tasklist) {
+      clist.add(tsk);
+    }
+    ret.setChildTasks(clist);
+    return (ret);
   }
 
-  public static <T extends Serializable> Task<T> get(T work) {
-    return get(work, null);
-  }
-
-  @SafeVarargs
   public static <T extends Serializable> Task<T> getAndMakeChild(T work,
       HiveConf conf, Task<? extends Serializable>... tasklist) {
-    Task<T> ret = get(work);
+    Task<T> ret = get((Class<T>) work.getClass(), conf);
+    ret.setWork(work);
     if (tasklist.length == 0) {
       return (ret);
     }
@@ -197,14 +177,13 @@ public final class TaskFactory {
   }
 
 
-  @SafeVarargs
   public static  void makeChild(Task<?> ret,
-      Task<?>... tasklist) {
+      Task<? extends Serializable>... tasklist) {
     // Add the new task as child of each of the passed in tasks
-    for (Task<?> tsk : tasklist) {
-      List<Task<?>> children = tsk.getChildTasks();
+    for (Task<? extends Serializable> tsk : tasklist) {
+      List<Task<? extends Serializable>> children = tsk.getChildTasks();
       if (children == null) {
-        children = new ArrayList<Task<?>>();
+        children = new ArrayList<Task<? extends Serializable>>();
       }
       children.add(ret);
       tsk.setChildTasks(children);
