@@ -1,4 +1,4 @@
-/*
+/**
  *  Licensed to the Apache Software Foundation (ASF) under one
  *  or more contributor license agreements.  See the NOTICE file
  *  distributed with this work for additional information
@@ -19,8 +19,6 @@
 package org.apache.hadoop.hive.ql.exec.spark;
 
 import org.apache.hadoop.hive.ql.io.HiveKey;
-import org.apache.hadoop.hive.ql.plan.BaseWork;
-import org.apache.hadoop.hive.ql.plan.SparkEdgeProperty;
 import org.apache.hadoop.io.BytesWritable;
 import org.apache.spark.api.java.JavaPairRDD;
 import org.apache.spark.storage.StorageLevel;
@@ -30,23 +28,17 @@ public class ShuffleTran implements SparkTran<HiveKey, BytesWritable, HiveKey, B
   private final int numOfPartitions;
   private final boolean toCache;
   private final SparkPlan sparkPlan;
-  private final String name;
-  private final SparkEdgeProperty edge;
-  private final BaseWork baseWork;
+  private String name = "Shuffle";
 
   public ShuffleTran(SparkPlan sparkPlan, SparkShuffler sf, int n) {
-    this(sparkPlan, sf, n, false, "Shuffle", null, null);
+    this(sparkPlan, sf, n, false);
   }
 
-  public ShuffleTran(SparkPlan sparkPlan, SparkShuffler sf, int n, boolean toCache, String name,
-                     SparkEdgeProperty edge, BaseWork baseWork) {
+  public ShuffleTran(SparkPlan sparkPlan, SparkShuffler sf, int n, boolean toCache) {
     shuffler = sf;
     numOfPartitions = n;
     this.toCache = toCache;
     this.sparkPlan = sparkPlan;
-    this.name = name;
-    this.edge = edge;
-    this.baseWork = baseWork;
   }
 
   @Override
@@ -56,8 +48,7 @@ public class ShuffleTran implements SparkTran<HiveKey, BytesWritable, HiveKey, B
       sparkPlan.addCachedRDDId(result.id());
       result = result.persist(StorageLevel.MEMORY_AND_DISK());
     }
-    return result.setName(this.name + " (" + edge.getShuffleType() + ", " + numOfPartitions +
-            (toCache ? ", cached)" : ")"));
+    return result;
   }
 
   public int getNoOfPartitions() {
@@ -71,12 +62,12 @@ public class ShuffleTran implements SparkTran<HiveKey, BytesWritable, HiveKey, B
 
   @Override
   public Boolean isCacheEnable() {
-    return Boolean.valueOf(toCache);
+    return new Boolean(toCache);
   }
 
   @Override
-  public BaseWork getBaseWork() {
-    return baseWork;
+  public void setName(String name) {
+    this.name = name;
   }
 
   public SparkShuffler getShuffler() {
