@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,6 +18,7 @@
 
 package org.apache.hadoop.hive.ql.optimizer;
 
+import java.io.IOException;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -32,17 +33,19 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Properties;
 import java.util.Set;
-import java.util.stream.Collectors;
 
+import com.google.common.annotations.VisibleForTesting;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.hive.common.BlobStorageUtils;
 import org.apache.hadoop.hive.common.StringInternUtils;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.hive.conf.HiveConf.ConfVars;
-import org.apache.hadoop.hive.metastore.api.FieldSchema;
+import org.apache.hadoop.hive.metastore.Warehouse;
+import org.apache.hadoop.hive.metastore.api.MetaException;
 import org.apache.hadoop.hive.ql.CompilationOpContext;
 import org.apache.hadoop.hive.ql.Context;
+import org.apache.hadoop.hive.ql.ErrorMsg;
 import org.apache.hadoop.hive.ql.exec.ColumnInfo;
 import org.apache.hadoop.hive.ql.exec.ConditionalTask;
 import org.apache.hadoop.hive.ql.exec.DemuxOperator;
@@ -66,9 +69,7 @@ import org.apache.hadoop.hive.ql.exec.Utilities;
 import org.apache.hadoop.hive.ql.exec.mr.ExecDriver;
 import org.apache.hadoop.hive.ql.exec.mr.MapRedTask;
 import org.apache.hadoop.hive.ql.exec.spark.SparkTask;
-import org.apache.hadoop.hive.ql.exec.tez.TezTask;
 import org.apache.hadoop.hive.ql.hooks.ReadEntity;
-import org.apache.hadoop.hive.ql.io.AcidUtils;
 import org.apache.hadoop.hive.ql.io.RCFileInputFormat;
 import org.apache.hadoop.hive.ql.io.merge.MergeFileWork;
 import org.apache.hadoop.hive.ql.io.orc.OrcFileStripeMergeInputFormat;
@@ -87,11 +88,9 @@ import org.apache.hadoop.hive.ql.parse.ParseContext;
 import org.apache.hadoop.hive.ql.parse.PrunedPartitionList;
 import org.apache.hadoop.hive.ql.parse.SemanticException;
 import org.apache.hadoop.hive.ql.plan.BaseWork;
-import org.apache.hadoop.hive.ql.plan.BasicStatsWork;
 import org.apache.hadoop.hive.ql.plan.ConditionalResolverMergeFiles;
 import org.apache.hadoop.hive.ql.plan.ConditionalResolverMergeFiles.ConditionalResolverMergeFilesCtx;
 import org.apache.hadoop.hive.ql.plan.ConditionalWork;
-import org.apache.hadoop.hive.ql.plan.DependencyCollectionWork;
 import org.apache.hadoop.hive.ql.plan.DynamicPartitionCtx;
 import org.apache.hadoop.hive.ql.plan.ExprNodeDesc;
 import org.apache.hadoop.hive.ql.plan.FetchWork;
@@ -116,15 +115,13 @@ import org.apache.hadoop.hive.ql.plan.StatsWork;
 import org.apache.hadoop.hive.ql.plan.TableDesc;
 import org.apache.hadoop.hive.ql.plan.TableScanDesc;
 import org.apache.hadoop.hive.ql.plan.TezWork;
-import org.apache.hadoop.hive.ql.session.LineageState;
-import org.apache.hadoop.hive.ql.session.SessionState;
+import org.apache.hadoop.hive.serde2.SerDeException;
 import org.apache.hadoop.hive.serde2.objectinspector.StructObjectInspector;
 import org.apache.hadoop.hive.serde2.typeinfo.TypeInfoFactory;
 import org.apache.hadoop.mapred.InputFormat;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.Interner;
 
@@ -153,9 +150,9 @@ public final class GenMapRedUtils {
     Map<Operator<? extends OperatorDesc>, GenMapRedCtx> mapCurrCtx =
         opProcCtx.getMapCurrCtx();
     GenMapRedCtx mapredCtx = mapCurrCtx.get(op.getParentOperators().get(0));
-    Task<?> currTask = mapredCtx.getCurrTask();
+    Task<? extends Serializable> currTask = mapredCtx.getCurrTask();
     MapredWork plan = (MapredWork) currTask.getWork();
-    HashMap<Operator<? extends OperatorDesc>, Task<?>> opTaskMap =
+    HashMap<Operator<? extends OperatorDesc>, Task<? extends Serializable>> opTaskMap =
         opProcCtx.getOpTaskMap();
     TableScanOperator currTopOp = opProcCtx.getCurrTopOp();
 
@@ -196,11 +193,11 @@ public final class GenMapRedUtils {
    */
   public static void initUnionPlan(ReduceSinkOperator op, UnionOperator currUnionOp,
       GenMRProcContext opProcCtx,
-      Task<?> unionTask) throws SemanticException {
+      Task<? extends Serializable> unionTask) throws SemanticException {
     Operator<? extends OperatorDesc> reducer = op.getChildOperators().get(0);
 
     MapredWork plan = (MapredWork) unionTask.getWork();
-    HashMap<Operator<? extends OperatorDesc>, Task<?>> opTaskMap =
+    HashMap<Operator<? extends OperatorDesc>, Task<? extends Serializable>> opTaskMap =
         opProcCtx.getOpTaskMap();
 
     opTaskMap.put(reducer, unionTask);
@@ -220,7 +217,7 @@ public final class GenMapRedUtils {
   }
 
   private static void setUnionPlan(GenMRProcContext opProcCtx,
-      boolean local, Task<?> currTask, GenMRUnionCtx uCtx,
+      boolean local, Task<? extends Serializable> currTask, GenMRUnionCtx uCtx,
       boolean mergeTask) throws SemanticException {
     TableScanOperator currTopOp = opProcCtx.getCurrTopOp();
 
@@ -246,12 +243,12 @@ public final class GenMapRedUtils {
         MapredWork plan = (MapredWork) currTask.getWork();
         for (int pos = 0; pos < size; pos++) {
           String taskTmpDir = taskTmpDirLst.get(pos);
-          Path taskTmpDirPath = new Path(taskTmpDir);
+          TableDesc tt_desc = tt_descLst.get(pos);
           MapWork mWork = plan.getMapWork();
-          if (!mWork.getPathToAliases().containsKey(taskTmpDirPath)) {
+          if (mWork.getPathToAliases().get(taskTmpDir) == null) {
             taskTmpDir = taskTmpDir.intern();
-            StringInternUtils.internUriStringsInPath(taskTmpDirPath);
-            TableDesc tt_desc = tt_descLst.get(pos);
+            Path taskTmpDirPath = StringInternUtils.internUriStringsInPath(new Path(taskTmpDir));
+            mWork.removePathToAlias(taskTmpDirPath);
             mWork.addPathToAlias(taskTmpDirPath, taskTmpDir);
             mWork.addPathToPartitionInfo(taskTmpDirPath, new PartitionDesc(tt_desc, null));
             mWork.getAliasToWork().put(taskTmpDir, topOperators.get(pos));
@@ -266,7 +263,7 @@ public final class GenMapRedUtils {
    * for the union. The plan has already been created.
    */
   public static void initUnionPlan(GenMRProcContext opProcCtx, UnionOperator currUnionOp,
-      Task<?> currTask, boolean local)
+      Task<? extends Serializable> currTask, boolean local)
       throws SemanticException {
     // In case of lateral views followed by a join, the same tree
     // can be traversed more than one
@@ -282,8 +279,8 @@ public final class GenMapRedUtils {
    */
   public static void joinUnionPlan(GenMRProcContext opProcCtx,
       UnionOperator currUnionOp,
-      Task<?> currentUnionTask,
-      Task<?> existingTask, boolean local)
+      Task<? extends Serializable> currentUnionTask,
+      Task<? extends Serializable> existingTask, boolean local)
       throws SemanticException {
     assert currUnionOp != null;
     GenMRUnionCtx uCtx = opProcCtx.getUnionTask(currUnionOp);
@@ -291,7 +288,7 @@ public final class GenMapRedUtils {
 
     setUnionPlan(opProcCtx, local, existingTask, uCtx, true);
 
-    List<Task<?>> parTasks = null;
+    List<Task<? extends Serializable>> parTasks = null;
     if (opProcCtx.getRootTasks().contains(currentUnionTask)) {
       opProcCtx.getRootTasks().remove(currentUnionTask);
       if (!opProcCtx.getRootTasks().contains(existingTask) &&
@@ -302,17 +299,17 @@ public final class GenMapRedUtils {
 
     if ((currentUnionTask != null) && (currentUnionTask.getParentTasks() != null)
         && !currentUnionTask.getParentTasks().isEmpty()) {
-      parTasks = new ArrayList<Task<?>>();
+      parTasks = new ArrayList<Task<? extends Serializable>>();
       parTasks.addAll(currentUnionTask.getParentTasks());
       Object[] parTaskArr = parTasks.toArray();
       for (Object parTask : parTaskArr) {
-        ((Task<?>) parTask)
+        ((Task<? extends Serializable>) parTask)
             .removeDependentTask(currentUnionTask);
       }
     }
 
     if ((currentUnionTask != null) && (parTasks != null)) {
-      for (Task<?> parTask : parTasks) {
+      for (Task<? extends Serializable> parTask : parTasks) {
         parTask.addDependentTask(existingTask);
         if (opProcCtx.getRootTasks().contains(existingTask)) {
           opProcCtx.getRootTasks().remove(existingTask);
@@ -333,22 +330,22 @@ public final class GenMapRedUtils {
    * @param opProcCtx
    *          processing context
    */
-  public static void joinPlan(Task<?> currTask,
-      Task<?> oldTask, GenMRProcContext opProcCtx)
+  public static void joinPlan(Task<? extends Serializable> currTask,
+      Task<? extends Serializable> oldTask, GenMRProcContext opProcCtx)
       throws SemanticException {
     assert currTask != null && oldTask != null;
 
     TableScanOperator currTopOp = opProcCtx.getCurrTopOp();
-    List<Task<?>> parTasks = null;
+    List<Task<? extends Serializable>> parTasks = null;
     // terminate the old task and make current task dependent on it
     if (currTask.getParentTasks() != null
         && !currTask.getParentTasks().isEmpty()) {
-      parTasks = new ArrayList<Task<?>>();
+      parTasks = new ArrayList<Task<? extends Serializable>>();
       parTasks.addAll(currTask.getParentTasks());
 
       Object[] parTaskArr = parTasks.toArray();
       for (Object element : parTaskArr) {
-        ((Task<?>) element).removeDependentTask(currTask);
+        ((Task<? extends Serializable>) element).removeDependentTask(currTask);
       }
     }
 
@@ -357,7 +354,7 @@ public final class GenMapRedUtils {
     }
 
     if (parTasks != null) {
-      for (Task<?> parTask : parTasks) {
+      for (Task<? extends Serializable> parTask : parTasks) {
         parTask.addDependentTask(oldTask);
       }
     }
@@ -375,7 +372,7 @@ public final class GenMapRedUtils {
    * If currTopOp is not set for input of the task, add input for to the task
    */
   static boolean mergeInput(TableScanOperator currTopOp,
-      GenMRProcContext opProcCtx, Task<?> task, boolean local)
+      GenMRProcContext opProcCtx, Task<? extends Serializable> task, boolean local)
       throws SemanticException {
     if (!opProcCtx.isSeenOp(task, currTopOp)) {
       String currAliasId = opProcCtx.getCurrAliasId();
@@ -390,7 +387,7 @@ public final class GenMapRedUtils {
    * Split and link two tasks by temporary file : pRS-FS / TS-cRS-OP
    */
   static void splitPlan(ReduceSinkOperator cRS,
-      Task<?> parentTask, Task<?> childTask,
+      Task<? extends Serializable> parentTask, Task<? extends Serializable> childTask,
       GenMRProcContext opProcCtx) throws SemanticException {
     assert parentTask != null && childTask != null;
     splitTasks(cRS, parentTask, childTask, opProcCtx);
@@ -409,10 +406,11 @@ public final class GenMapRedUtils {
       throws SemanticException {
     // Generate a new task
     ParseContext parseCtx = opProcCtx.getParseCtx();
-    Task<?> parentTask = opProcCtx.getCurrTask();
+    Task<? extends Serializable> parentTask = opProcCtx.getCurrTask();
 
     MapredWork childPlan = getMapRedWork(parseCtx);
-    Task<?> childTask = TaskFactory.get(childPlan);
+    Task<? extends Serializable> childTask = TaskFactory.get(childPlan, parseCtx
+        .getConf());
     Operator<? extends OperatorDesc> reducer = cRS.getChildOperators().get(0);
 
     // Add the reducer
@@ -420,7 +418,7 @@ public final class GenMapRedUtils {
     childPlan.setReduceWork(rWork);
     rWork.setReducer(reducer);
     ReduceSinkDesc desc = cRS.getConf();
-    childPlan.getReduceWork().setNumReduceTasks(Integer.valueOf(desc.getNumReducers()));
+    childPlan.getReduceWork().setNumReduceTasks(new Integer(desc.getNumReducers()));
 
     opProcCtx.getOpTaskMap().put(reducer, childTask);
 
@@ -434,8 +432,8 @@ public final class GenMapRedUtils {
    *          current alias
    * @param topOp
    *          the top operator of the stack
-   * @param task
-   *          current task
+   * @param plan
+   *          current plan
    * @param local
    *          whether you need to add to map-reduce or local work
    * @param opProcCtx
@@ -454,8 +452,8 @@ public final class GenMapRedUtils {
    *          current alias
    * @param topOp
    *          the top operator of the stack
-   * @param task
-   *          current task
+   * @param plan
+   *          current plan
    * @param local
    *          whether you need to add to map-reduce or local work
    * @param opProcCtx
@@ -476,11 +474,13 @@ public final class GenMapRedUtils {
    *
    * @param alias_id
    *          current alias
+   * @param topOp
+   *          the top operator of the stack
    * @param plan
    *          map work to initialize
    * @param local
    *          whether you need to add to map-reduce or local work
-   * @param partsList
+   * @param pList
    *          pruned partition list. If it is null it will be computed on-the-fly.
    * @param inputs
    *          read entities for the map work
@@ -492,19 +492,15 @@ public final class GenMapRedUtils {
       HiveConf conf, boolean local) throws SemanticException {
     ArrayList<Path> partDir = new ArrayList<Path>();
     ArrayList<PartitionDesc> partDesc = new ArrayList<PartitionDesc>();
-    boolean isFullAcidTable = false;
+    boolean isAcidTable = false;
 
     Path tblDir = null;
     plan.setNameToSplitSample(parseCtx.getNameToSplitSample());
-    // we also collect table stats while collecting column stats.
-    if (parseCtx.getAnalyzeRewrite() != null) {
-      plan.setGatheringStats(true);
-    }
 
     if (partsList == null) {
       try {
         partsList = PartitionPruner.prune(tsOp, parseCtx, alias_id);
-        isFullAcidTable = tsOp.getConf().isFullAcidTable();
+        isAcidTable = tsOp.getConf().isAcidTable();
       } catch (SemanticException e) {
         throw e;
       }
@@ -514,20 +510,20 @@ public final class GenMapRedUtils {
     // pass both confirmed and unknown partitions through the map-reduce
     // framework
     Set<Partition> parts = partsList.getPartitions();
-    TableDesc tableSpec = Utilities.getTableDesc(tsOp.getConf().getTableMetadata());
     PartitionDesc aliasPartnDesc = null;
     try {
       if (!parts.isEmpty()) {
-        aliasPartnDesc = Utilities.getPartitionDesc(parts.iterator().next(), tableSpec);
+        aliasPartnDesc = Utilities.getPartitionDesc(parts.iterator().next());
       }
     } catch (HiveException e) {
-      LOG.error("Failed getPartitionDesc", e);
+      LOG.error(org.apache.hadoop.util.StringUtils.stringifyException(e));
       throw new SemanticException(e.getMessage(), e);
     }
 
     // The table does not have any partitions
     if (aliasPartnDesc == null) {
-      aliasPartnDesc = new PartitionDesc(tableSpec, null);
+      aliasPartnDesc = new PartitionDesc(Utilities.getTableDesc(tsOp
+          .getConf().getTableMetadata()), null);
     }
 
     Map<String, String> props = tsOp.getConf().getOpProps();
@@ -541,8 +537,8 @@ public final class GenMapRedUtils {
     long sizeNeeded = Integer.MAX_VALUE;
     int fileLimit = -1;
     if (parseCtx.getGlobalLimitCtx().isEnable()) {
-      if (isFullAcidTable) {
-        LOG.info("Skipping Global Limit optimization for an ACID table");
+      if (isAcidTable) {
+        LOG.info("Skip Global Limit optimization for ACID table");
         parseCtx.getGlobalLimitCtx().disableOpt();
       } else {
         long sizePerRow = HiveConf.getLongVar(parseCtx.getConf(),
@@ -678,18 +674,21 @@ public final class GenMapRedUtils {
         if (p == null) {
           continue;
         }
-        LOG.debug("Adding {} of table {}", p, alias_id);
+        String path = p.toString();
+        if (LOG.isDebugEnabled()) {
+          LOG.debug("Adding " + path + " of table" + alias_id);
+        }
 
         partDir.add(p);
         try {
           if (part.getTable().isPartitioned()) {
-            partDesc.add(Utilities.getPartitionDesc(part, tblDesc));
+            partDesc.add(Utilities.getPartitionDesc(part));
           }
           else {
             partDesc.add(Utilities.getPartitionDescFromTableDesc(tblDesc, part, false));
           }
         } catch (HiveException e) {
-          LOG.error("Failed to add partition description", e);
+          LOG.error(org.apache.hadoop.util.StringUtils.stringifyException(e));
           throw new SemanticException(e.getMessage(), e);
         }
       }
@@ -757,13 +756,13 @@ public final class GenMapRedUtils {
    *          current plan
    * @param local
    *          whether you need to add to map-reduce or local work
-   * @param ttDesc
+   * @param tt_desc
    *          table descriptor
-   * @throws SemanticException
+   * @throws SerDeException
    */
   public static void setTaskPlan(Path path, String alias,
       Operator<? extends OperatorDesc> topOp, MapWork plan, boolean local,
-      TableDesc ttDesc) throws SemanticException {
+      TableDesc tt_desc) throws SemanticException {
 
     if (path == null || alias == null) {
       return;
@@ -772,7 +771,7 @@ public final class GenMapRedUtils {
     if (topOp instanceof TableScanOperator) {
       try {
         Utilities.addSchemaEvolutionToTableScanOperator(
-          (StructObjectInspector) ttDesc.getSerDe().getObjectInspector(),
+          (StructObjectInspector) tt_desc.getDeserializer().getObjectInspector(),
           (TableScanOperator) topOp);
       } catch (Exception e) {
         throw new SemanticException(e);
@@ -781,7 +780,7 @@ public final class GenMapRedUtils {
 
     if (!local) {
       plan.addPathToAlias(path, alias);
-      plan.addPathToPartitionInfo(path, new PartitionDesc(ttDesc, null));
+      plan.addPathToPartitionInfo(path, new PartitionDesc(tt_desc, null));
       plan.getAliasToWork().put(alias, topOp);
     } else {
       // populate local work if needed
@@ -795,7 +794,7 @@ public final class GenMapRedUtils {
       assert localPlan.getAliasToWork().get(alias) == null;
       assert localPlan.getAliasToFetchWork().get(alias) == null;
       localPlan.getAliasToWork().put(alias, topOp);
-      localPlan.getAliasToFetchWork().put(alias, new FetchWork(new Path(alias), ttDesc));
+      localPlan.getAliasToFetchWork().put(alias, new FetchWork(new Path(alias), tt_desc));
       plan.setMapRedLocalWork(localPlan);
     }
   }
@@ -848,18 +847,19 @@ public final class GenMapRedUtils {
    *
    * @param task
    */
-  public static void setKeyAndValueDescForTaskTree(Task<?> task) {
+  public static void setKeyAndValueDescForTaskTree(Task<? extends Serializable> task) {
 
     if (task instanceof ConditionalTask) {
-      List<Task<?>> listTasks = ((ConditionalTask) task)
+      List<Task<? extends Serializable>> listTasks = ((ConditionalTask) task)
           .getListTasks();
-      for (Task<?> tsk : listTasks) {
+      for (Task<? extends Serializable> tsk : listTasks) {
         setKeyAndValueDescForTaskTree(tsk);
       }
     } else if (task instanceof ExecDriver) {
       MapredWork work = (MapredWork) task.getWork();
       work.getMapWork().deriveExplainAttributes();
-      Map<String, Operator<? extends OperatorDesc>> opMap = work.getMapWork().getAliasToWork();
+      HashMap<String, Operator<? extends OperatorDesc>> opMap = work
+          .getMapWork().getAliasToWork();
       if (opMap != null && !opMap.isEmpty()) {
         for (Operator<? extends OperatorDesc> op : opMap.values()) {
           setKeyAndValueDesc(work.getReduceWork(), op);
@@ -885,73 +885,70 @@ public final class GenMapRedUtils {
       return;
     }
 
-    for (Task<?> childTask : task.getChildTasks()) {
+    for (Task<? extends Serializable> childTask : task.getChildTasks()) {
       setKeyAndValueDescForTaskTree(childTask);
     }
   }
 
   /**
-   * Called at the end of TaskCompiler::compile
-   * This currently does the following for each map work
-   *   1.  Intern the table descriptors of the partitions
-   *   2.  derive final explain attributes based on previous compilation.
-   *
-   * The original implementation had 2 functions internTableDesc and deriveFinalExplainAttributes,
-   * respectively implementing 1 and 2 mentioned above.  This was done using recursion over the
-   * task graph.  The recursion was inefficient in a couple of ways.
-   *   - For large graphs the recursion was filling up the stack
-   *   - Instead of finding the mapworks, it was walking all possible paths from root
-   *     causing a huge performance problem.
-   *
-   * This implementation combines internTableDesc and deriveFinalExplainAttributes into 1 call.
-   * This can be done because each refers to information within Map Work and performs a specific
-   * action.
-   *
-   * The revised implementation generates all the map works from all MapReduce tasks (getMRTasks),
-   * Spark Tasks (getSparkTasks) and Tez tasks (getTezTasks).  Then for each of those map works
-   * invokes the respective call.  getMRTasks, getSparkTasks and getTezTasks iteratively walks
-   * the task graph to find the respective map works.
-   *
-   * The iterative implementation of these functions was done as part of HIVE-17195.  Before
-   * HIVE-17195, these functions were recursive and had the same issue.  So, picking this patch
-   * for an older release will also require picking HIVE-17195 at the least.
+   * Called at the end of TaskCompiler::compile to derive final
+   * explain attributes based on previous compilation.
    */
-  public static void finalMapWorkChores(
-      List<Task<?>> tasks, Configuration conf,
-      Interner<TableDesc> interner) {
-    List<ExecDriver> mrTasks = Utilities.getMRTasks(tasks);
-    if (!mrTasks.isEmpty()) {
-      for (ExecDriver execDriver : mrTasks) {
-        execDriver.getWork().getMapWork().internTable(interner);
-        execDriver.getWork().getMapWork().deriveLlap(conf, true);
+  public static void deriveFinalExplainAttributes(
+      Task<? extends Serializable> task, Configuration conf) {
+    // TODO: deriveExplainAttributes should be called here, code is too fragile to move it around.
+    if (task instanceof ConditionalTask) {
+      for (Task<? extends Serializable> tsk : ((ConditionalTask) task).getListTasks()) {
+        deriveFinalExplainAttributes(tsk, conf);
       }
-    }
-
-    List<TezTask> tezTasks = Utilities.getTezTasks(tasks);
-    if (!tezTasks.isEmpty()) {
-      for (TezTask tezTask : tezTasks) {
-        if (tezTask.getWork() instanceof TezWork) {
-          TezWork work = tezTask.getWork();
-          for (BaseWork w : work.getAllWorkUnsorted()) {
-            if (w instanceof MapWork) {
-              ((MapWork)w).internTable(interner);
-              ((MapWork)w).deriveLlap(conf, false);
-            }
-          }
+    } else if (task instanceof ExecDriver) {
+      MapredWork work = (MapredWork) task.getWork();
+      work.getMapWork().deriveLlap(conf, true);
+    } else if (task != null && (task.getWork() instanceof TezWork)) {
+      TezWork work = (TezWork)task.getWork();
+      for (BaseWork w : work.getAllWorkUnsorted()) {
+        if (w instanceof MapWork) {
+          ((MapWork)w).deriveLlap(conf, false);
+        }
+      }
+    } else if (task instanceof SparkTask) {
+      SparkWork work = (SparkWork) task.getWork();
+      for (BaseWork w : work.getAllWorkUnsorted()) {
+        if (w instanceof MapWork) {
+          ((MapWork) w).deriveLlap(conf, false);
         }
       }
     }
 
-    List<SparkTask> sparkTasks = Utilities.getSparkTasks(tasks);
-    if (!sparkTasks.isEmpty()) {
-      for (SparkTask sparkTask : sparkTasks) {
-        SparkWork work = sparkTask.getWork();
-        for (BaseWork w : work.getAllWorkUnsorted()) {
-          if (w instanceof MapWork) {
-            ((MapWork) w).internTable(interner);
-            ((MapWork) w).deriveLlap(conf, false);
-          }
+    if (task.getChildTasks() == null) {
+      return;
+    }
+
+    for (Task<? extends Serializable> childTask : task.getChildTasks()) {
+      deriveFinalExplainAttributes(childTask, conf);
+    }
+  }
+
+  public static void internTableDesc(Task<?> task, Interner<TableDesc> interner) {
+
+    if (task instanceof ConditionalTask) {
+      for (Task tsk : ((ConditionalTask) task).getListTasks()) {
+        internTableDesc(tsk, interner);
+      }
+    } else if (task instanceof ExecDriver) {
+      MapredWork work = (MapredWork) task.getWork();
+      work.getMapWork().internTable(interner);
+    } else if (task != null && (task.getWork() instanceof TezWork)) {
+      TezWork work = (TezWork)task.getWork();
+      for (BaseWork w : work.getAllWorkUnsorted()) {
+        if (w instanceof MapWork) {
+          ((MapWork)w).internTable(interner);
         }
+      }
+    }
+    if (task.getNumChild() > 0) {
+      for (Task childTask : task.getChildTasks()) {
+        internTableDesc(childTask, interner);
       }
     }
   }
@@ -981,7 +978,7 @@ public final class GenMapRedUtils {
         conf.getBoolVar(
             HiveConf.ConfVars.HIVE_MAPPER_CANNOT_SPAN_MULTIPLE_PARTITIONS);
     work.setMapperCannotSpanPartns(mapperCannotSpanPartns);
-    work.setPathToAliases(new LinkedHashMap<Path, List<String>>());
+    work.setPathToAliases(new LinkedHashMap<Path, ArrayList<String>>());
     work.setPathToPartitionInfo(new LinkedHashMap<Path, PartitionDesc>());
     work.setAliasToWork(new LinkedHashMap<String, Operator<? extends OperatorDesc>>());
     return mrWork;
@@ -1060,7 +1057,7 @@ public final class GenMapRedUtils {
    * @param opProcCtx context
    **/
   private static void splitTasks(ReduceSinkOperator op,
-      Task<?> parentTask, Task<?> childTask,
+      Task<? extends Serializable> parentTask, Task<? extends Serializable> childTask,
       GenMRProcContext opProcCtx) throws SemanticException {
     if (op.getNumParent() != 1) {
       throw new IllegalStateException("Expecting operator " + op + " to have one parent. " +
@@ -1072,7 +1069,7 @@ public final class GenMapRedUtils {
 
     // Root Task cannot depend on any other task, therefore childTask cannot be
     // a root Task
-    List<Task<?>> rootTasks = opProcCtx.getRootTasks();
+    List<Task<? extends Serializable>> rootTasks = opProcCtx.getRootTasks();
     if (rootTasks.contains(childTask)) {
       rootTasks.remove(childTask);
     }
@@ -1160,13 +1157,13 @@ public final class GenMapRedUtils {
    */
   public static void replaceMapWork(String sourceAlias, String targetAlias,
       MapWork source, MapWork target) {
-    Map<Path, List<String>> sourcePathToAliases = source.getPathToAliases();
+    Map<Path, ArrayList<String>> sourcePathToAliases = source.getPathToAliases();
     Map<Path, PartitionDesc> sourcePathToPartitionInfo = source.getPathToPartitionInfo();
     Map<String, Operator<? extends OperatorDesc>> sourceAliasToWork = source.getAliasToWork();
     Map<String, PartitionDesc> sourceAliasToPartnInfo = source.getAliasToPartnInfo();
 
-    Map<Path, List<String>> targetPathToAliases = target.getPathToAliases();
-    Map<Path, PartitionDesc> targetPathToPartitionInfo = target.getPathToPartitionInfo();
+    LinkedHashMap<Path, ArrayList<String>> targetPathToAliases = target.getPathToAliases();
+    LinkedHashMap<Path, PartitionDesc> targetPathToPartitionInfo = target.getPathToPartitionInfo();
     Map<String, Operator<? extends OperatorDesc>> targetAliasToWork = target.getAliasToWork();
     Map<String, PartitionDesc> targetAliasToPartnInfo = target.getAliasToPartnInfo();
 
@@ -1188,8 +1185,8 @@ public final class GenMapRedUtils {
     targetAliasToWork.remove(targetAlias);
     targetAliasToPartnInfo.remove(targetAlias);
     List<Path> pathsToRemove = new ArrayList<>();
-    for (Entry<Path, List<String>> entry: targetPathToAliases.entrySet()) {
-      List<String> aliases = entry.getValue();
+    for (Entry<Path, ArrayList<String>> entry: targetPathToAliases.entrySet()) {
+      ArrayList<String> aliases = entry.getValue();
       aliases.remove(targetAlias);
       if (aliases.isEmpty()) {
         pathsToRemove.add(entry.getKey());
@@ -1205,8 +1202,8 @@ public final class GenMapRedUtils {
     targetAliasToPartnInfo.putAll(sourceAliasToPartnInfo);
     targetPathToPartitionInfo.putAll(sourcePathToPartitionInfo);
     List<Path> pathsToAdd = new ArrayList<>();
-    for (Entry<Path, List<String>> entry: sourcePathToAliases.entrySet()) {
-      List<String> aliases = entry.getValue();
+    for (Entry<Path, ArrayList<String>> entry: sourcePathToAliases.entrySet()) {
+      ArrayList<String> aliases = entry.getValue();
       if (aliases.contains(sourceAlias)) {
         pathsToAdd.add(entry.getKey());
       }
@@ -1223,12 +1220,12 @@ public final class GenMapRedUtils {
 
   /**
    * @param fsInput The FileSink operator.
+   * @param ctx The MR processing context.
    * @param finalName the final destination path the merge job should output.
    * @param dependencyTask
    * @param mvTasks
    * @param conf
    * @param currTask
-   * @param lineageState
    * @throws SemanticException
 
    * create a Map-only merge job using CombineHiveInputFormat for all partitions with
@@ -1248,54 +1245,36 @@ public final class GenMapRedUtils {
    *          v
    *          FileSinkOperator (fsMerge)
    *
-   *          Here the pathToPartitionInfo &amp; pathToAlias will remain the same, which means the paths
+   *          Here the pathToPartitionInfo & pathToAlias will remain the same, which means the paths
    *          do
    *          not contain the dynamic partitions (their parent). So after the dynamic partitions are
    *          created (after the first job finished before the moveTask or ConditionalTask start),
-   *          we need to change the pathToPartitionInfo &amp; pathToAlias to include the dynamic
+   *          we need to change the pathToPartitionInfo & pathToAlias to include the dynamic
    *          partition
    *          directories.
    *
    */
-  public static void createMRWorkForMergingFiles(FileSinkOperator fsInput,
-      Path finalName, DependencyCollectionTask dependencyTask,
-      List<Task<MoveWork>> mvTasks, HiveConf conf,
-      Task<?> currTask, LineageState lineageState)
-      throws SemanticException {
+  public static void createMRWorkForMergingFiles (FileSinkOperator fsInput,
+   Path finalName, DependencyCollectionTask dependencyTask,
+   List<Task<MoveWork>> mvTasks, HiveConf conf,
+   Task<? extends Serializable> currTask) throws SemanticException {
 
     //
     // 1. create the operator tree
     //
     FileSinkDesc fsInputDesc = fsInput.getConf();
-    if (Utilities.FILE_OP_LOGGER.isTraceEnabled()) {
-      Utilities.FILE_OP_LOGGER.trace("Creating merge work from " + System.identityHashCode(fsInput)
-          + " with write ID " + (fsInputDesc.isMmTable() ? fsInputDesc.getTableWriteId() : null)
-          + " into " + finalName);
-    }
 
-    boolean isBlockMerge = (conf.getBoolVar(ConfVars.HIVEMERGERCFILEBLOCKLEVEL) &&
-        fsInputDesc.getTableInfo().getInputFileFormatClass().equals(RCFileInputFormat.class)) ||
-        (conf.getBoolVar(ConfVars.HIVEMERGEORCFILESTRIPELEVEL) &&
-            fsInputDesc.getTableInfo().getInputFileFormatClass().equals(OrcInputFormat.class));
-
+    // Create a TableScan operator
     RowSchema inputRS = fsInput.getSchema();
-    Long srcMmWriteId = fsInputDesc.isMmTable() ? fsInputDesc.getTableWriteId() : null;
-    FileSinkDesc fsOutputDesc = null;
-    TableScanOperator tsMerge = null;
-    if (!isBlockMerge) {
-      // Create a TableScan operator
-      tsMerge = GenMapRedUtils.createTemporaryTableScanOperator(
-          fsInput.getCompilationOpContext(), inputRS);
+    TableScanOperator tsMerge = GenMapRedUtils.createTemporaryTableScanOperator(
+        fsInput.getCompilationOpContext(), inputRS);
 
-      // Create a FileSink operator
-      TableDesc ts = (TableDesc) fsInputDesc.getTableInfo().clone();
-      Path mergeDest = srcMmWriteId == null ? finalName : finalName.getParent();
-      fsOutputDesc = new FileSinkDesc(mergeDest, ts, conf.getBoolVar(ConfVars.COMPRESSRESULT));
-      fsOutputDesc.setMmWriteId(srcMmWriteId);
-      fsOutputDesc.setIsMerge(true);
-      // Create and attach the filesink for the merge.
-      OperatorFactory.getAndMakeChild(fsOutputDesc, inputRS, tsMerge);
-    }
+    // Create a FileSink operator
+    TableDesc ts = (TableDesc) fsInputDesc.getTableInfo().clone();
+    FileSinkDesc fsOutputDesc = new FileSinkDesc(finalName, ts,
+      conf.getBoolVar(ConfVars.COMPRESSRESULT));
+    FileSinkOperator fsOutput = (FileSinkOperator) OperatorFactory.getAndMakeChild(
+      fsOutputDesc, inputRS, tsMerge);
 
     // If the input FileSinkOperator is a dynamic partition enabled, the tsMerge input schema
     // needs to include the partition column, and the fsOutput should have
@@ -1303,7 +1282,7 @@ public final class GenMapRedUtils {
     DynamicPartitionCtx dpCtx = fsInputDesc.getDynPartCtx();
     if (dpCtx != null && dpCtx.getNumDPCols() > 0) {
       // adding DP ColumnInfo to the RowSchema signature
-      List<ColumnInfo> signature = inputRS.getSignature();
+      ArrayList<ColumnInfo> signature = inputRS.getSignature();
       String tblAlias = fsInputDesc.getTableInfo().getTableName();
       for (String dpCol : dpCtx.getDPColNames()) {
         ColumnInfo colInfo = new ColumnInfo(dpCol,
@@ -1313,14 +1292,12 @@ public final class GenMapRedUtils {
       }
       inputRS.setSignature(signature);
 
-      if (!isBlockMerge) {
       // create another DynamicPartitionCtx, which has a different input-to-DP column mapping
-        DynamicPartitionCtx dpCtx2 = new DynamicPartitionCtx(dpCtx);
-        fsOutputDesc.setDynPartCtx(dpCtx2);
-      }
+      DynamicPartitionCtx dpCtx2 = new DynamicPartitionCtx(dpCtx);
+      fsOutputDesc.setDynPartCtx(dpCtx2);
 
       // update the FileSinkOperator to include partition columns
-      usePartitionColumns(fsInputDesc.getTableInfo().getProperties(), fsInputDesc.getTable(), dpCtx.getDPColNames());
+      usePartitionColumns(fsInputDesc.getTableInfo().getProperties(), dpCtx.getDPColNames());
     } else {
       // non-partitioned table
       fsInputDesc.getTableInfo().getProperties().remove(
@@ -1330,11 +1307,16 @@ public final class GenMapRedUtils {
     //
     // 2. Constructing a conditional task consisting of a move task and a map reduce task
     //
-    Path inputDirName = fsInputDesc.getMergeInputDirName();
+    MoveWork dummyMv = new MoveWork(null, null, null,
+         new LoadFileDesc(fsInputDesc.getFinalDirName(), finalName, true, null, null), false);
     MapWork cplan;
     Serializable work;
 
-    if (isBlockMerge) {
+    if ((conf.getBoolVar(ConfVars.HIVEMERGERCFILEBLOCKLEVEL) &&
+        fsInputDesc.getTableInfo().getInputFileFormatClass().equals(RCFileInputFormat.class)) ||
+        (conf.getBoolVar(ConfVars.HIVEMERGEORCFILESTRIPELEVEL) &&
+            fsInputDesc.getTableInfo().getInputFileFormatClass().equals(OrcInputFormat.class))) {
+
       cplan = GenMapRedUtils.createMergeTask(fsInputDesc, finalName,
           dpCtx != null && dpCtx.getNumDPCols() > 0, fsInput.getCompilationOpContext());
       if (conf.getVar(ConfVars.HIVE_EXECUTION_ENGINE).equals("tez")) {
@@ -1367,31 +1349,37 @@ public final class GenMapRedUtils {
     cplan.setInputformat("org.apache.hadoop.hive.ql.io.CombineHiveInputFormat");
     // NOTE: we should gather stats in MR1 rather than MR2 at merge job since we don't
     // know if merge MR2 will be triggered at execution time
-    MoveWork dummyMv = null;
-    if (srcMmWriteId == null) {
-      // Only create the movework for non-MM table. No action needed for a MM table.
-      dummyMv = new MoveWork(null, null, null,
-          new LoadFileDesc(inputDirName, finalName, true, null, null, false), false);
-    }
-    // Use the original fsOp path here in case of MM - while the new FSOP merges files inside the
-    // MM directory, the original MoveTask still commits based on the parent. Note that this path
-    // can only be triggered for a merge that's part of insert for now; MM tables do not support
-    // concatenate. Keeping the old logic for non-MM tables with temp directories and stuff.
-    Path fsopPath = srcMmWriteId != null ? fsInputDesc.getFinalDirName() : finalName;
-
-    Task<MoveWork> mvTask = GenMapRedUtils.findMoveTaskForFsopOutput(mvTasks, fsopPath, fsInputDesc.isMmTable(),
-        fsInputDesc.isDirectInsert(), fsInputDesc.getMoveTaskId(), fsInputDesc.getAcidOperation());
+    Task<MoveWork> mvTask = GenMapRedUtils.findMoveTask(mvTasks, fsOutput);
     ConditionalTask cndTsk = GenMapRedUtils.createCondTask(conf, currTask, dummyMv, work,
-        fsInputDesc.getMergeInputDirName(), finalName, mvTask, dependencyTask, lineageState);
+        fsInputDesc.getFinalDirName(), finalName, mvTask, dependencyTask);
 
     // keep the dynamic partition context in conditional task resolver context
     ConditionalResolverMergeFilesCtx mrCtx =
         (ConditionalResolverMergeFilesCtx) cndTsk.getResolverCtx();
     mrCtx.setDPCtx(fsInputDesc.getDynPartCtx());
     mrCtx.setLbCtx(fsInputDesc.getLbCtx());
-
   }
 
+  /**
+   * Make the move task in the GenMRProcContext following the FileSinkOperator a dependent of all
+   * possible subtrees branching from the ConditionalTask.
+   *
+   * @param newOutput
+   * @param cndTsk
+   * @param mvTasks
+   * @param hconf
+   * @param dependencyTask
+   */
+  public static void linkMoveTask(FileSinkOperator newOutput,
+      ConditionalTask cndTsk, List<Task<MoveWork>> mvTasks, HiveConf hconf,
+      DependencyCollectionTask dependencyTask) {
+
+    Task<MoveWork> mvTask = GenMapRedUtils.findMoveTask(mvTasks, newOutput);
+
+    for (Task<? extends Serializable> tsk : cndTsk.getListTasks()) {
+      linkMoveTask(mvTask, tsk, hconf, dependencyTask);
+    }
+  }
 
   /**
    * Follows the task tree down from task and makes all leaves parents of mvTask
@@ -1401,8 +1389,8 @@ public final class GenMapRedUtils {
    * @param hconf
    * @param dependencyTask
    */
-  private static void linkMoveTask(Task<MoveWork> mvTask,
-      Task<?> task, HiveConf hconf,
+  public static void linkMoveTask(Task<MoveWork> mvTask,
+      Task<? extends Serializable> task, HiveConf hconf,
       DependencyCollectionTask dependencyTask) {
 
     if (task.getDependentTasks() == null || task.getDependentTasks().isEmpty()) {
@@ -1410,7 +1398,7 @@ public final class GenMapRedUtils {
       addDependentMoveTasks(mvTask, hconf, task, dependencyTask);
     } else {
       // Otherwise, for each child run this method recursively
-      for (Task<?> childTask : task.getDependentTasks()) {
+      for (Task<? extends Serializable> childTask : task.getDependentTasks()) {
         linkMoveTask(mvTask, childTask, hconf, dependencyTask);
       }
     }
@@ -1428,7 +1416,7 @@ public final class GenMapRedUtils {
    * @param dependencyTask
    */
   public static void addDependentMoveTasks(Task<MoveWork> mvTask, HiveConf hconf,
-      Task<?> parentTask, DependencyCollectionTask dependencyTask) {
+      Task<? extends Serializable> parentTask, DependencyCollectionTask dependencyTask) {
 
     if (mvTask != null) {
       if (dependencyTask != null) {
@@ -1481,51 +1469,20 @@ public final class GenMapRedUtils {
    *          HiveConf
    */
   public static void addStatsTask(FileSinkOperator nd, MoveTask mvTask,
-      Task<?> currTask, HiveConf hconf) {
+      Task<? extends Serializable> currTask, HiveConf hconf) {
 
     MoveWork mvWork = mvTask.getWork();
-    BasicStatsWork statsWork = null;
-    Table table = null;
-    boolean truncate = false;
+    StatsWork statsWork = null;
     if (mvWork.getLoadTableWork() != null) {
-      statsWork = new BasicStatsWork(mvWork.getLoadTableWork());
-      truncate = mvWork.getLoadTableWork().getReplace();
-      String tableName = mvWork.getLoadTableWork().getTable().getTableName();
-      try {
-        // For partitioned CTAS, the table has not been created, but we can retrieve it
-        // from the loadTableWork. For rest of query types, we just retrieve it from
-        // metastore.
-        table = mvWork.getLoadTableWork().getMdTable() != null ?
-            mvWork.getLoadTableWork().getMdTable() :
-            Hive.get().getTable(SessionState.get().getCurrentDatabase(), tableName);
-      } catch (HiveException e) {
-        throw new RuntimeException("unexpected; table should be present already..: " + tableName, e);
-      }
+      statsWork = new StatsWork(mvWork.getLoadTableWork());
     } else if (mvWork.getLoadFileWork() != null) {
-      statsWork = new BasicStatsWork(mvWork.getLoadFileWork());
-
-      truncate = true;
-      if (mvWork.getLoadFileWork().getCtasCreateTableDesc() != null) {
-        try {
-          table = mvWork.getLoadFileWork().getCtasCreateTableDesc().toTable(hconf);
-        } catch (HiveException e) {
-          LOG.debug("can't pre-create table for CTAS", e);
-          table = null;
-        }
-      } else if (mvWork.getLoadFileWork().getCreateViewDesc() != null) {
-        // CREATE MATERIALIZED VIEW ...
-        try {
-          table = mvWork.getLoadFileWork().getCreateViewDesc().toTable(hconf);
-        } catch (HiveException e) {
-          LOG.debug("can't pre-create table for MV", e);
-          table = null;
-        }
-      } else {
-        throw new RuntimeException("unexpected; this should be a CTAS or a CREATE/REBUILD MV - however no desc present");
-      }
+      statsWork = new StatsWork(mvWork.getLoadFileWork());
     }
     assert statsWork != null : "Error when generating StatsTask";
 
+    statsWork.setSourceTask(currTask);
+    statsWork.setStatsReliable(hconf.getBoolVar(ConfVars.HIVE_STATS_RELIABLE));
+    statsWork.setStatsTmpDir(nd.getConf().getStatsTmpDir());
     if (currTask.getWork() instanceof MapredWork) {
       MapredWork mrWork = (MapredWork) currTask.getWork();
       mrWork.getMapWork().setGatheringStats(true);
@@ -1544,13 +1501,10 @@ public final class GenMapRedUtils {
       }
     }
 
-    StatsWork columnStatsWork = new StatsWork(table, statsWork, hconf);
-    columnStatsWork.collectStatsFromAggregator(nd.getConf());
-
-    columnStatsWork.truncateExisting(truncate);
-
-    columnStatsWork.setSourceTask(currTask);
-    Task<?> statsTask = TaskFactory.get(columnStatsWork);
+    // AggKey in StatsWork is used for stats aggregation while StatsAggPrefix
+    // in FileSinkDesc is used for stats publishing. They should be consistent.
+    statsWork.setAggKey(nd.getConf().getStatsAggPrefix());
+    Task<? extends Serializable> statsTask = TaskFactory.get(statsWork, hconf);
 
     // subscribe feeds from the MoveTask so that MoveTask can forward the list
     // of dynamic partition list to the StatsTask
@@ -1588,7 +1542,7 @@ public final class GenMapRedUtils {
     TableScanOperator topOp,  FileSinkDesc fsDesc) {
 
     ArrayList<String> aliases = new ArrayList<String>();
-    Path inputDir = StringInternUtils.internUriStringsInPath(fsDesc.getMergeInputDirName());
+    Path inputDir = StringInternUtils.internUriStringsInPath(fsDesc.getFinalDirName());
     String inputDirStr = inputDir.toString().intern();
     TableDesc tblDesc = fsDesc.getTableInfo();
     aliases.add(inputDirStr); // dummy alias: just use the input path
@@ -1610,16 +1564,15 @@ public final class GenMapRedUtils {
    *
    * @param fsInputDesc
    * @param finalName
-   * @param hasDynamicPartitions
    * @param ctx
+   * @param inputFormatClass
    * @return MergeWork if table is stored as RCFile or ORCFile,
    *         null otherwise
    */
   public static MapWork createMergeTask(FileSinkDesc fsInputDesc, Path finalName,
       boolean hasDynamicPartitions, CompilationOpContext ctx) throws SemanticException {
 
-    Path inputDir = fsInputDesc.getMergeInputDirName();
-
+    Path inputDir = fsInputDesc.getFinalDirName();
     TableDesc tblDesc = fsInputDesc.getTableInfo();
 
     List<Path> inputDirs = new ArrayList<Path>(1);
@@ -1643,13 +1596,10 @@ public final class GenMapRedUtils {
           + " format other than RCFile or ORCFile");
     }
 
-    if (Utilities.FILE_OP_LOGGER.isTraceEnabled()) {
-      Utilities.FILE_OP_LOGGER.trace("creating mergefilework from " + inputDirs + " to " + finalName);
-    }
     // create the merge file work
     MergeFileWork work = new MergeFileWork(inputDirs, finalName,
-        hasDynamicPartitions, tblDesc.getInputFileFormatClass().getName(), tblDesc);
-    Map<Path, List<String>> pathToAliases = new LinkedHashMap<>();
+        hasDynamicPartitions, tblDesc.getInputFileFormatClass().getName());
+    LinkedHashMap<Path, ArrayList<String>> pathToAliases = new LinkedHashMap<>();
     pathToAliases.put(inputDir, inputDirstr);
     work.setMapperCannotSpanPartns(true);
     work.setPathToAliases(pathToAliases);
@@ -1668,12 +1618,6 @@ public final class GenMapRedUtils {
     } else {
       fmd = new OrcFileMergeDesc();
     }
-    fmd.setIsMmTable(fsInputDesc.isMmTable());
-    boolean isCompactionTable = AcidUtils.isCompactionTable(tblDesc.getProperties());
-    fmd.setIsCompactionTable(isCompactionTable);
-    fmd.setWriteId(fsInputDesc.getTableWriteId());
-    int stmtId = fsInputDesc.getStatementId();
-    fmd.setStmtId(stmtId == -1 ? 0 : stmtId);
     fmd.setDpCtx(fsInputDesc.getDynPartCtx());
     fmd.setOutputPath(finalName);
     fmd.setHasDynamicPartitions(work.hasDynamicPartitions());
@@ -1727,12 +1671,10 @@ public final class GenMapRedUtils {
    *
    * @param condInputPath A path that the ConditionalTask uses as input for its sub-tasks.
    * @param linkedMoveWork A MoveWork that the ConditionalTask uses to link to its sub-tasks.
-   * @param lineageState A LineageState used to track what changes.
    * @return A new MoveWork that has the Conditional input path as source and the linkedMoveWork as target.
    */
   @VisibleForTesting
-  protected static MoveWork mergeMovePaths(Path condInputPath, MoveWork linkedMoveWork,
-      LineageState lineageState) {
+  protected static MoveWork mergeMovePaths(Path condInputPath, MoveWork linkedMoveWork) {
     MoveWork newWork = new MoveWork(linkedMoveWork);
     LoadFileDesc fileDesc = null;
     LoadTableDesc tableDesc = null;
@@ -1740,11 +1682,9 @@ public final class GenMapRedUtils {
     if (linkedMoveWork.getLoadFileWork() != null) {
       fileDesc = new LoadFileDesc(linkedMoveWork.getLoadFileWork());
       fileDesc.setSourcePath(condInputPath);
-      lineageState.updateDirToOpMap(condInputPath, linkedMoveWork.getLoadFileWork().getSourcePath());
     } else if (linkedMoveWork.getLoadTableWork() != null) {
       tableDesc = new LoadTableDesc(linkedMoveWork.getLoadTableWork());
       tableDesc.setSourcePath(condInputPath);
-      lineageState.updateDirToOpMap(condInputPath, linkedMoveWork.getLoadTableWork().getSourcePath());
     } else {
       throw new IllegalArgumentException("Merging a path with a MoveWork with multi-files work is not allowed.");
     }
@@ -1774,29 +1714,20 @@ public final class GenMapRedUtils {
    *          a MoveTask that may be linked to the conditional sub-tasks
    * @param dependencyTask
    *          a dependency task that may be linked to the conditional sub-tasks
-   * @param lineageState
-   *          to track activity
    * @return The conditional task
    */
-  @SuppressWarnings("unchecked")
   private static ConditionalTask createCondTask(HiveConf conf,
-      Task<?> currTask, MoveWork mvWork, Serializable mergeWork,
-      Path condInputPath, Path condOutputPath, Task<MoveWork> moveTaskToLink,
-      DependencyCollectionTask dependencyTask, LineageState lineageState) {
-    if (Utilities.FILE_OP_LOGGER.isTraceEnabled()) {
-      Utilities.FILE_OP_LOGGER.trace("Creating conditional merge task for " + condInputPath);
-    }
-    // Create a dummy task if no move is needed.
-    Serializable moveWork = mvWork != null ? mvWork : new DependencyCollectionWork();
+      Task<? extends Serializable> currTask, MoveWork dummyMoveWork, Serializable mergeWork,
+      Path condInputPath, Path condOutputPath, Task<MoveWork> moveTaskToLink, DependencyCollectionTask dependencyTask) {
 
-    // Note: this should never happen for mm tables.
     boolean shouldMergeMovePaths = (moveTaskToLink != null && dependencyTask == null
         && shouldMergeMovePaths(conf, condInputPath, condOutputPath, moveTaskToLink.getWork()));
 
-    Serializable workForMoveOnlyTask = moveWork;
+    MoveWork workForMoveOnlyTask;
     if (shouldMergeMovePaths) {
-      workForMoveOnlyTask = mergeMovePaths(condInputPath, moveTaskToLink.getWork(),
-          lineageState);
+      workForMoveOnlyTask = mergeMovePaths(condInputPath, moveTaskToLink.getWork());
+    } else {
+      workForMoveOnlyTask = dummyMoveWork;
     }
 
     // There are 3 options for this ConditionalTask:
@@ -1805,12 +1736,10 @@ public final class GenMapRedUtils {
     // 3) Merge some partitions and move other partitions (i.e. merge some partitions and don't
     // merge others) in this case the merge is done first followed by the move to prevent
     // conflicts.
-    // TODO: if we are not dealing with concatenate DDL, we should not create a merge+move path
-    //       because it should be impossible to get incompatible outputs.
-    Task<?> mergeOnlyMergeTask = TaskFactory.get(mergeWork);
-    Task<?> moveOnlyMoveTask = TaskFactory.get(workForMoveOnlyTask);
-    Task<?> mergeAndMoveMergeTask = TaskFactory.get(mergeWork);
-    Task<?> mergeAndMoveMoveTask = TaskFactory.get(moveWork);
+    Task<? extends Serializable> mergeOnlyMergeTask = TaskFactory.get(mergeWork, conf);
+    Task<? extends Serializable> moveOnlyMoveTask = TaskFactory.get(workForMoveOnlyTask, conf);
+    Task<? extends Serializable> mergeAndMoveMergeTask = TaskFactory.get(mergeWork, conf);
+    Task<? extends Serializable> mergeAndMoveMoveTask = TaskFactory.get(dummyMoveWork, conf);
 
     // NOTE! It is necessary merge task is the parent of the move task, and not
     // the other way around, for the proper execution of the execute method of
@@ -1823,12 +1752,12 @@ public final class GenMapRedUtils {
 
     ConditionalWork cndWork = new ConditionalWork(listWorks);
 
-    List<Task<?>> listTasks = new ArrayList<Task<?>>();
+    List<Task<? extends Serializable>> listTasks = new ArrayList<Task<? extends Serializable>>();
     listTasks.add(moveOnlyMoveTask);
     listTasks.add(mergeOnlyMergeTask);
     listTasks.add(mergeAndMoveMergeTask);
 
-    ConditionalTask cndTsk = (ConditionalTask) TaskFactory.get(cndWork);
+    ConditionalTask cndTsk = (ConditionalTask) TaskFactory.get(cndWork, conf);
     cndTsk.setListTasks(listTasks);
 
     // create resolver
@@ -1851,7 +1780,6 @@ public final class GenMapRedUtils {
       addDependentMoveTasks(moveTaskToLink, conf, moveOnlyMoveTask, dependencyTask);
     }
 
-
     addDependentMoveTasks(moveTaskToLink, conf, mergeOnlyMergeTask, dependencyTask);
     addDependentMoveTasks(moveTaskToLink, conf, mergeAndMoveMoveTask, dependencyTask);
 
@@ -1869,45 +1797,21 @@ public final class GenMapRedUtils {
         .isSkewedStoredAsDir();
   }
 
-  public static Task<MoveWork> findMoveTaskForFsopOutput(List<Task<MoveWork>> mvTasks, Path fsopFinalDir,
-      boolean isMmFsop, boolean isDirectInsert, String fsoMoveTaskId, AcidUtils.Operation acidOperation) {
+  public static Task<MoveWork> findMoveTask(
+      List<Task<MoveWork>> mvTasks, FileSinkOperator fsOp) {
     // find the move task
     for (Task<MoveWork> mvTsk : mvTasks) {
       MoveWork mvWork = mvTsk.getWork();
       Path srcDir = null;
-      boolean isLfd = false;
-      String moveTaskId = null;
-      AcidUtils.Operation moveTaskWriteType = null;
       if (mvWork.getLoadFileWork() != null) {
         srcDir = mvWork.getLoadFileWork().getSourcePath();
-        isLfd = true;
-        if (isMmFsop || isDirectInsert) {
-          srcDir = srcDir.getParent();
-        }
-        moveTaskId = mvWork.getLoadFileWork().getMoveTaskId();
-        moveTaskWriteType = mvWork.getLoadFileWork().getWriteType();
       } else if (mvWork.getLoadTableWork() != null) {
         srcDir = mvWork.getLoadTableWork().getSourcePath();
-        moveTaskId = mvWork.getLoadTableWork().getMoveTaskId();
-        moveTaskWriteType = mvWork.getLoadTableWork().getWriteType();
-      }
-      if (Utilities.FILE_OP_LOGGER.isTraceEnabled()) {
-        Utilities.FILE_OP_LOGGER.trace("Observing MoveWork " + System.identityHashCode(mvWork)
-          + " with " + srcDir + "(from " + (isLfd ? "LFD" : "LTD") + ") while looking for "
-          + fsopFinalDir + "(mm = " + isMmFsop + ")");
       }
 
-      if ((srcDir != null) && srcDir.equals(fsopFinalDir)) {
-        if (isDirectInsert || isMmFsop) {
-          if (moveTaskId.equals(fsoMoveTaskId)) {
-            // If the ACID direct insert is on, the MoveTasks cannot be identified by the srcDir as
-            // in this case the srcDir is always the root directory of the table.
-            // We need to consider the ACID write type to identify the MoveTasks.
-            return mvTsk;
-          }
-        } else {
-          return mvTsk;
-        }
+      if ((srcDir != null)
+          && (srcDir.equals(fsOp.getConf().getFinalDirName()))) {
+        return mvTsk;
       }
     }
     return null;
@@ -1915,66 +1819,70 @@ public final class GenMapRedUtils {
 
   /**
    * Returns true iff the fsOp requires a merge
+   * @param mvTasks
+   * @param hconf
+   * @param fsOp
+   * @param currTask
+   * @param isInsertTable
+   * @return
    */
-  public static boolean isMergeRequired(List<Task<MoveWork>> mvTasks, HiveConf hconf,
-      FileSinkOperator fsOp, Task<?> currTask, boolean isInsertTable) {
+  public static boolean isMergeRequired(List<Task<MoveWork>> mvTasks, HiveConf hconf, FileSinkOperator fsOp,
+      Task<? extends Serializable> currTask, boolean isInsertTable) {
+
     // Has the user enabled merging of files for map-only jobs or for all jobs
-    if (mvTasks == null  || mvTasks.isEmpty()) {
-      return false;
-    }
+    if ((mvTasks != null) && (!mvTasks.isEmpty())) {
 
-    // no need of merging if the move is to a local file system
-    // We are looking based on the original FSOP, so use the original path as is.
-    MoveTask mvTask = (MoveTask) GenMapRedUtils.findMoveTaskForFsopOutput(mvTasks, fsOp.getConf().getFinalDirName(),
-        fsOp.getConf().isMmTable(), fsOp.getConf().isDirectInsert(), fsOp.getConf().getMoveTaskId(), fsOp.getConf().getAcidOperation());
+      // no need of merging if the move is to a local file system
+      MoveTask mvTask = (MoveTask) GenMapRedUtils.findMoveTask(mvTasks, fsOp);
 
-    // TODO: wtf?!! why is this in this method? This has nothing to do with anything.
-    if (isInsertTable && hconf.getBoolVar(ConfVars.HIVESTATSAUTOGATHER)
-        && !fsOp.getConf().isMaterialization()) {
-      // mark the MapredWork and FileSinkOperator for gathering stats
-      fsOp.getConf().setGatherStats(true);
-      fsOp.getConf().setStatsReliable(hconf.getBoolVar(ConfVars.HIVE_STATS_RELIABLE));
-      if (mvTask != null && !mvTask.hasFollowingStatsTask()) {
-        GenMapRedUtils.addStatsTask(fsOp, mvTask, currTask, hconf);
+      if (mvTask != null && isInsertTable && hconf.getBoolVar(ConfVars.HIVESTATSAUTOGATHER)
+          && !fsOp.getConf().isMaterialization()) {
+        // mark the MapredWork and FileSinkOperator for gathering stats
+        fsOp.getConf().setGatherStats(true);
+        fsOp.getConf().setStatsReliable(hconf.getBoolVar(ConfVars.HIVE_STATS_RELIABLE));
+        if (!mvTask.hasFollowingStatsTask()) {
+          GenMapRedUtils.addStatsTask(fsOp, mvTask, currTask, hconf);
+        }
       }
-    }
 
-    if (mvTask == null || mvTask.isLocal() || !fsOp.getConf().canBeMerged()) {
-      return false;
-    }
+      if ((mvTask != null) && !mvTask.isLocal() && fsOp.getConf().canBeMerged()) {
 
-    if (currTask.getWork() instanceof TezWork) {
-      // tez blurs the boundary between map and reduce, thus it has it's own config
-      return hconf.getBoolVar(ConfVars.HIVEMERGETEZFILES);
-    } else if (currTask.getWork() instanceof SparkWork) {
-      // spark has its own config for merging
-      return hconf.getBoolVar(ConfVars.HIVEMERGESPARKFILES);
-    }
-    return isMergeRequiredForMr(hconf, fsOp, currTask);
-  }
+        if (currTask.getWork() instanceof TezWork) {
+          // tez blurs the boundary between map and reduce, thus it has it's own
+          // config
+          return hconf.getBoolVar(ConfVars.HIVEMERGETEZFILES);
+        } else if (currTask.getWork() instanceof SparkWork) {
+          // spark has its own config for merging
+          return hconf.getBoolVar(ConfVars.HIVEMERGESPARKFILES);
+        }
 
-  private static boolean isMergeRequiredForMr(HiveConf hconf,
-      FileSinkOperator fsOp, Task<?> currTask) {
-    if (fsOp.getConf().isLinkedFileSink()) {
-      // If the user has HIVEMERGEMAPREDFILES set to false, the idea was the
-      // number of reducers are few, so the number of files anyway are small.
-      // However, with this optimization, we are increasing the number of files
-      // possibly by a big margin. So, merge aggresively.
-      return (hconf.getBoolVar(ConfVars.HIVEMERGEMAPFILES) ||
-          hconf.getBoolVar(ConfVars.HIVEMERGEMAPREDFILES));
-    }
-    // There are separate configuration parameters to control whether to
-    // merge for a map-only job
-    // or for a map-reduce job
-    if (currTask.getWork() instanceof MapredWork) {
-      ReduceWork reduceWork = ((MapredWork) currTask.getWork()).getReduceWork();
-      boolean mergeMapOnly =
-        hconf.getBoolVar(ConfVars.HIVEMERGEMAPFILES) && reduceWork == null;
-      boolean mergeMapRed =
-        hconf.getBoolVar(ConfVars.HIVEMERGEMAPREDFILES) &&
-        reduceWork != null;
-      if (mergeMapOnly || mergeMapRed) {
-        return true;
+        if (fsOp.getConf().isLinkedFileSink()) {
+          // If the user has HIVEMERGEMAPREDFILES set to false, the idea was the
+          // number of reducers are few, so the number of files anyway are small.
+          // However, with this optimization, we are increasing the number of files
+          // possibly by a big margin. So, merge aggresively.
+          if (hconf.getBoolVar(ConfVars.HIVEMERGEMAPFILES) ||
+              hconf.getBoolVar(ConfVars.HIVEMERGEMAPREDFILES)) {
+            return true;
+          }
+        } else {
+          // There are separate configuration parameters to control whether to
+          // merge for a map-only job
+          // or for a map-reduce job
+          if (currTask.getWork() instanceof MapredWork) {
+            ReduceWork reduceWork = ((MapredWork) currTask.getWork()).getReduceWork();
+            boolean mergeMapOnly =
+              hconf.getBoolVar(ConfVars.HIVEMERGEMAPFILES) && reduceWork == null;
+            boolean mergeMapRed =
+              hconf.getBoolVar(ConfVars.HIVEMERGEMAPREDFILES) &&
+              reduceWork != null;
+            if (mergeMapOnly || mergeMapRed) {
+              return true;
+            }
+          } else {
+            return false;
+          }
+        }
       }
     }
     return false;
@@ -1992,55 +1900,39 @@ public final class GenMapRedUtils {
    * @param dependencyTask
    * @return
    */
-  public static Path createMoveTask(Task<?> currTask, boolean chDir,
+  public static Path createMoveTask(Task<? extends Serializable> currTask, boolean chDir,
       FileSinkOperator fsOp, ParseContext parseCtx, List<Task<MoveWork>> mvTasks,
       HiveConf hconf, DependencyCollectionTask dependencyTask) {
 
     Path dest = null;
 
-    FileSinkDesc fileSinkDesc = fsOp.getConf();
-    boolean isMmTable = fileSinkDesc.isMmTable();
-    boolean isDirectInsert = fileSinkDesc.isDirectInsert();
     if (chDir) {
-      dest = fileSinkDesc.getMergeInputDirName();
-      /**
-       * Skip temporary file generation for:
-       * 1. MM Tables
-       * 2. INSERT operation on full ACID table
-       */
-      if (!isMmTable && !isDirectInsert) {
-        // generate the temporary file
-        // it must be on the same file system as the current destination
-        Context baseCtx = parseCtx.getContext();
+      FileSinkDesc fileSinkDesc = fsOp.getConf();
+      dest = fileSinkDesc.getFinalDirName();
 
-        // Create the required temporary file in the HDFS location if the destination
-        // path of the FileSinkOperator table is a blobstore path.
-        Path tmpDir = baseCtx.getTempDirForFinalJobPath(fileSinkDesc.getDestPath());
+      // generate the temporary file
+      // it must be on the same file system as the current destination
+      Context baseCtx = parseCtx.getContext();
 
-        // Change all the linked file sink descriptors
-        if (fileSinkDesc.isLinkedFileSink()) {
-          for (FileSinkDesc fsConf : fileSinkDesc.getLinkedFileSinkDesc()) {
-            fsConf.setDirName(new Path(tmpDir, fsConf.getDirName().getName()));
-            if (Utilities.FILE_OP_LOGGER.isTraceEnabled()) {
-              Utilities.FILE_OP_LOGGER.trace("createMoveTask setting tmpDir for LinkedFileSink chDir "
-                + fsConf.getDirName() + "; dest was " + fileSinkDesc.getDestPath());
-            }
-          }
-        } else {
-          fileSinkDesc.setDirName(tmpDir);
-          if (Utilities.FILE_OP_LOGGER.isTraceEnabled()) {
-            Utilities.FILE_OP_LOGGER.trace("createMoveTask setting tmpDir chDir "
-              + tmpDir + "; dest was " + fileSinkDesc.getDestPath());
-          }
+      // Create the required temporary file in the HDFS location if the destination
+      // path of the FileSinkOperator table is a blobstore path.
+      Path tmpDir = baseCtx.getTempDirForPath(fileSinkDesc.getDestPath(), true);
+
+      // Change all the linked file sink descriptors
+      if (fileSinkDesc.isLinkedFileSink()) {
+        for (FileSinkDesc fsConf:fileSinkDesc.getLinkedFileSinkDesc()) {
+          fsConf.setParentDir(tmpDir);
+          fsConf.setDirName(new Path(tmpDir, fsConf.getDirName().getName()));
         }
+      } else {
+        fileSinkDesc.setDirName(tmpDir);
       }
     }
 
     Task<MoveWork> mvTask = null;
 
     if (!chDir) {
-      mvTask = GenMapRedUtils.findMoveTaskForFsopOutput(mvTasks, fsOp.getConf().getFinalDirName(), isMmTable,
-          isDirectInsert, fsOp.getConf().getMoveTaskId(), fsOp.getConf().getAcidOperation());
+      mvTask = GenMapRedUtils.findMoveTask(mvTasks, fsOp);
     }
 
     // Set the move task to be dependent on the current task
@@ -2077,6 +1969,33 @@ public final class GenMapRedUtils {
     return Collections.emptyList();
   }
 
+  public static List<Path> getInputPathsForPartialScan(TableScanOperator tableScanOp,
+          Appendable aggregationKey) throws SemanticException {
+    List<Path> inputPaths = new ArrayList<Path>();
+    switch (tableScanOp.getConf().getTableMetadata().getTableSpec().specType) {
+      case TABLE_ONLY:
+        inputPaths.add(tableScanOp.getConf().getTableMetadata()
+                .getTableSpec().tableHandle.getPath());
+        break;
+      case STATIC_PARTITION:
+        Partition part = tableScanOp.getConf().getTableMetadata()
+                .getTableSpec().partHandle;
+        try {
+          aggregationKey.append(Warehouse.makePartPath(part.getSpec()));
+        } catch (MetaException e) {
+          throw new SemanticException(ErrorMsg.ANALYZE_TABLE_PARTIALSCAN_AGGKEY.getMsg(
+              part.getDataLocation().toString() + e.getMessage()));
+        } catch (IOException e) {
+          throw new RuntimeException(e);
+        }
+        inputPaths.add(part.getDataLocation());
+        break;
+      default:
+        assert false;
+    }
+    return inputPaths;
+  }
+
   public static Set<String> findAliases(final MapWork work, Operator<?> startOp) {
     Set<String> aliases = new LinkedHashSet<String>();
     for (Operator<?> topOp : findTopOps(startOp, null)) {
@@ -2109,23 +2028,6 @@ public final class GenMapRedUtils {
     }
     return null;
   }
-
-  static void usePartitionColumns(Properties properties, Table table, List<String> partColNames) {
-    if (properties.containsKey(org.apache.hadoop.hive.metastore.api.hive_metastoreConstants.META_TABLE_PARTITION_COLUMNS)) {
-      usePartitionColumns(properties, partColNames);
-    } else {
-      List<FieldSchema> partCols = table.getPartCols();
-      String partNames = partCols.stream().map(FieldSchema::getName).collect(Collectors.joining("/"));
-      String partTypes = partCols.stream().map(FieldSchema::getType).collect(Collectors.joining(":"));
-      properties.setProperty(
-        org.apache.hadoop.hive.metastore.api.hive_metastoreConstants.META_TABLE_PARTITION_COLUMNS,
-        partNames);
-      properties.setProperty(
-        org.apache.hadoop.hive.metastore.api.hive_metastoreConstants.META_TABLE_PARTITION_COLUMN_TYPES,
-        partTypes);
-    }
-  }
-
   /**
    * Uses only specified partition columns.
    * Provided properties should be pre-populated with partition column names and types.
