@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -17,6 +17,9 @@
  */
 package org.apache.hadoop.hive.ql.optimizer.physical;
 
+import java.io.Serializable;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Stack;
@@ -28,7 +31,7 @@ import org.apache.hadoop.hive.ql.exec.ConditionalTask;
 import org.apache.hadoop.hive.ql.exec.Task;
 import org.apache.hadoop.hive.ql.exec.Utilities;
 import org.apache.hadoop.hive.ql.exec.mr.MapRedTask;
-import org.apache.hadoop.hive.ql.lib.SemanticDispatcher;
+import org.apache.hadoop.hive.ql.lib.Dispatcher;
 import org.apache.hadoop.hive.ql.lib.Node;
 import org.apache.hadoop.hive.ql.lib.TaskGraphWalker.TaskGraphWalkerContext;
 import org.apache.hadoop.hive.ql.parse.SemanticException;
@@ -37,7 +40,7 @@ import org.apache.hadoop.hive.ql.plan.MapWork;
 /**
  * Common iteration methods for converting joins and sort-merge joins.
  */
-public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
+public abstract class AbstractJoinTaskDispatcher implements Dispatcher {
 
   protected final PhysicalContext physicalContext;
 
@@ -45,18 +48,18 @@ public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
     physicalContext = context;
   }
 
-  public abstract Task<?> processCurrentTask(MapRedTask currTask,
+  public abstract Task<? extends Serializable> processCurrentTask(MapRedTask currTask,
       ConditionalTask conditionalTask, Context context)
       throws SemanticException;
 
   protected void replaceTaskWithConditionalTask(
-      Task<?> currTask, ConditionalTask cndTsk) {
+      Task<? extends Serializable> currTask, ConditionalTask cndTsk) {
     // add this task into task tree
     // set all parent tasks
-    List<Task<?>> parentTasks = currTask.getParentTasks();
+    List<Task<? extends Serializable>> parentTasks = currTask.getParentTasks();
     currTask.setParentTasks(null);
     if (parentTasks != null) {
-      for (Task<?> tsk : parentTasks) {
+      for (Task<? extends Serializable> tsk : parentTasks) {
         // make new generated task depends on all the parent tasks of current task.
         tsk.addDependentTask(cndTsk);
         // remove the current task from its original parent task's dependent task
@@ -68,13 +71,13 @@ public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
       physicalContext.addToRootTask(cndTsk);
     }
     // set all child tasks
-    List<Task<?>> oldChildTasks = currTask.getChildTasks();
+    List<Task<? extends Serializable>> oldChildTasks = currTask.getChildTasks();
     if (oldChildTasks != null) {
-      for (Task<?> tsk : cndTsk.getListTasks()) {
+      for (Task<? extends Serializable> tsk : cndTsk.getListTasks()) {
         if (tsk.equals(currTask)) {
           continue;
         }
-        for (Task<?> oldChild : oldChildTasks) {
+        for (Task<? extends Serializable> oldChild : oldChildTasks) {
           tsk.addDependentTask(oldChild);
         }
       }
@@ -84,13 +87,13 @@ public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
   // Replace the task with the new task. Copy the children and parents of the old
   // task to the new task.
   protected void replaceTask(
-      Task<?> currTask, Task<?> newTask) {
+      Task<? extends Serializable> currTask, Task<? extends Serializable> newTask) {
     // add this task into task tree
     // set all parent tasks
-    List<Task<?>> parentTasks = currTask.getParentTasks();
+    List<Task<? extends Serializable>> parentTasks = currTask.getParentTasks();
     currTask.setParentTasks(null);
     if (parentTasks != null) {
-      for (Task<?> tsk : parentTasks) {
+      for (Task<? extends Serializable> tsk : parentTasks) {
         // remove the current task from its original parent task's dependent task
         tsk.removeDependentTask(currTask);
         // make new generated task depends on all the parent tasks of current task.
@@ -103,10 +106,10 @@ public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
     }
 
     // set all child tasks
-    List<Task<?>> oldChildTasks = currTask.getChildTasks();
+    List<Task<? extends Serializable>> oldChildTasks = currTask.getChildTasks();
     currTask.setChildTasks(null);
     if (oldChildTasks != null) {
-      for (Task<?> tsk : oldChildTasks) {
+      for (Task<? extends Serializable> tsk : oldChildTasks) {
         // remove the current task from its original parent task's dependent task
         tsk.getParentTasks().remove(currTask);
         // make new generated task depends on all the parent tasks of current task.
@@ -116,8 +119,8 @@ public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
   }
 
   public long getTotalKnownInputSize(Context context, MapWork currWork,
-      Map<Path, List<String>> pathToAliases,
-      Map<String, Long> aliasToSize) throws SemanticException {
+      Map<Path, ArrayList<String>> pathToAliases,
+      HashMap<String, Long> aliasToSize) throws SemanticException {
     try {
       // go over all the input paths, and calculate a known total size, known
       // size for each input alias.
@@ -127,7 +130,7 @@ public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
       // is chosen as big table, what's the total size of left tables, which
       // are going to be small tables.
       long aliasTotalKnownInputSize = 0L;
-      for (Map.Entry<Path, List<String>> entry : pathToAliases.entrySet()) {
+      for (Map.Entry<Path, ArrayList<String>> entry : pathToAliases.entrySet()) {
         Path path = entry.getKey();
         List<String> aliasList = entry.getValue();
         ContentSummary cs = context.getCS(path);
@@ -137,7 +140,7 @@ public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
             aliasTotalKnownInputSize += size;
             Long es = aliasToSize.get(alias);
             if (es == null) {
-              es = Long.valueOf(0);
+              es = new Long(0);
             }
             es += size;
             aliasToSize.put(alias, es);
@@ -146,7 +149,8 @@ public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
       }
       return aliasTotalKnownInputSize;
     } catch (Exception e) {
-      throw new SemanticException("Generate Map Join Task Error: ", e);
+      e.printStackTrace();
+      throw new SemanticException("Generate Map Join Task Error: " + e.getMessage());
     }
   }
 
@@ -159,21 +163,21 @@ public abstract class AbstractJoinTaskDispatcher implements SemanticDispatcher {
 
     TaskGraphWalkerContext walkerCtx = (TaskGraphWalkerContext) nodeOutputs[0];
 
-    Task<?> currTask = (Task<?>) nd;
+    Task<? extends Serializable> currTask = (Task<? extends Serializable>) nd;
     // not map reduce task or not conditional task, just skip
     if (currTask.isMapRedTask()) {
       if (currTask instanceof ConditionalTask) {
         // get the list of task
-        List<Task<?>> taskList = ((ConditionalTask) currTask).getListTasks();
-        for (Task<?> tsk : taskList) {
+        List<Task<? extends Serializable>> taskList = ((ConditionalTask) currTask).getListTasks();
+        for (Task<? extends Serializable> tsk : taskList) {
           if (tsk.isMapRedTask()) {
-            Task<?> newTask = this.processCurrentTask((MapRedTask) tsk,
+            Task<? extends Serializable> newTask = this.processCurrentTask((MapRedTask) tsk,
                 ((ConditionalTask) currTask), physicalContext.getContext());
             walkerCtx.addToDispatchList(newTask);
           }
         }
       } else {
-        Task<?> newTask =
+        Task<? extends Serializable> newTask =
             this.processCurrentTask((MapRedTask) currTask, null, physicalContext.getContext());
         walkerCtx.addToDispatchList(newTask);
       }
