@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,7 +18,6 @@
 
 package org.apache.hadoop.hive.ql.plan;
 
-import org.apache.hadoop.hive.ql.optimizer.signature.Signature;
 import org.apache.hadoop.hive.ql.plan.Explain.Level;
 import org.apache.hadoop.hive.ql.plan.Explain.Vectorization;
 
@@ -46,25 +45,19 @@ public class LimitDesc extends AbstractOperatorDesc {
     this.limit = limit;
   }
 
-  public LimitDesc(LimitDesc conf) {
-    this(conf.getOffset() == null ? 0 : conf.getOffset() , conf.getLimit());
-    this.leastRows = conf.leastRows;
-  }
-
   /**
    * not to print the offset if it is 0 we need to turn null.
    * use Integer instead of int.
    */
   @Explain(displayName = "Offset of rows", explainLevels = { Level.USER, Level.DEFAULT, Level.EXTENDED })
   public Integer getOffset() {
-    return (offset == 0) ? null : Integer.valueOf(offset);
+    return (offset == 0) ? null : new Integer(offset);
   }
 
   public void setOffset(Integer offset) {
     this.offset = offset;
   }
 
-  @Signature
   @Explain(displayName = "Number of rows", explainLevels = { Level.USER, Level.DEFAULT, Level.EXTENDED })
   public int getLimit() {
     return limit;
@@ -84,28 +77,17 @@ public class LimitDesc extends AbstractOperatorDesc {
 
   public class LimitOperatorExplainVectorization extends OperatorExplainVectorization {
 
-    public LimitOperatorExplainVectorization(LimitDesc limitDesc, VectorLimitDesc vectorLimitDesc) {
+    public LimitOperatorExplainVectorization(LimitDesc limitDesc, VectorDesc vectorDesc) {
       // Native vectorization supported.
-      super(vectorLimitDesc, true);
+      super(vectorDesc, true);
     }
   }
 
   @Explain(vectorization = Vectorization.OPERATOR, displayName = "Limit Vectorization", explainLevels = { Level.DEFAULT, Level.EXTENDED })
   public LimitOperatorExplainVectorization getLimitVectorization() {
-    VectorLimitDesc vectorLimitDesc = (VectorLimitDesc) getVectorDesc();
-    if (vectorLimitDesc == null) {
+    if (vectorDesc == null) {
       return null;
     }
-    return new LimitOperatorExplainVectorization(this, vectorLimitDesc);
+    return new LimitOperatorExplainVectorization(this, vectorDesc);
   }
-
-  @Override
-  public boolean isSame(OperatorDesc other) {
-    if (getClass().getName().equals(other.getClass().getName())) {
-      LimitDesc otherDesc = (LimitDesc) other;
-      return getLimit() == otherDesc.getLimit();
-    }
-    return false;
-  }
-
 }
