@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -27,8 +27,6 @@ import org.apache.hadoop.hive.common.type.HiveDecimal;
 import org.apache.hadoop.hive.ql.exec.Description;
 import org.apache.hadoop.hive.ql.exec.PTFPartition;
 import org.apache.hadoop.hive.ql.exec.UDFArgumentTypeException;
-import org.apache.hadoop.hive.ql.exec.vector.VectorizedUDAFs;
-import org.apache.hadoop.hive.ql.exec.vector.expressions.aggregates.gen.*;
 import org.apache.hadoop.hive.ql.metadata.HiveException;
 import org.apache.hadoop.hive.ql.parse.SemanticException;
 import org.apache.hadoop.hive.ql.plan.ptf.PTFExpressionDef;
@@ -56,8 +54,8 @@ import org.apache.hadoop.hive.serde2.typeinfo.DecimalTypeInfo;
 import org.apache.hadoop.hive.serde2.typeinfo.PrimitiveTypeInfo;
 import org.apache.hadoop.hive.serde2.typeinfo.TypeInfo;
 import org.apache.hadoop.hive.serde2.typeinfo.TypeInfoFactory;
-import org.apache.hadoop.hive.serde2.typeinfo.TypeInfoUtils;
 import org.apache.hadoop.io.LongWritable;
+import org.apache.hadoop.util.StringUtils;
 
 /**
  * GenericUDAFAverage.
@@ -119,17 +117,12 @@ public class GenericUDAFAverage extends AbstractGenericUDAFResolver {
     return eval;
   }
 
-  @VectorizedUDAFs({
-    VectorUDAFAvgLong.class, VectorUDAFAvgLongComplete.class,
-    VectorUDAFAvgDouble.class, VectorUDAFAvgDoubleComplete.class,
-    VectorUDAFAvgTimestamp.class, VectorUDAFAvgTimestampComplete.class,
-    VectorUDAFAvgPartial2.class, VectorUDAFAvgFinal.class})
   public static class GenericUDAFAverageEvaluatorDouble extends AbstractGenericUDAFAverageEvaluator<Double> {
 
     @Override
     public void doReset(AverageAggregationBuffer<Double> aggregation) throws HiveException {
       aggregation.count = 0;
-      aggregation.sum = Double.valueOf(0);
+      aggregation.sum = new Double(0);
       aggregation.uniqueObjects = new HashSet<ObjectInspectorObject>();
     }
 
@@ -224,7 +217,7 @@ public class GenericUDAFAverage extends AbstractGenericUDAFResolver {
             throws HiveException {
           AverageAggregationBuffer<Double> myagg = (AverageAggregationBuffer<Double>) ss.wrappedBuf;
           return myagg.count == 0 ? null : new Object[] {
-              myagg.sum, myagg.count};
+              new Double(myagg.sum), myagg.count };
         }
 
       };
@@ -235,41 +228,16 @@ public class GenericUDAFAverage extends AbstractGenericUDAFResolver {
         WindowFrameDef winFrame,
         PTFPartition partition,
         List<PTFExpressionDef> parameters,
-        ObjectInspector outputOI,
-        boolean nullsLast) {
+        ObjectInspector outputOI) {
       try {
-        return new BasePartitionEvaluator.AvgPartitionDoubleEvaluator(this, winFrame, partition,
-            parameters, inputOI, outputOI, nullsLast);
+        return new BasePartitionEvaluator.AvgPartitionDoubleEvaluator(this, winFrame, partition, parameters, inputOI, outputOI);
       } catch(HiveException e) {
-        return super.createPartitionEvaluator(winFrame, partition, parameters, outputOI, nullsLast);
+        return super.createPartitionEvaluator(winFrame, partition, parameters, outputOI);
       }
     }
   }
 
-  @VectorizedUDAFs({
-    VectorUDAFAvgDecimal.class, VectorUDAFAvgDecimalComplete.class,
-    VectorUDAFAvgDecimal64ToDecimal.class, VectorUDAFAvgDecimal64ToDecimalComplete.class,
-    VectorUDAFAvgDecimalPartial2.class, VectorUDAFAvgDecimalFinal.class})
   public static class GenericUDAFAverageEvaluatorDecimal extends AbstractGenericUDAFAverageEvaluator<HiveDecimal> {
-
-    private int resultPrecision = -1;
-    private int resultScale = -1;
-
-    @Override
-    public ObjectInspector init(Mode m, ObjectInspector[] parameters)
-        throws HiveException {
-
-      // Intercept result ObjectInspector so we can extract the DECIMAL precision and scale.
-      ObjectInspector resultOI = super.init(m, parameters);
-      if (m == Mode.COMPLETE || m == Mode.FINAL) {
-        DecimalTypeInfo decimalTypeInfo =
-            (DecimalTypeInfo)
-                TypeInfoUtils.getTypeInfoFromObjectInspector(resultOI);
-        resultPrecision = decimalTypeInfo.getPrecision();
-        resultScale = decimalTypeInfo.getScale();
-      }
-      return resultOI;
-    }
 
     @Override
     public void doReset(AverageAggregationBuffer<HiveDecimal> aggregation) throws HiveException {
@@ -291,18 +259,16 @@ public class GenericUDAFAverage extends AbstractGenericUDAFResolver {
     }
 
     private DecimalTypeInfo deriveResultDecimalTypeInfo() {
-      return deriveResultDecimalTypeInfo(inputOI.precision(), inputOI.scale(), mode);
-    }
-
-    public static DecimalTypeInfo deriveResultDecimalTypeInfo(int precision, int scale, Mode mode) {
+      int prec = inputOI.precision();
+      int scale = inputOI.scale();
       if (mode == Mode.FINAL || mode == Mode.COMPLETE) {
-        int intPart = precision - scale;
+        int intPart = prec - scale;
         // The avg() result type has the same number of integer digits and 4 more decimal digits.
         scale = Math.min(scale + 4, HiveDecimal.MAX_SCALE - intPart);
         return TypeInfoFactory.getDecimalTypeInfo(intPart + scale, scale);
       } else {
         // For intermediate sum field
-        return GenericUDAFAverage.deriveSumFieldTypeInfo(precision, scale);
+        return GenericUDAFAverage.deriveSumFieldTypeInfo(prec, scale);
       }
     }
 
@@ -357,7 +323,6 @@ public class GenericUDAFAverage extends AbstractGenericUDAFResolver {
       } else {
         HiveDecimalWritable result = new HiveDecimalWritable(HiveDecimal.ZERO);
         result.set(aggregation.sum.divide(HiveDecimal.create(aggregation.count)));
-        result.mutateEnforcePrecisionScale(resultPrecision, resultScale);
         return result;
       }
     }
@@ -415,13 +380,11 @@ public class GenericUDAFAverage extends AbstractGenericUDAFResolver {
         WindowFrameDef winFrame,
         PTFPartition partition,
         List<PTFExpressionDef> parameters,
-        ObjectInspector outputOI,
-        boolean nullsLast) {
+        ObjectInspector outputOI) {
       try {
-        return new BasePartitionEvaluator.AvgPartitionHiveDecimalEvaluator(this, winFrame,
-            partition, parameters, inputOI, outputOI, nullsLast);
+        return new BasePartitionEvaluator.AvgPartitionHiveDecimalEvaluator(this, winFrame, partition, parameters, inputOI, outputOI);
       } catch(HiveException e) {
-        return super.createPartitionEvaluator(winFrame, partition, parameters, outputOI, nullsLast);
+        return super.createPartitionEvaluator(winFrame, partition, parameters, outputOI);
       }
     }
   }
@@ -551,7 +514,7 @@ public class GenericUDAFAverage extends AbstractGenericUDAFResolver {
         } catch (NumberFormatException e) {
           if (!warned) {
             warned = true;
-            LOG.warn("Ignoring similar exceptions", e);
+            LOG.warn("Ignoring similar exceptions: " + StringUtils.stringifyException(e));
           }
         }
       }
