@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -17,10 +17,7 @@
  */
 package org.apache.hadoop.hive.ql.io.orc;
 
-import static org.apache.hadoop.hive.ql.io.sarg.ConvertAstToSearchArg.sargToKryo;
 import static org.junit.Assert.*;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 import java.io.DataInput;
 import java.io.DataOutput;
@@ -31,15 +28,15 @@ import java.net.URISyntaxException;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.security.PrivilegedExceptionAction;
+import java.sql.Date;
+import java.sql.Timestamp;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.BitSet;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -47,19 +44,23 @@ import java.util.Set;
 import java.util.TimeZone;
 import java.util.TreeSet;
 
+import org.apache.commons.codec.binary.Base64;
 import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.fs.*;
+import org.apache.hadoop.fs.BlockLocation;
+import org.apache.hadoop.fs.FSDataInputStream;
+import org.apache.hadoop.fs.FSDataOutputStream;
+import org.apache.hadoop.fs.FSInputStream;
+import org.apache.hadoop.fs.FileStatus;
+import org.apache.hadoop.fs.FileSystem;
+import org.apache.hadoop.fs.LocatedFileStatus;
+import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.fs.RemoteIterator;
 import org.apache.hadoop.fs.permission.FsPermission;
-import org.apache.hadoop.hdfs.protocol.HdfsLocatedFileStatus;
-import org.apache.hadoop.hdfs.protocol.LocatedBlocks;
-import org.apache.hadoop.hive.common.ValidReadTxnList;
 import org.apache.hadoop.hive.common.ValidTxnList;
-import org.apache.hadoop.hive.common.ValidWriteIdList;
-import org.apache.hadoop.hive.common.type.Date;
 import org.apache.hadoop.hive.common.type.HiveDecimal;
-import org.apache.hadoop.hive.common.type.Timestamp;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.hive.conf.HiveConf.ConfVars;
+import org.apache.hadoop.hive.llap.TypeDesc;
 import org.apache.hadoop.hive.metastore.api.hive_metastoreConstants;
 import org.apache.hadoop.hive.ql.exec.SerializationUtilities;
 import org.apache.hadoop.hive.ql.exec.Utilities;
@@ -75,9 +76,6 @@ import org.apache.hadoop.hive.ql.exec.vector.VectorizedRowBatch;
 import org.apache.hadoop.hive.ql.exec.vector.VectorizedRowBatchCtx;
 import org.apache.hadoop.hive.ql.io.AcidInputFormat;
 import org.apache.hadoop.hive.ql.io.AcidOutputFormat;
-import org.apache.hadoop.hive.ql.io.AcidUtils;
-import org.apache.hadoop.hive.ql.io.AcidUtils.Directory;
-import org.apache.hadoop.hive.ql.io.BucketCodec;
 import org.apache.hadoop.hive.ql.io.CombineHiveInputFormat;
 import org.apache.hadoop.hive.ql.io.HiveInputFormat;
 import org.apache.hadoop.hive.ql.io.HiveOutputFormat;
@@ -99,6 +97,7 @@ import org.apache.hadoop.hive.ql.plan.VectorPartitionDesc;
 import org.apache.hadoop.hive.serde.serdeConstants;
 import org.apache.hadoop.hive.serde2.ColumnProjectionUtils;
 import org.apache.hadoop.hive.serde2.AbstractSerDe;
+import org.apache.hadoop.hive.serde2.SerDeUtils;
 import org.apache.hadoop.hive.serde2.objectinspector.ObjectInspector;
 import org.apache.hadoop.hive.serde2.objectinspector.ObjectInspectorFactory;
 import org.apache.hadoop.hive.serde2.objectinspector.StructField;
@@ -122,12 +121,9 @@ import org.apache.hadoop.mapred.RecordWriter;
 import org.apache.hadoop.mapred.Reporter;
 import org.apache.hadoop.security.UserGroupInformation;
 import org.apache.hadoop.util.Progressable;
-import org.apache.orc.FileFormatException;
 import org.apache.orc.OrcConf;
 import org.apache.orc.OrcProto;
-import org.apache.orc.StripeInformation;
 import org.apache.orc.TypeDescription;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
@@ -135,9 +131,19 @@ import org.junit.rules.TestName;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.esotericsoftware.kryo.Kryo;
+import com.esotericsoftware.kryo.io.Output;
+
 @SuppressWarnings({ "deprecation", "unchecked", "rawtypes" })
 public class TestInputOutputFormat {
   private static final Logger LOG = LoggerFactory.getLogger(TestInputOutputFormat.class);
+
+  public static String toKryo(SearchArgument sarg) {
+    Output out = new Output(4 * 1024, 10 * 1024 * 1024);
+    new Kryo().writeObject(out, sarg);
+    out.close();
+    return Base64.encodeBase64String(out.toBytes());
+  }
 
   Path workDir = new Path(System.getProperty("test.tmp.dir","target/tmp"));
   static final int MILLIS_IN_DAY = 1000 * 60 * 60 * 24;
@@ -178,8 +184,8 @@ public class TestInputOutputFormat {
       decimalValue = HiveDecimal.create(x);
       long millisUtc = x * MILLIS_IN_DAY;
       millisUtc -= LOCAL_TIMEZONE.getOffset(millisUtc);
-      dateValue = Date.ofEpochMilli(millisUtc);
-      timestampValue = Timestamp.ofEpochMilli(millisUtc);
+      dateValue = new Date(millisUtc);
+      timestampValue = new Timestamp(millisUtc);
     }
 
     @Override
@@ -226,7 +232,7 @@ public class TestInputOutputFormat {
       return "booleanValue,byteValue,shortValue,intValue,longValue,floatValue,doubleValue,stringValue,decimalValue,dateValue,timestampValue";
     }
     static String getColumnTypesProperty() {
-      return "boolean:tinyint:smallint:int:bigint:float:double:string:decimal(38,18):date:timestamp";
+      return "boolean:tinyint:smallint:int:bigint:float:double:string:decimal:date:timestamp";
     }
   }
 
@@ -521,7 +527,7 @@ public class TestInputOutputFormat {
           final OrcInputFormat.Context context = new OrcInputFormat.Context(
               conf, n);
           OrcInputFormat.FileGenerator gen = new OrcInputFormat.FileGenerator(
-              context, () -> fs, new MockPath(fs, "mock:/a/b"), false, null);
+              context, fs, new MockPath(fs, "mock:/a/b"), false, null);
           List<SplitStrategy<?>> splitStrategies = createSplitStrategies(context, gen);
           assertEquals(1, splitStrategies.size());
           final SplitStrategy splitStrategy = splitStrategies.get(0);
@@ -544,7 +550,7 @@ public class TestInputOutputFormat {
           final OrcInputFormat.Context context = new OrcInputFormat.Context(
               conf, n);
           OrcInputFormat.FileGenerator gen = new OrcInputFormat.FileGenerator(
-              context, () -> fs, new MockPath(fs, "mock:/a/b"), false, null);
+              context, fs, new MockPath(fs, "mock:/a/b"), false, null);
           List<SplitStrategy<?>> splitStrategies = createSplitStrategies(context, gen);
           assertEquals(1, splitStrategies.size());
           final SplitStrategy splitStrategy = splitStrategies.get(0);
@@ -562,14 +568,14 @@ public class TestInputOutputFormat {
   @Test
   public void testFileGenerator() throws Exception {
     OrcInputFormat.Context context = new OrcInputFormat.Context(conf);
-    final MockFileSystem fs = new MockFileSystem(conf,
+    MockFileSystem fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/part-00", 1000, new byte[1]),
         new MockFile("mock:/a/b/part-01", 1000, new byte[1]),
         new MockFile("mock:/a/b/_part-02", 1000, new byte[1]),
         new MockFile("mock:/a/b/.part-03", 1000, new byte[1]),
         new MockFile("mock:/a/b/part-04", 1000, new byte[1]));
     OrcInputFormat.FileGenerator gen =
-      new OrcInputFormat.FileGenerator(context, () -> fs,
+      new OrcInputFormat.FileGenerator(context, fs,
           new MockPath(fs, "mock:/a/b"), false, null);
     List<OrcInputFormat.SplitStrategy<?>> splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
@@ -577,13 +583,13 @@ public class TestInputOutputFormat {
 
     conf.set("mapreduce.input.fileinputformat.split.maxsize", "500");
     context = new OrcInputFormat.Context(conf);
-    final MockFileSystem fs1 = new MockFileSystem(conf,
+    fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/part-00", 1000, new byte[1000]),
         new MockFile("mock:/a/b/part-01", 1000, new byte[1000]),
         new MockFile("mock:/a/b/_part-02", 1000, new byte[1000]),
         new MockFile("mock:/a/b/.part-03", 1000, new byte[1000]),
         new MockFile("mock:/a/b/part-04", 1000, new byte[1000]));
-    gen = new OrcInputFormat.FileGenerator(context, () -> fs1,
+    gen = new OrcInputFormat.FileGenerator(context, fs,
             new MockPath(fs, "mock:/a/b"), false, null);
     splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
@@ -593,26 +599,23 @@ public class TestInputOutputFormat {
   @Test
   public void testACIDSplitStrategy() throws Exception {
     conf.set("bucket_count", "2");
-    conf.setBoolean(hive_metastoreConstants.TABLE_IS_TRANSACTIONAL, true);
     OrcInputFormat.Context context = new OrcInputFormat.Context(conf);
-    conf.set(ValidTxnList.VALID_TXNS_KEY,
-        new ValidReadTxnList(new long[0], new BitSet(), 1000, Long.MAX_VALUE).writeToString());
     MockFileSystem fs = new MockFileSystem(conf,
-        new MockFile("mock:/a/delta_000_001/bucket_000000", 1000, new byte[1], new MockBlock("host1")),
-        new MockFile("mock:/a/delta_000_001/bucket_000001", 1000, new byte[1], new MockBlock("host1")),
-        new MockFile("mock:/a/delta_001_002/bucket_000000", 1000, new byte[1], new MockBlock("host1")),
-        new MockFile("mock:/a/delta_001_002/bucket_000001", 1000, new byte[1], new MockBlock("host1")));
+        new MockFile("mock:/a/delta_000_001/part-00", 1000, new byte[1], new MockBlock("host1")),
+        new MockFile("mock:/a/delta_000_001/part-01", 1000, new byte[1], new MockBlock("host1")),
+        new MockFile("mock:/a/delta_001_002/part-02", 1000, new byte[1], new MockBlock("host1")),
+        new MockFile("mock:/a/delta_001_002/part-03", 1000, new byte[1], new MockBlock("host1")));
     OrcInputFormat.FileGenerator gen =
-        new OrcInputFormat.FileGenerator(context, () -> fs,
+        new OrcInputFormat.FileGenerator(context, fs,
             new MockPath(fs, "mock:/a"), false, null);
     List<OrcInputFormat.SplitStrategy<?>> splitStrategies = createSplitStrategies(context, gen);
     assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.ACIDSplitStrategy);
     List<OrcSplit> splits = ((OrcInputFormat.ACIDSplitStrategy)splitStrategies.get(0)).getSplits();
     ColumnarSplitSizeEstimator splitSizeEstimator = new ColumnarSplitSizeEstimator();
     for (OrcSplit split: splits) {
-      assertEquals(1, splitSizeEstimator.getEstimatedSize(split));
+      assertEquals(Integer.MAX_VALUE, splitSizeEstimator.getEstimatedSize(split));
     }
-    assertEquals(4, splits.size());
+    assertEquals(2, splits.size());
   }
 
   @Test
@@ -620,16 +623,14 @@ public class TestInputOutputFormat {
     conf.set("bucket_count", "2");
     conf.set(hive_metastoreConstants.TABLE_IS_TRANSACTIONAL, "true");
     conf.set(hive_metastoreConstants.TABLE_TRANSACTIONAL_PROPERTIES, "default");
-    conf.set(ValidTxnList.VALID_TXNS_KEY,
-        new ValidReadTxnList(new long[0], new BitSet(), 1000, Long.MAX_VALUE).writeToString());
     OrcInputFormat.Context context = new OrcInputFormat.Context(conf);
 
     // Case 1: Test with just originals => Single split strategy with two splits.
-    final MockFileSystem fs = new MockFileSystem(conf,
+    MockFileSystem fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/000000_0", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/b/000000_1", 1000, new byte[1], new MockBlock("host1")));
     OrcInputFormat.FileGenerator gen =
-        new OrcInputFormat.FileGenerator(context, () -> fs,
+        new OrcInputFormat.FileGenerator(context, fs,
             new MockPath(fs, "mock:/a"), false, null);
     List<OrcInputFormat.SplitStrategy<?>> splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
@@ -643,13 +644,12 @@ public class TestInputOutputFormat {
 
     // Case 2: Test with originals and base => Single split strategy with two splits on compacted
     // base since the presence of a base will make the originals obsolete.
-    final MockFileSystem fs1 = new MockFileSystem(conf,
+    fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/000000_0", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/b/000000_1", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/base_0000001/bucket_00000", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/base_0000001/bucket_00001", 1000, new byte[1], new MockBlock("host1")));
-    gen = new OrcInputFormat.FileGenerator(context, () -> fs1, new MockPath(fs1,
-        "mock:/a"), false, null);
+    gen = new OrcInputFormat.FileGenerator(context, fs, new MockPath(fs, "mock:/a"), false, null);
     splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
     assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.ACIDSplitStrategy);
@@ -661,15 +661,14 @@ public class TestInputOutputFormat {
     assertFalse(splits.get(1).isOriginal());
 
     // Case 3: Test with originals and deltas => Two split strategies with two splits for each.
-    final MockFileSystem fs3 = new MockFileSystem(conf,
+    fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/000000_0", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/b/000000_1", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/delta_0000001_0000001_0000/bucket_00000", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/delta_0000001_0000001_0000/bucket_00001", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/delete_delta_0000001_0000001_0000/bucket_00000", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/delete_delta_0000001_0000001_0000/bucket_00001", 1000, new byte[1], new MockBlock("host1")));
-    gen = new OrcInputFormat.FileGenerator(context, () -> fs3,
-        new MockPath(fs3, "mock:/a"), false, null);
+    gen = new OrcInputFormat.FileGenerator(context, fs, new MockPath(fs, "mock:/a"), false, null);
     splitStrategies = createSplitStrategies(context, gen);
     assertEquals(2, splitStrategies.size());
     assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.ACIDSplitStrategy);
@@ -694,13 +693,12 @@ public class TestInputOutputFormat {
     // The reason why we are able to do so is because the valid user data has already been considered
     // as base for the covered buckets. Hence, the uncovered buckets do not have any relevant
     // data and we can just ignore them.
-    final MockFileSystem fs4 = new MockFileSystem(conf,
+    fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/000000_0", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/delta_0000001_0000001_0000/bucket_00000", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/delete_delta_0000001_0000001_0000/bucket_00000", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/delete_delta_0000001_0000001_0000/bucket_00001", 1000, new byte[1], new MockBlock("host1")));
-    gen = new OrcInputFormat.FileGenerator(context, () -> fs4, new MockPath(fs4,
-        "mock:/a"), false, null);
+    gen = new OrcInputFormat.FileGenerator(context, fs, new MockPath(fs, "mock:/a"), false, null);
     splitStrategies = createSplitStrategies(context, gen);
     assertEquals(2, splitStrategies.size());
     assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.ACIDSplitStrategy);
@@ -716,7 +714,7 @@ public class TestInputOutputFormat {
 
     // Case 5: Test with originals, compacted_base, insert_deltas, delete_deltas (exhaustive test)
     // This should just generate one strategy with splits for base and insert_deltas.
-    final MockFileSystem fs5 = new MockFileSystem(conf,
+    fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/000000_0", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/b/000000_1", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/base_0000001/bucket_00000", 1000, new byte[1], new MockBlock("host1")),
@@ -725,8 +723,7 @@ public class TestInputOutputFormat {
         new MockFile("mock:/a/delta_0000002_0000002_0000/bucket_00001", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/delete_delta_0000002_0000002_0000/bucket_00000", 1000, new byte[1], new MockBlock("host1")),
         new MockFile("mock:/a/delete_delta_0000002_0000002_0000/bucket_00001", 1000, new byte[1], new MockBlock("host1")));
-    gen = new OrcInputFormat.FileGenerator(context, () -> fs5, new MockPath(fs5,
-        "mock:/a"), false, null);
+    gen = new OrcInputFormat.FileGenerator(context, fs, new MockPath(fs, "mock:/a"), false, null);
     splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
     assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.ACIDSplitStrategy);
@@ -743,86 +740,17 @@ public class TestInputOutputFormat {
   }
 
   @Test
-  public void testFSCallsVectorizedOrcAcidRowBatchReader() throws IOException {
-    try {
-      MockFileSystem fs = new MockFileSystem(conf);
-      MockFileSystem.addGlobalFile(
-        new MockFile("mock:/a/base_0000001/bucket_00000", 1000, new byte[1], new MockBlock("host1")));
-      MockFileSystem.addGlobalFile(
-        new MockFile("mock:/a/base_0000001/bucket_00001", 1000, new byte[1], new MockBlock("host1")));
-      MockFileSystem.addGlobalFile(
-        new MockFile("mock:/a/base_0000001/bucket_00002", 1000, new byte[1], new MockBlock("host1")));
-      MockFileSystem.addGlobalFile(
-        new MockFile("mock:/a/base_0000001/bucket_00003", 1000, new byte[1], new MockBlock("host1")));
-      MockFileSystem.addGlobalFile(
-        new MockFile("mock:/a/delta_0000002_0000002_0000/bucket_00000", 1000, new byte[1], new MockBlock("host1")));
-      MockFileSystem.addGlobalFile(
-        new MockFile("mock:/a/delta_0000002_0000002_0000/bucket_00001", 1000, new byte[1], new MockBlock("host1")));
-      MockFileSystem.addGlobalFile(
-        new MockFile("mock:/a/delta_0000002_0000002_0000/bucket_00002", 1000, new byte[1], new MockBlock("host1")));
-      MockFileSystem.addGlobalFile(
-        new MockFile("mock:/a/delta_0000002_0000002_0000/bucket_00003", 1000, new byte[1], new MockBlock("host1")));
-      MockFileSystem.addGlobalFile(
-          new MockFile("mock:/a/delta_0000003_0000003_0000/bucket_00000", 1000, new byte[1], new MockBlock("host1")));
-        MockFileSystem.addGlobalFile(
-          new MockFile("mock:/a/delta_0000003_0000003_0000/bucket_00001", 1000, new byte[1], new MockBlock("host1")));
-        MockFileSystem.addGlobalFile(
-          new MockFile("mock:/a/delta_0000003_0000003_0000/bucket_00002", 1000, new byte[1], new MockBlock("host1")));
-        MockFileSystem.addGlobalFile(
-          new MockFile("mock:/a/delta_0000003_0000003_0000/bucket_00003", 1000, new byte[1], new MockBlock("host1")));
-
-      conf.set("bucket_count", "4");
-      //set up props for read
-      setupAcidProperties(conf, RowType.DUMMYROW);
-      conf.setBoolean(HiveConf.ConfVars.HIVE_VECTORIZATION_ENABLED.varname, true);
-      MockPath mockPath = new MockPath(fs, "mock:/a");
-      conf.set("mapred.input.dir", mockPath.toString());
-      conf.set("fs.defaultFS", "mock:///");
-      conf.set("fs.mock.impl", MockFileSystem.class.getName());
-      OrcInputFormat.Context context = new OrcInputFormat.Context(conf);
-
-      OrcInputFormat.FileGenerator gen =
-          new OrcInputFormat.FileGenerator(context, () -> fs, new MockPath(fs,
-              "mock:/a"),
-        false, null);
-      List<OrcInputFormat.SplitStrategy<?>> splitStrategies = createSplitStrategies(context, gen);
-      assertEquals(1, splitStrategies.size());
-      assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.ACIDSplitStrategy);
-      List<OrcSplit> splits = ((OrcInputFormat.ACIDSplitStrategy) splitStrategies.get(0)).getSplits();
-      // marker comment to look at stats read ops in target/surefire-reports/*-output.txt
-      System.out.println("STATS TRACE START - " + testCaseName.getMethodName());
-      // when creating the reader below there are 2 read ops per bucket file (listStatus and open).
-      // HIVE-19588 removes listStatus from the code path so there should only be one read ops (open) after HIVE-19588
-      int readsBefore = fs.statistics.getReadOps();
-      for (OrcSplit split : splits) {
-        try {
-          new VectorizedOrcAcidRowBatchReader(split, conf, Reporter.NULL, new VectorizedRowBatchCtx());
-        } catch (FileFormatException e) {
-          // this is expected as these mock files are not valid orc file
-        }
-      }
-      int readsAfter = fs.statistics.getReadOps();
-      System.out.println("STATS TRACE END - " + testCaseName.getMethodName());
-      int delta = readsAfter - readsBefore;
-      //HIVE-16812 adds 1 read of the footer of each file (only if delete delta exists)
-      assertEquals(12, delta);
-    } finally {
-      MockFileSystem.clearGlobalFiles();
-    }
-  }
-
-  @Test
   public void testBIStrategySplitBlockBoundary() throws Exception {
     conf.set(HiveConf.ConfVars.HIVE_ORC_SPLIT_STRATEGY.varname, "BI");
     OrcInputFormat.Context context = new OrcInputFormat.Context(conf);
-    final MockFileSystem fs = new MockFileSystem(conf,
+    MockFileSystem fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/part-00", 1000, new byte[1], new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-01", 1000, new byte[1], new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-02", 1000, new byte[1], new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-03", 1000, new byte[1], new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-04", 1000, new byte[1], new MockBlock("host1", "host2")));
     OrcInputFormat.FileGenerator gen =
-        new OrcInputFormat.FileGenerator(context, () -> fs,
+        new OrcInputFormat.FileGenerator(context, fs,
             new MockPath(fs, "mock:/a/b"), false, null);
     List<OrcInputFormat.SplitStrategy<?>> splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
@@ -832,14 +760,14 @@ public class TestInputOutputFormat {
     assertEquals(5, numSplits);
 
     context = new OrcInputFormat.Context(conf);
-    final MockFileSystem fs0 = new MockFileSystem(conf,
+    fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/part-00", 1000, new byte[1000], new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-01", 1000, new byte[1000], new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-02", 1000, new byte[1000], new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-03", 1000, new byte[1000], new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-04", 1000, new byte[1000], new MockBlock("host1", "host2")));
-    gen = new OrcInputFormat.FileGenerator(context, () -> fs0,
-        new MockPath(fs0, "mock:/a/b"), false, null);
+    gen = new OrcInputFormat.FileGenerator(context, fs,
+        new MockPath(fs, "mock:/a/b"), false, null);
     splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
     assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.BISplitStrategy);
@@ -848,7 +776,7 @@ public class TestInputOutputFormat {
     assertEquals(5, numSplits);
 
     context = new OrcInputFormat.Context(conf);
-    final MockFileSystem fs1 = new MockFileSystem(conf,
+    fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/part-00", 1000, new byte[1100], new MockBlock("host1", "host2"),
             new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-01", 1000, new byte[1100], new MockBlock("host1", "host2"),
@@ -859,8 +787,8 @@ public class TestInputOutputFormat {
             new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-04", 1000, new byte[1100], new MockBlock("host1", "host2"),
             new MockBlock("host1", "host2")));
-    gen = new OrcInputFormat.FileGenerator(context, () -> fs1,
-        new MockPath(fs1, "mock:/a/b"), false, null);
+    gen = new OrcInputFormat.FileGenerator(context, fs,
+        new MockPath(fs, "mock:/a/b"), false, null);
     splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
     assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.BISplitStrategy);
@@ -869,7 +797,7 @@ public class TestInputOutputFormat {
     assertEquals(10, numSplits);
 
     context = new OrcInputFormat.Context(conf);
-    final MockFileSystem fs2 = new MockFileSystem(conf,
+    fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/part-00", 1000, new byte[2000], new MockBlock("host1", "host2"),
             new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-01", 1000, new byte[2000], new MockBlock("host1", "host2"),
@@ -880,8 +808,8 @@ public class TestInputOutputFormat {
             new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-04", 1000, new byte[2000], new MockBlock("host1", "host2"),
             new MockBlock("host1", "host2")));
-    gen = new OrcInputFormat.FileGenerator(context, () -> fs2,
-        new MockPath(fs2, "mock:/a/b"), false, null);
+    gen = new OrcInputFormat.FileGenerator(context, fs,
+        new MockPath(fs, "mock:/a/b"), false, null);
     splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
     assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.BISplitStrategy);
@@ -890,7 +818,7 @@ public class TestInputOutputFormat {
     assertEquals(10, numSplits);
 
     context = new OrcInputFormat.Context(conf);
-    final MockFileSystem fs3 = new MockFileSystem(conf,
+    fs = new MockFileSystem(conf,
         new MockFile("mock:/a/b/part-00", 1000, new byte[2200], new MockBlock("host1", "host2"),
             new MockBlock("host1", "host2"), new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-01", 1000, new byte[2200], new MockBlock("host1", "host2"),
@@ -901,8 +829,8 @@ public class TestInputOutputFormat {
             new MockBlock("host1", "host2"), new MockBlock("host1", "host2")),
         new MockFile("mock:/a/b/part-04", 1000, new byte[2200], new MockBlock("host1", "host2"),
             new MockBlock("host1", "host2"), new MockBlock("host1", "host2")));
-    gen = new OrcInputFormat.FileGenerator(context, () -> fs3,
-        new MockPath(fs3, "mock:/a/b"), false, null);
+    gen = new OrcInputFormat.FileGenerator(context, fs,
+        new MockPath(fs, "mock:/a/b"), false, null);
     splitStrategies = createSplitStrategies(context, gen);
     assertEquals(1, splitStrategies.size());
     assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.BISplitStrategy);
@@ -915,24 +843,16 @@ public class TestInputOutputFormat {
   public void testEtlCombinedStrategy() throws Exception {
     conf.set(HiveConf.ConfVars.HIVE_ORC_SPLIT_STRATEGY.varname, "ETL");
     conf.set(HiveConf.ConfVars.HIVE_ORC_SPLIT_DIRECTORY_BATCH_MS.varname, "1000000");
-    AcidUtils.setAcidOperationalProperties(conf, true, null);
-    conf.setBoolean(hive_metastoreConstants.TABLE_IS_TRANSACTIONAL, true);
-    conf.set(hive_metastoreConstants.TABLE_TRANSACTIONAL_PROPERTIES, "default");
-    conf.set(ValidTxnList.VALID_TXNS_KEY,
-        new ValidReadTxnList(new long[0], new BitSet(), 1000, Long.MAX_VALUE).writeToString());
-
     OrcInputFormat.Context context = new OrcInputFormat.Context(conf);
     MockFileSystem fs = new MockFileSystem(conf,
         new MockFile("mock:/a/1/part-00", 1000, new byte[1]),
         new MockFile("mock:/a/1/part-01", 1000, new byte[1]),
         new MockFile("mock:/a/2/part-00", 1000, new byte[1]),
         new MockFile("mock:/a/2/part-01", 1000, new byte[1]),
-        new MockFile("mock:/a/3/base_0/bucket_00001", 1000, new byte[1]),
-        new MockFile("mock:/a/4/base_0/bucket_00001", 1000, new byte[1]),
-        new MockFile("mock:/a/5/base_0/bucket_00001", 1000, new byte[1]),
-        new MockFile("mock:/a/5/delta_0_25/bucket_00001", 1000, new byte[1]),
-        new MockFile("mock:/a/6/delta_27_29/bucket_00001", 1000, new byte[1]),
-        new MockFile("mock:/a/6/delete_delta_27_29/bucket_00001", 1000, new byte[1])
+        new MockFile("mock:/a/3/base_0/1", 1000, new byte[1]),
+        new MockFile("mock:/a/4/base_0/1", 1000, new byte[1]),
+        new MockFile("mock:/a/5/base_0/1", 1000, new byte[1]),
+        new MockFile("mock:/a/5/delta_0_25/1", 1000, new byte[1])
     );
 
     OrcInputFormat.CombinedCtx combineCtx = new OrcInputFormat.CombinedCtx();
@@ -978,41 +898,34 @@ public class TestInputOutputFormat {
     assertTrue(combineCtx.combined instanceof OrcInputFormat.ETLSplitStrategy);
     assertEquals(2, etlSs.files.size());
     assertEquals(2, etlSs.dirs.size());
-    // The fifth could be combined again.
+    // The fifth will not be combined because of delta files.
     ss = createOrCombineStrategies(context, fs, "mock:/a/5", combineCtx);
-    assertTrue(ss.isEmpty());
-    assertTrue(combineCtx.combined instanceof OrcInputFormat.ETLSplitStrategy);
-    assertEquals(4, etlSs.files.size());
-    assertEquals(3, etlSs.dirs.size());
-
-    // The sixth will not be combined because of delete delta files.  Is that desired? HIVE-18110
-    ss = createOrCombineStrategies(context, fs, "mock:/a/6", combineCtx);
     assertEquals(1, ss.size());
     assertTrue(ss.get(0) instanceof OrcInputFormat.ETLSplitStrategy);
     assertNotSame(etlSs, ss);
-    assertEquals(4, etlSs.files.size());
-    assertEquals(3, etlSs.dirs.size());
+    assertEquals(2, etlSs.files.size());
+    assertEquals(2, etlSs.dirs.size());
   }
 
   public List<SplitStrategy<?>> createOrCombineStrategies(OrcInputFormat.Context context,
       MockFileSystem fs, String path, OrcInputFormat.CombinedCtx combineCtx) throws IOException {
-    Directory adi = createAdi(context, fs, path);
+    OrcInputFormat.AcidDirInfo adi = createAdi(context, fs, path);
     return OrcInputFormat.determineSplitStrategies(combineCtx, context,
-        adi.getFs(), adi.getPath(), adi.getFiles(), adi.getDeleteDeltas(),
+        adi.fs, adi.splitPath, adi.acidInfo, adi.baseFiles, adi.parsedDeltas,
         null, null, true);
   }
 
-  public Directory createAdi(
-      OrcInputFormat.Context context, final MockFileSystem fs, String path) throws IOException {
+  public OrcInputFormat.AcidDirInfo createAdi(
+      OrcInputFormat.Context context, MockFileSystem fs, String path) throws IOException {
     return new OrcInputFormat.FileGenerator(
-        context, () -> fs, new MockPath(fs, path), false, null).call();
+        context, fs, new MockPath(fs, path), false, null).call();
   }
 
   private List<OrcInputFormat.SplitStrategy<?>> createSplitStrategies(
       OrcInputFormat.Context context, OrcInputFormat.FileGenerator gen) throws IOException {
-    Directory adi = gen.call();
+    OrcInputFormat.AcidDirInfo adi = gen.call();
     return OrcInputFormat.determineSplitStrategies(
-        null, context, adi.getFs(), adi.getPath(), adi.getFiles(), adi.getDeleteDeltas(),
+        null, context, adi.fs, adi.splitPath, adi.acidInfo, adi.baseFiles, adi.parsedDeltas,
         null, null, true);
   }
 
@@ -1058,23 +971,14 @@ public class TestInputOutputFormat {
     int length;
     MockBlock[] blocks;
     byte[] content;
-    // If true - it will simulate an HDFS file that was hflushed (i.e. might have content above what can be found as
-    // first block on disk) and is still being written to (e.g. isUnderConstruction is true)
-    boolean isHdfsHflushed = false;
 
     public MockFile(String path, int blockSize, byte[] content,
-        MockBlock... blocks) {
-      this(path, blockSize, content, false, blocks);
-    }
-
-    public MockFile(String path, int blockSize, byte[] content, boolean isHdfsHflushed,
                     MockBlock... blocks) {
       this.path = new Path(path);
       this.blockSize = blockSize;
       this.blocks = blocks;
       this.content = content;
       this.length = content.length;
-      this.isHdfsHflushed = isHdfsHflushed;
       int offset = 0;
       for(MockBlock block: blocks) {
         block.offset = offset;
@@ -1145,11 +1049,6 @@ public class TestInputOutputFormat {
       }
       return -1;
     }
-
-    @Override
-    public int available() throws IOException {
-      return file.length - offset;
-    }
   }
 
   public static class MockPath extends Path {
@@ -1208,9 +1107,6 @@ public class TestInputOutputFormat {
     }
   }
 
-  /**
-   * WARNING: detele(Path...) don't actually delete
-   */
   public static class MockFileSystem extends FileSystem {
     final List<MockFile> files = new ArrayList<MockFile>();
     final Map<MockFile, FileStatus> fileStatusMap = new HashMap<>();
@@ -1219,15 +1115,9 @@ public class TestInputOutputFormat {
     private static String blockedUgi = null;
     private final static List<MockFile> globalFiles = new ArrayList<MockFile>();
     protected Statistics statistics;
-    private int numOpenFileCalls;
 
     public MockFileSystem() {
       // empty
-    }
-
-    @Override
-    public boolean exists(Path f) throws IOException {
-      return super.exists(f);
     }
 
     @Override
@@ -1259,11 +1149,6 @@ public class TestInputOutputFormat {
       }
     }
 
-    @Override
-    public String getScheme() {
-      return "mock";
-    }
-
     // increments file modification time
     public void touch(MockFile file) {
       if (fileStatusMap.containsKey(file)) {
@@ -1283,13 +1168,11 @@ public class TestInputOutputFormat {
 
     @Override
     public FSDataInputStream open(Path path, int i) throws IOException {
-      numOpenFileCalls++;
       statistics.incrementReadOps(1);
-      System.out.println("STATS: open - " + path);
       checkAccess();
       MockFile file = findFile(path);
       if (file != null) return new FSDataInputStream(new MockInputStream(file));
-      throw new FileNotFoundException("File not found: " + path);
+      throw new IOException("File not found: " + path);
     }
 
     private MockFile findFile(Path path) {
@@ -1349,32 +1232,14 @@ public class TestInputOutputFormat {
     public boolean delete(Path path) throws IOException {
       statistics.incrementWriteOps(1);
       checkAccess();
-      int removed = 0;
-      for(int i = 0; i < files.size(); i++) {
-        MockFile mf = files.get(i);
-        if(path.equals(mf.path)) {
-          files.remove(i);
-          removed++;
-          break;
-        }
-      }
-      for(int i = 0; i < globalFiles.size(); i++) {
-        MockFile mf = files.get(i);
-        if(path.equals(mf.path)) {
-          globalFiles.remove(i);
-          removed++;
-          break;
-        }
-      }
-      return removed > 0;
+      return false;
     }
 
     @Override
     public boolean delete(Path path, boolean b) throws IOException {
-      if(b) {
-        throw new UnsupportedOperationException();
-      }
-      return delete(path);
+      statistics.incrementWriteOps(1);
+      checkAccess();
+      return false;
     }
 
     @Override
@@ -1397,7 +1262,6 @@ public class TestInputOutputFormat {
 
     private List<LocatedFileStatus> listLocatedFileStatuses(Path path) throws IOException {
       statistics.incrementReadOps(1);
-      System.out.println("STATS: listLocatedFileStatuses - " + path);
       checkAccess();
       path = path.makeQualified(this);
       List<LocatedFileStatus> result = new ArrayList<>();
@@ -1421,7 +1285,6 @@ public class TestInputOutputFormat {
     @Override
     public FileStatus[] listStatus(Path path) throws IOException {
       statistics.incrementReadOps(1);
-      System.out.println("STATS: listStatus - " + path);
       checkAccess();
       path = path.makeQualified(this);
       List<FileStatus> result = new ArrayList<FileStatus>();
@@ -1508,23 +1371,8 @@ public class TestInputOutputFormat {
 
     private LocatedFileStatus createLocatedStatus(MockFile file) throws IOException {
       FileStatus fileStatus = createStatus(file);
-      if (file.isHdfsHflushed) {
-        // Should work the same way as the local status except for having isUnderConstruction flag set to true and
-        // having HdfsLocatedFileStatus type
-        LocatedBlocks lb = new LocatedBlocks(fileStatus.getLen(), true, null, null, false, null, null);
-        HdfsLocatedFileStatus mockStatus = mock(HdfsLocatedFileStatus.class);
-        when(mockStatus.getLocatedBlocks()).thenReturn(lb);
-        when(mockStatus.getPath()).thenReturn(fileStatus.getPath());
-        when(mockStatus.getLen()).thenReturn(fileStatus.getLen());
-        when(mockStatus.isDirectory()).thenReturn(false);
-        when(mockStatus.isFile()).thenReturn(true);
-        when(mockStatus.getBlockSize()).thenReturn(fileStatus.getBlockSize());
-        when(mockStatus.getBlockLocations()).thenReturn(getFileBlockLocationsImpl(fileStatus, 0, fileStatus.getLen(),
-            false));
-        return mockStatus;
-      } else {
-        return new LocatedFileStatus(fileStatus, getFileBlockLocationsImpl(fileStatus, 0, fileStatus.getLen(), false));
-      }
+      return new LocatedFileStatus(fileStatus,
+          getFileBlockLocationsImpl(fileStatus, 0, fileStatus.getLen(), false));
     }
 
     private LocatedFileStatus createLocatedDirectory(Path dir) throws IOException {
@@ -1536,7 +1384,6 @@ public class TestInputOutputFormat {
     @Override
     public FileStatus getFileStatus(Path path) throws IOException {
       statistics.incrementReadOps(1);
-      System.out.println("STATS: getFileStatus - " + path);
       checkAccess();
       path = path.makeQualified(this);
       String pathnameAsDir = path.toString() + "/";
@@ -1566,7 +1413,6 @@ public class TestInputOutputFormat {
         final boolean updateStats) throws IOException {
       if (updateStats) {
         statistics.incrementReadOps(1);
-        System.out.println("STATS: getFileBlockLocationsImpl - " + stat.getPath());
       }
       checkAccess();
       List<BlockLocation> result = new ArrayList<BlockLocation>();
@@ -1600,10 +1446,6 @@ public class TestInputOutputFormat {
       }
       buffer.append("]}");
       return buffer.toString();
-    }
-
-    public int getNumOpenFileCalls() {
-      return numOpenFileCalls;
     }
 
     public static void addGlobalFile(MockFile mockFile) {
@@ -1693,7 +1535,7 @@ public class TestInputOutputFormat {
     OrcInputFormat.SplitGenerator splitter =
         new OrcInputFormat.SplitGenerator(new OrcInputFormat.SplitInfo(context, fs,
             fs.getFileStatus(new Path("/a/file")), null, null, true,
-            new ArrayList<AcidInputFormat.DeltaMetaData>(), true, null, null), null, true, true);
+            new ArrayList<AcidInputFormat.DeltaMetaData>(), true, null, null), null, true);
     OrcSplit result = splitter.createSplit(0, 200, null);
     assertEquals(0, result.getStart());
     assertEquals(200, result.getLength());
@@ -1734,7 +1576,7 @@ public class TestInputOutputFormat {
     OrcInputFormat.SplitGenerator splitter =
         new OrcInputFormat.SplitGenerator(new OrcInputFormat.SplitInfo(context, fs,
             fs.getFileStatus(new Path("/a/file")), null, null, true,
-            new ArrayList<AcidInputFormat.DeltaMetaData>(), true, null, null), null, true, true);
+            new ArrayList<AcidInputFormat.DeltaMetaData>(), true, null, null), null, true);
     List<OrcSplit> results = splitter.call();
     OrcSplit result = results.get(0);
     assertEquals(3, result.getStart());
@@ -1757,7 +1599,7 @@ public class TestInputOutputFormat {
     context = new OrcInputFormat.Context(conf);
     splitter = new OrcInputFormat.SplitGenerator(new OrcInputFormat.SplitInfo(context, fs,
       fs.getFileStatus(new Path("/a/file")), null, null, true,
-        new ArrayList<AcidInputFormat.DeltaMetaData>(), true, null, null), null, true, true);
+        new ArrayList<AcidInputFormat.DeltaMetaData>(), true, null, null), null, true);
     results = splitter.call();
     for(int i=0; i < stripeSizes.length; ++i) {
       assertEquals("checking stripe " + i + " size",
@@ -1785,21 +1627,21 @@ public class TestInputOutputFormat {
     OrcInputFormat.SplitGenerator splitter =
         new OrcInputFormat.SplitGenerator(new OrcInputFormat.SplitInfo(context, fs,
             fs.getFileStatus(new Path("/a/file")), null, null, true,
-            new ArrayList<AcidInputFormat.DeltaMetaData>(), true, null, null), null, true, true);
+            new ArrayList<AcidInputFormat.DeltaMetaData>(), true, null, null), null, true);
     List<OrcSplit> results = splitter.call();
     OrcSplit result = results.get(0);
     assertEquals(3, results.size());
     assertEquals(3, result.getStart());
     assertEquals(400, result.getLength());
-    assertEquals(175168, result.getProjectedColumnsUncompressedSize());
+    assertEquals(167468, result.getProjectedColumnsUncompressedSize());
     result = results.get(1);
     assertEquals(403, result.getStart());
     assertEquals(400, result.getLength());
-    assertEquals(175168, result.getProjectedColumnsUncompressedSize());
+    assertEquals(167468, result.getProjectedColumnsUncompressedSize());
     result = results.get(2);
     assertEquals(803, result.getStart());
     assertEquals(100, result.getLength());
-    assertEquals(43792, result.getProjectedColumnsUncompressedSize());
+    assertEquals(41867, result.getProjectedColumnsUncompressedSize());
 
     // test min = 0, max = 0 generates each stripe
     HiveConf.setLongVar(conf, HiveConf.ConfVars.MAPREDMAXSPLITSIZE, 0);
@@ -1808,16 +1650,16 @@ public class TestInputOutputFormat {
     splitter = new OrcInputFormat.SplitGenerator(new OrcInputFormat.SplitInfo(context, fs,
         fs.getFileStatus(new Path("/a/file")), null, null, true,
         new ArrayList<AcidInputFormat.DeltaMetaData>(),
-        true, null, null), null, true, true);
+        true, null, null), null, true);
     results = splitter.call();
     assertEquals(5, results.size());
     for (int i = 0; i < stripeSizes.length; ++i) {
       assertEquals("checking stripe " + i + " size",
           stripeSizes[i], results.get(i).getLength());
       if (i == stripeSizes.length - 1) {
-        assertEquals(43792, results.get(i).getProjectedColumnsUncompressedSize());
+        assertEquals(41867, results.get(i).getProjectedColumnsUncompressedSize());
       } else {
-        assertEquals(87584, results.get(i).getProjectedColumnsUncompressedSize());
+        assertEquals(83734, results.get(i).getProjectedColumnsUncompressedSize());
       }
     }
 
@@ -1828,13 +1670,13 @@ public class TestInputOutputFormat {
     splitter = new OrcInputFormat.SplitGenerator(new OrcInputFormat.SplitInfo(context, fs,
         fs.getFileStatus(new Path("/a/file")), null, null, true,
         new ArrayList<AcidInputFormat.DeltaMetaData>(),
-        true, null, null), null, true, true);
+        true, null, null), null, true);
     results = splitter.call();
     assertEquals(1, results.size());
     result = results.get(0);
     assertEquals(3, result.getStart());
     assertEquals(900, result.getLength());
-    assertEquals(394128, result.getProjectedColumnsUncompressedSize());
+    assertEquals(376804, result.getProjectedColumnsUncompressedSize());
   }
 
   @Test
@@ -1858,7 +1700,7 @@ public class TestInputOutputFormat {
     writer.write(serde.serialize(new MyRow(3,2), inspector));
     writer.close(true);
     serde = new OrcSerde();
-    serde.initialize(conf, properties, null);
+    SerDeUtils.initializeSerDe(serde, conf, properties, null);
     assertEquals(OrcSerde.OrcSerdeRow.class, serde.getSerializedClass());
     inspector = (StructObjectInspector) serde.getObjectInspector();
     assertEquals("struct<x:int,y:int>", inspector.getTypeName());
@@ -1997,7 +1839,7 @@ public class TestInputOutputFormat {
     serde = new OrcSerde();
     properties.setProperty("columns", "z,r");
     properties.setProperty("columns.types", "int:struct<x:int,y:int>");
-    serde.initialize(conf, properties, null);
+    SerDeUtils.initializeSerDe(serde, conf, properties, null);
     inspector = (StructObjectInspector) serde.getObjectInspector();
     InputFormat<?,?> in = new OrcInputFormat();
     FileInputFormat.setInputPaths(conf, testFilePath.toString());
@@ -2042,7 +1884,7 @@ public class TestInputOutputFormat {
             properties, Reporter.NULL);
     writer.close(true);
     AbstractSerDe serde = new OrcSerde();
-    serde.initialize(conf, properties, null);
+    SerDeUtils.initializeSerDe(serde, conf, properties, null);
     InputFormat<?,?> in = new OrcInputFormat();
     FileInputFormat.setInputPaths(conf, testFilePath.toString());
     InputSplit[] splits = in.getSplits(conf, 1);
@@ -2120,7 +1962,7 @@ public class TestInputOutputFormat {
     writer.write(serde.serialize(new StringRow("miles"), inspector));
     writer.close(true);
     serde = new OrcSerde();
-    serde.initialize(conf, properties, null);
+    SerDeUtils.initializeSerDe(serde, conf, properties, null);
     inspector = (StructObjectInspector) serde.getObjectInspector();
     assertEquals("struct<str:string,str2:string>", inspector.getTypeName());
     InputFormat<?,?> in = new OrcInputFormat();
@@ -2173,13 +2015,13 @@ public class TestInputOutputFormat {
    * @throws IOException
    * @throws HiveException
    */
-  static JobConf createMockExecutionEnvironment(Path workDir,
+  JobConf createMockExecutionEnvironment(Path workDir,
                                          Path warehouseDir,
                                          String tableName,
                                          ObjectInspector objectInspector,
                                          boolean isVectorized,
-                                         int partitions,
-                                         String currFileSystemName) throws IOException, HiveException {
+                                         int partitions
+                                         ) throws IOException, HiveException {
     JobConf conf = new JobConf();
     Utilities.clearWorkMap(conf);
     conf.set("hive.exec.plan", workDir.toString());
@@ -2188,7 +2030,7 @@ public class TestInputOutputFormat {
     conf.set("hive.vectorized.execution.enabled", isVectorizedString);
     conf.set(Utilities.VECTOR_MODE, isVectorizedString);
     conf.set(Utilities.USE_VECTORIZED_INPUT_FILE_FORMAT, isVectorizedString);
-    conf.set("fs.mock.impl", currFileSystemName);
+    conf.set("fs.mock.impl", MockFileSystem.class.getName());
     conf.set("mapred.mapper.class", ExecMapper.class.getName());
     Path root = new Path(warehouseDir, tableName);
     // clean out previous contents
@@ -2243,8 +2085,8 @@ public class TestInputOutputFormat {
       mapWork.setVectorizedRowBatchCtx(vectorizedRowBatchCtx);
     }
     mapWork.setUseBucketizedHiveInputFormat(false);
-    Map<Path, List<String>> aliasMap = new LinkedHashMap<>();
-    List<String> aliases = new ArrayList<String>();
+    LinkedHashMap<Path, ArrayList<String>> aliasMap = new LinkedHashMap<>();
+    ArrayList<String> aliases = new ArrayList<String>();
     aliases.add(tableName);
     LinkedHashMap<Path, PartitionDesc> partMap = new LinkedHashMap<>();
     for(int p=0; p < partitions; ++p) {
@@ -2255,7 +2097,7 @@ public class TestInputOutputFormat {
       PartitionDesc part = new PartitionDesc(tbl, partSpec);
       if (isVectorized) {
         part.setVectorPartitionDesc(
-            VectorPartitionDesc.createVectorizedInputFileFormat("MockInputFileFormatClassName", false, null));
+            VectorPartitionDesc.createVectorizedInputFileFormat("MockInputFileFormatClassName", false));
       }
       partMap.put(path, part);
     }
@@ -2307,7 +2149,7 @@ public class TestInputOutputFormat {
               ObjectInspectorFactory.ObjectInspectorOptions.JAVA);
     }
     JobConf conf = createMockExecutionEnvironment(workDir, new Path("mock:///"),
-        "vectorization", inspector, true, 1, MockFileSystem.class.getName());
+        "vectorization", inspector, true, 1);
 
     // write the orc file to the mock file system
     Path path = new Path(conf.get("mapred.input.dir") + "/0_0");
@@ -2354,7 +2196,7 @@ public class TestInputOutputFormat {
               ObjectInspectorFactory.ObjectInspectorOptions.JAVA);
     }
     JobConf conf = createMockExecutionEnvironment(workDir, new Path("mock:///"),
-        "vectorBuckets", inspector, true, 1, MockFileSystem.class.getName());
+        "vectorBuckets", inspector, true, 1);
 
     // write the orc file to the mock file system
     Path path = new Path(conf.get("mapred.input.dir") + "/0_0");
@@ -2393,13 +2235,12 @@ public class TestInputOutputFormat {
   public void testVectorizationWithAcid() throws Exception {
     StructObjectInspector inspector = new BigRowInspector();
     JobConf conf = createMockExecutionEnvironment(workDir, new Path("mock:///"),
-        "vectorizationAcid", inspector, true, 1, MockFileSystem.class.getName());
-    setupAcidProperties(conf, RowType.BIGROW);
+        "vectorizationAcid", inspector, true, 1);
 
     // write the orc file to the mock file system
     Path partDir = new Path(conf.get("mapred.input.dir"));
     OrcRecordUpdater writer = new OrcRecordUpdater(partDir,
-        new AcidOutputFormat.Options(conf).maximumWriteId(10)
+        new AcidOutputFormat.Options(conf).maximumTransactionId(10)
             .writingBase(true).bucket(0).inspector(inspector).finalDestination(partDir));
     for (int i = 0; i < 100; ++i) {
       BigRow row = new BigRow(i);
@@ -2415,6 +2256,9 @@ public class TestInputOutputFormat {
     InputSplit[] splits = inputFormat.getSplits(conf, 10);
     assertEquals(1, splits.length);
 
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, BigRow.getColumnNamesProperty());
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, BigRow.getColumnTypesProperty());
+    HiveConf.setBoolVar(conf, HiveConf.ConfVars.HIVE_TRANSACTIONAL_TABLE_SCAN, true);
 
     org.apache.hadoop.mapred.RecordReader<NullWritable, VectorizedRowBatch>
         reader = inputFormat.getRecordReader(splits[0], conf, Reporter.NULL);
@@ -2470,7 +2314,7 @@ public class TestInputOutputFormat {
               ObjectInspectorFactory.ObjectInspectorOptions.JAVA);
     }
     JobConf conf = createMockExecutionEnvironment(workDir, new Path("mock:///"),
-        "combination", inspector, false, 1, MockFileSystem.class.getName());
+        "combination", inspector, false, 1);
 
     // write the orc file to the mock file system
     Path partDir = new Path(conf.get("mapred.input.dir"));
@@ -2542,7 +2386,7 @@ public class TestInputOutputFormat {
               ObjectInspectorFactory.ObjectInspectorOptions.JAVA);
     }
     JobConf conf = createMockExecutionEnvironment(workDir, new Path("mock:///"),
-        "combinationAcid", inspector, false, PARTITIONS, MockFileSystem.class.getName());
+        "combinationAcid", inspector, false, PARTITIONS);
 
     // write the orc file to the mock file system
     Path[] partDir = new Path[PARTITIONS];
@@ -2553,7 +2397,7 @@ public class TestInputOutputFormat {
 
     // write a base file in partition 0
     OrcRecordUpdater writer = new OrcRecordUpdater(partDir[0],
-        new AcidOutputFormat.Options(conf).maximumWriteId(10)
+        new AcidOutputFormat.Options(conf).maximumTransactionId(10)
             .writingBase(true).bucket(0).inspector(inspector).finalDestination(partDir[0]));
     for(int i=0; i < 10; ++i) {
       writer.insert(10, new MyRow(i, 2 * i));
@@ -2566,7 +2410,7 @@ public class TestInputOutputFormat {
 
     // write a delta file in partition 0
     writer = new OrcRecordUpdater(partDir[0],
-        new AcidOutputFormat.Options(conf).maximumWriteId(10)
+        new AcidOutputFormat.Options(conf).maximumTransactionId(10)
             .writingBase(true).bucket(1).inspector(inspector).finalDestination(partDir[0]));
     for(int i=10; i < 20; ++i) {
       writer.insert(10, new MyRow(i, 2*i));
@@ -2591,7 +2435,6 @@ public class TestInputOutputFormat {
 
     // call getsplits
     conf.setInt(hive_metastoreConstants.BUCKET_COUNT, BUCKETS);
-    setupAcidProperties(conf, RowType.MYROW);
     HiveInputFormat<?,?> inputFormat =
         new CombineHiveInputFormat<WritableComparable, Writable>();
     InputSplit[] splits = inputFormat.getSplits(conf, 1);
@@ -2603,14 +2446,14 @@ public class TestInputOutputFormat {
     assertEquals("mock:/combinationAcid/p=0/base_0000010/bucket_00000",
         split.getPath().toString());
     assertEquals(0, split.getStart());
-    assertEquals(702, split.getLength());
+    assertEquals(607, split.getLength());
     split = (HiveInputFormat.HiveInputSplit) splits[1];
     assertEquals("org.apache.hadoop.hive.ql.io.orc.OrcInputFormat",
         split.inputFormatClassName());
     assertEquals("mock:/combinationAcid/p=0/base_0000010/bucket_00001",
         split.getPath().toString());
     assertEquals(0, split.getStart());
-    assertEquals(726, split.getLength());
+    assertEquals(629, split.getLength());
     CombineHiveInputFormat.CombineHiveInputSplit combineSplit =
         (CombineHiveInputFormat.CombineHiveInputSplit) splits[2];
     assertEquals(BUCKETS, combineSplit.getNumPaths());
@@ -2618,7 +2461,7 @@ public class TestInputOutputFormat {
       assertEquals("mock:/combinationAcid/p=1/00000" + bucket + "_0",
           combineSplit.getPath(bucket).toString());
       assertEquals(0, combineSplit.getOffset(bucket));
-      assertEquals(253, combineSplit.getLength(bucket));
+      assertEquals(241, combineSplit.getLength(bucket));
     }
     String[] hosts = combineSplit.getLocations();
     assertEquals(2, hosts.length);
@@ -2630,7 +2473,7 @@ public class TestInputOutputFormat {
     List<OrcProto.Type> types = new ArrayList<OrcProto.Type>();
     OrcProto.Type.Builder builder = OrcProto.Type.newBuilder();
     builder.setKind(OrcProto.Type.Kind.STRUCT)
-        .addAllFieldNames(Arrays.asList("op", "owid", "bucket", "rowid", "cwid",
+        .addAllFieldNames(Arrays.asList("op", "otid", "bucket", "rowid", "ctid",
             "row"))
         .addAllSubtypes(Arrays.asList(1,2,3,4,5,6));
     types.add(builder.build());
@@ -2652,7 +2495,7 @@ public class TestInputOutputFormat {
     types.add(builder.build());
     SearchArgument isNull = SearchArgumentFactory.newBuilder()
         .startAnd().isNull("cost", PredicateLeaf.Type.LONG).end().build();
-    conf.set(ConvertAstToSearchArg.SARG_PUSHDOWN, sargToKryo(isNull));
+    conf.set(ConvertAstToSearchArg.SARG_PUSHDOWN, toKryo(isNull));
     conf.set(ColumnProjectionUtils.READ_COLUMN_NAMES_CONF_STR,
         "url,cost");
     options.include(new boolean[]{true, true, false, true, false});
@@ -2697,12 +2540,12 @@ public class TestInputOutputFormat {
     SearchArgument sarg =
         SearchArgumentFactory.newBuilder()
             .startAnd()
-            .lessThan("z", PredicateLeaf.Type.LONG, Long.valueOf(0))
+            .lessThan("z", PredicateLeaf.Type.LONG, new Long(0))
             .end()
             .build();
-    conf.set("sarg.pushdown", sargToKryo(sarg));
+    conf.set("sarg.pushdown", toKryo(sarg));
     conf.set("hive.io.file.readcolumn.names", "z,r");
-    serde.initialize(conf, properties, null);
+    SerDeUtils.initializeSerDe(serde, conf, properties, null);
     inspector = (StructObjectInspector) serde.getObjectInspector();
     InputFormat<?,?> in = new OrcInputFormat();
     FileInputFormat.setInputPaths(conf, testFilePath.toString());
@@ -2734,11 +2577,11 @@ public class TestInputOutputFormat {
             .lessThan("z", PredicateLeaf.Type.STRING, new String("foo"))
             .end()
             .build();
-    conf.set("sarg.pushdown", sargToKryo(sarg));
+    conf.set("sarg.pushdown", toKryo(sarg));
     conf.set("hive.io.file.readcolumn.names", "z");
     properties.setProperty("columns", "z");
     properties.setProperty("columns.types", "string");
-    serde.initialize(conf, properties, null);
+    SerDeUtils.initializeSerDe(serde, conf, properties, null);
     inspector = (StructObjectInspector) serde.getObjectInspector();
     InputFormat<?,?> in = new OrcInputFormat();
     FileInputFormat.setInputPaths(conf, testFilePath.toString());
@@ -2754,7 +2597,6 @@ public class TestInputOutputFormat {
     conf.setClass("fs.mock.impl", MockFileSystem.class, FileSystem.class);
     String badUser = UserGroupInformation.getCurrentUser().getShortUserName() + "-foo";
     MockFileSystem.setBlockedUgi(badUser);
-    // TODO: could we instead get FS from path here and add normal files for every UGI?
     MockFileSystem.clearGlobalFiles();
     OrcInputFormat.Context.resetThreadPool(); // We need the size above to take effect.
     try {
@@ -2849,7 +2691,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktable
+    // call-1: listLocatedStatus - mock:/mocktable
     // call-2: open - mock:/mocktable/0_0
     // call-3: open - mock:/mocktable/0_1
     assertEquals(3, readOpsDelta);
@@ -2907,7 +2749,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktbl
+    // call-1: listLocatedStatus - mock:/mocktbl
     // call-2: open - mock:/mocktbl/0_0
     // call-3: open - mock:/mocktbl/0_1
     assertEquals(3, readOpsDelta);
@@ -2927,7 +2769,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktbl
+    // call-1: listLocatedStatus - mock:/mocktbl
     assertEquals(1, readOpsDelta);
 
     // enable cache and use default strategy
@@ -2946,7 +2788,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktbl
+    // call-1: listLocatedStatus - mock:/mocktbl
     // call-2: open - mock:/mocktbl/0_0
     // call-3: open - mock:/mocktbl/0_1
     assertEquals(3, readOpsDelta);
@@ -2964,7 +2806,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktbl
+    // call-1: listLocatedStatus - mock:/mocktbl
     assertEquals(1, readOpsDelta);
 
     // revert back to local fs
@@ -3018,7 +2860,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktable
+    // call-1: listLocatedStatus - mock:/mocktable
     // call-2: open - mock:/mocktbl1/0_0
     // call-3: open - mock:/mocktbl1/0_1
     assertEquals(3, readOpsDelta);
@@ -3057,7 +2899,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktable
+    // call-1: listLocatedStatus - mock:/mocktable
     // call-2: open - mock:/mocktbl1/0_0
     // call-3: open - mock:/mocktbl1/0_1
     assertEquals(3, readOpsDelta);
@@ -3075,7 +2917,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktbl1
+    // call-1: listLocatedStatus - mock:/mocktbl1
     assertEquals(1, readOpsDelta);
 
     // revert back to local fs
@@ -3130,7 +2972,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktbl2
+    // call-1: listLocatedStatus - mock:/mocktbl2
     // call-2: open - mock:/mocktbl2/0_0
     // call-3: open - mock:/mocktbl2/0_1
     assertEquals(3, readOpsDelta);
@@ -3152,7 +2994,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktbl2
+    // call-1: listLocatedStatus - mock:/mocktbl2
     // call-2: open - mock:/mocktbl2/0_1
     assertEquals(2, readOpsDelta);
 
@@ -3173,7 +3015,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktbl2
+    // call-1: listLocatedStatus - mock:/mocktbl2
     // call-2: open - mock:/mocktbl2/0_0
     assertEquals(2, readOpsDelta);
 
@@ -3190,7 +3032,7 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: getAcidState - mock:/mocktbl2
+    // call-1: listLocatedStatus - mock:/mocktbl2
     assertEquals(1, readOpsDelta);
 
     // revert back to local fs
@@ -3245,7 +3087,7 @@ public class TestInputOutputFormat {
       assertTrue(split.toString().contains("start=3"));
       assertTrue(split.toString().contains("hasFooter=false"));
       assertTrue(split.toString().contains("hasBase=true"));
-      assertTrue(split.toString().contains("deltas=0"));
+      assertTrue(split.toString().contains("deltas=[]"));
       if (split instanceof OrcSplit) {
         assertFalse("No footer serialize test for non-vector reader, hasFooter is not expected in" +
             " orc splits.", ((OrcSplit) split).hasFooter());
@@ -3259,9 +3101,11 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: open to read - split 1 => mock:/mocktable1/0_0
-    // call-2: open to read - split 2 => mock:/mocktable1/0_1
-    assertEquals(2, readOpsDelta);
+    // call-1: open to read footer - split 1 => mock:/mocktable1/0_0
+    // call-2: open to read data - split 1 => mock:/mocktable1/0_0
+    // call-3: open to read footer - split 2 => mock:/mocktable1/0_1
+    // call-4: open to read data - split 2 => mock:/mocktable1/0_1
+    assertEquals(4, readOpsDelta);
 
     // revert back to local fs
     conf.set("fs.defaultFS", "file:///");
@@ -3315,7 +3159,7 @@ public class TestInputOutputFormat {
       assertTrue(split.toString().contains("start=3"));
       assertTrue(split.toString().contains("hasFooter=true"));
       assertTrue(split.toString().contains("hasBase=true"));
-      assertTrue(split.toString().contains("deltas=0"));
+      assertTrue(split.toString().contains("deltas=[]"));
       if (split instanceof OrcSplit) {
         assertTrue("Footer serialize test for non-vector reader, hasFooter is expected in" +
             " orc splits.", ((OrcSplit) split).hasFooter());
@@ -3352,7 +3196,7 @@ public class TestInputOutputFormat {
               ObjectInspectorFactory.ObjectInspectorOptions.JAVA);
     }
     JobConf jobConf = createMockExecutionEnvironment(workDir, new Path("mock:///"),
-        "mocktable3", inspector, true, 0, MockFileSystem.class.getName());
+        "mocktable3", inspector, true, 0);
     Writer writer =
         OrcFile.createWriter(new Path(mockPath + "/0_0"),
             OrcFile.writerOptions(conf).blockPadding(false)
@@ -3388,7 +3232,7 @@ public class TestInputOutputFormat {
       assertTrue(split.toString().contains("start=3"));
       assertTrue(split.toString().contains("hasFooter=false"));
       assertTrue(split.toString().contains("hasBase=true"));
-      assertTrue(split.toString().contains("deltas=0"));
+      assertTrue(split.toString().contains("deltas=[]"));
       if (split instanceof OrcSplit) {
         assertFalse("No footer serialize test for vector reader, hasFooter is not expected in" +
             " orc splits.", ((OrcSplit) split).hasFooter());
@@ -3402,9 +3246,11 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    // call-1: open to read - split 1 => mock:/mocktable3/0_0
-    // call-2: open to read - split 2 => mock:/mocktable3/0_1
-    assertEquals(2, readOpsDelta);
+    // call-1: open to read footer - split 1 => mock:/mocktable3/0_0
+    // call-2: open to read data - split 1 => mock:/mocktable3/0_0
+    // call-3: open to read footer - split 2 => mock:/mocktable3/0_1
+    // call-4: open to read data - split 2 => mock:/mocktable3/0_1
+    assertEquals(4, readOpsDelta);
 
     // revert back to local fs
     conf.set("fs.defaultFS", "file:///");
@@ -3425,7 +3271,7 @@ public class TestInputOutputFormat {
               ObjectInspectorFactory.ObjectInspectorOptions.JAVA);
     }
     JobConf jobConf = createMockExecutionEnvironment(workDir, new Path("mock:///"),
-        "mocktable4", inspector, true, 0, MockFileSystem.class.getName());
+        "mocktable4", inspector, true, 0);
     Writer writer =
         OrcFile.createWriter(new Path(mockPath + "/0_0"),
             OrcFile.writerOptions(conf).blockPadding(false)
@@ -3461,7 +3307,7 @@ public class TestInputOutputFormat {
       assertTrue(split.toString().contains("start=3"));
       assertTrue(split.toString().contains("hasFooter=true"));
       assertTrue(split.toString().contains("hasBase=true"));
-      assertTrue(split.toString().contains("deltas=0"));
+      assertTrue(split.toString().contains("deltas=[]"));
       if (split instanceof OrcSplit) {
         assertTrue("Footer serialize test for vector reader, hasFooter is expected in" +
             " orc splits.", ((OrcSplit) split).hasFooter());
@@ -3487,7 +3333,9 @@ public class TestInputOutputFormat {
   public void testACIDReaderNoFooterSerialize() throws Exception {
     MockFileSystem fs = new MockFileSystem(conf);
     MockPath mockPath = new MockPath(fs, "mock:///mocktable5");
-    setupAcidProperties(conf, RowType.MYROW);
+    conf.set("hive.transactional.table.scan", "true");
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, MyRow.getColumnNamesProperty());
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, MyRow.getColumnTypesProperty());
     conf.set("hive.orc.splits.include.file.footer", "false");
     conf.set("mapred.input.dir", mockPath.toString());
     conf.set("fs.defaultFS", "mock:///");
@@ -3532,8 +3380,7 @@ public class TestInputOutputFormat {
       assertTrue(split.toString().contains("start=3"));
       assertTrue(split.toString().contains("hasFooter=false"));
       assertTrue(split.toString().contains("hasBase=true"));
-      assertTrue(split.toString().contains("deltas=0"));
-      assertTrue(split.toString().contains("isOriginal=true"));
+      assertTrue(split.toString().contains("deltas=[]"));
       if (split instanceof OrcSplit) {
         assertFalse("No footer serialize test for non-vector reader, hasFooter is not expected in" +
             " orc splits.", ((OrcSplit) split).hasFooter());
@@ -3547,7 +3394,11 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    assertEquals(6, readOpsDelta);
+    // call-1: open to read footer - split 1 => mock:/mocktable5/0_0
+    // call-2: open to read data - split 1 => mock:/mocktable5/0_0
+    // call-3: open to read footer - split 2 => mock:/mocktable5/0_1
+    // call-4: open to read data - split 2 => mock:/mocktable5/0_1
+    assertEquals(4, readOpsDelta);
 
     // revert back to local fs
     conf.set("fs.defaultFS", "file:///");
@@ -3557,7 +3408,9 @@ public class TestInputOutputFormat {
   public void testACIDReaderFooterSerialize() throws Exception {
     MockFileSystem fs = new MockFileSystem(conf);
     MockPath mockPath = new MockPath(fs, "mock:///mocktable6");
-    setupAcidProperties(conf, RowType.MYROW);
+    conf.set("hive.transactional.table.scan", "true");
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, MyRow.getColumnNamesProperty());
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, MyRow.getColumnTypesProperty());
     conf.set("hive.orc.splits.include.file.footer", "true");
     conf.set("mapred.input.dir", mockPath.toString());
     conf.set("fs.defaultFS", "mock:///");
@@ -3602,8 +3455,7 @@ public class TestInputOutputFormat {
       assertTrue(split.toString().contains("start=3"));
       assertTrue(split.toString().contains("hasFooter=true"));
       assertTrue(split.toString().contains("hasBase=true"));
-      assertTrue(split.toString().contains("deltas=0"));
-      assertTrue(split.toString().contains("isOriginal=true"));
+      assertTrue(split.toString().contains("deltas=[]"));
       if (split instanceof OrcSplit) {
         assertTrue("Footer serialize test for ACID reader, hasFooter is expected in" +
             " orc splits.", ((OrcSplit) split).hasFooter());
@@ -3618,12 +3470,8 @@ public class TestInputOutputFormat {
       }
     }
     // call-1: open to read data - split 1 => mock:/mocktable6/0_0
-    // call-2: AcidUtils.getAcidState - split 1 => ls mock:/mocktable6
-    // call-3: open to read data - split 2 => mock:/mocktable6/0_1
-    // call-4: AcidUtils.getAcidState - split 2 => ls mock:/mocktable6
-    // call-5: read footer - split 2 => mock:/mocktable6/0_0 (to get offset since it's original file)
-    // call-6: file stat - split 2 => mock:/mocktable6/0_0
-    assertEquals(6, readOpsDelta);
+    // call-2: open to read data - split 2 => mock:/mocktable6/0_1
+    assertEquals(2, readOpsDelta);
 
     // revert back to local fs
     conf.set("fs.defaultFS", "file:///");
@@ -3631,14 +3479,15 @@ public class TestInputOutputFormat {
 
   @Test
   public void testACIDReaderNoFooterSerializeWithDeltas() throws Exception {
-    conf.set("fs.defaultFS", "mock:///");
-    conf.set("fs.mock.impl", MockFileSystem.class.getName());
-    FileSystem fs = FileSystem.get(conf);
+    MockFileSystem fs = new MockFileSystem(conf);
     MockPath mockPath = new MockPath(fs, "mock:///mocktable7");
-    //set up props for read
-    setupAcidProperties(conf, RowType.MYROW);
+    conf.set("hive.transactional.table.scan", "true");
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, MyRow.getColumnNamesProperty());
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, MyRow.getColumnTypesProperty());
     conf.set("hive.orc.splits.include.file.footer", "false");
     conf.set("mapred.input.dir", mockPath.toString());
+    conf.set("fs.defaultFS", "mock:///");
+    conf.set("fs.mock.impl", MockFileSystem.class.getName());
     StructObjectInspector inspector;
     synchronized (TestOrcFile.class) {
       inspector = (StructObjectInspector)
@@ -3654,19 +3503,17 @@ public class TestInputOutputFormat {
     }
     writer.close();
 
-    AcidOutputFormat.Options options = new AcidOutputFormat.Options(conf).bucket(1).minimumWriteId(1)
-        .maximumWriteId(1).inspector(inspector).finalDestination(mockPath);
-    OrcOutputFormat of = new OrcOutputFormat();
-    RecordUpdater ru = of.getRecordUpdater(mockPath, options);
+    writer = OrcFile.createWriter(new Path(new Path(mockPath + "/delta_001_002") + "/0_1"),
+        OrcFile.writerOptions(conf).blockPadding(false)
+            .bufferSize(1024).inspector(inspector));
     for (int i = 0; i < 10; ++i) {
-      ru.insert(options.getMinimumWriteId(), new MyRow(i, 2 * i));
+      writer.addRow(new MyRow(i, 2 * i));
     }
-    ru.close(false);//this deletes the side file
-
+    writer.close();
 
     OrcInputFormat orcInputFormat = new OrcInputFormat();
     InputSplit[] splits = orcInputFormat.getSplits(conf, 2);
-    assertEquals(2, splits.length);
+    assertEquals(1, splits.length);
     int readOpsBefore = -1;
     for (FileSystem.Statistics statistics : FileSystem.getAllStatistics()) {
       if (statistics.getScheme().equalsIgnoreCase("mock")) {
@@ -3681,8 +3528,14 @@ public class TestInputOutputFormat {
       assertTrue(split.toString().contains("start=3"));
       assertTrue(split.toString().contains("hasFooter=false"));
       assertTrue(split.toString().contains("hasBase=true"));
-      assertFalse("No footer serialize test for ACID reader, hasFooter is not expected in" +
-        " orc splits.", ((OrcSplit) split).hasFooter());
+      // NOTE: don't be surprised if deltas value is different
+      // in older release deltas=2 as min and max transaction are added separately to delta list.
+      // in newer release since both of them are put together deltas=1
+      assertTrue(split.toString().contains("deltas=[{ minTxnId: 1 maxTxnId: 2 stmtIds: [] }]]"));
+      if (split instanceof OrcSplit) {
+        assertFalse("No footer serialize test for ACID reader, hasFooter is not expected in" +
+            " orc splits.", ((OrcSplit) split).hasFooter());
+      }
       orcInputFormat.getRecordReader(split, conf, Reporter.NULL);
     }
 
@@ -3692,6 +3545,10 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
+    // call-1: open to read footer - split 1 => mock:/mocktable7/0_0
+    // call-2: open to read data - split 1 => mock:/mocktable7/0_0
+    // call-3: open side file (flush length) of delta directory
+    // call-4: fs.exists() check for delta_xxx_xxx/bucket_00000 file
     assertEquals(4, readOpsDelta);
 
     // revert back to local fs
@@ -3700,14 +3557,15 @@ public class TestInputOutputFormat {
 
   @Test
   public void testACIDReaderFooterSerializeWithDeltas() throws Exception {
-    conf.set("fs.defaultFS", "mock:///");
-    conf.set("fs.mock.impl", MockFileSystem.class.getName());
-    FileSystem fs = FileSystem.get(conf);//ensures that FS object is cached so that everyone uses the same instance
+    MockFileSystem fs = new MockFileSystem(conf);
     MockPath mockPath = new MockPath(fs, "mock:///mocktable8");
-    //set up props for read
-    setupAcidProperties(conf, RowType.MYROW);
+    conf.set("hive.transactional.table.scan", "true");
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, MyRow.getColumnNamesProperty());
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, MyRow.getColumnTypesProperty());
     conf.set("hive.orc.splits.include.file.footer", "true");
     conf.set("mapred.input.dir", mockPath.toString());
+    conf.set("fs.defaultFS", "mock:///");
+    conf.set("fs.mock.impl", MockFileSystem.class.getName());
     StructObjectInspector inspector;
     synchronized (TestOrcFile.class) {
       inspector = (StructObjectInspector)
@@ -3723,18 +3581,17 @@ public class TestInputOutputFormat {
     }
     writer.close();
 
-    AcidOutputFormat.Options options = new AcidOutputFormat.Options(conf).bucket(1).minimumWriteId(1)
-        .maximumWriteId(1).inspector(inspector).finalDestination(mockPath);
-    OrcOutputFormat of = new OrcOutputFormat();
-    RecordUpdater ru = of.getRecordUpdater(mockPath, options);
+    writer = OrcFile.createWriter(new Path(new Path(mockPath + "/delta_001_002") + "/0_1"),
+        OrcFile.writerOptions(conf).blockPadding(false)
+            .bufferSize(1024).inspector(inspector));
     for (int i = 0; i < 10; ++i) {
-      ru.insert(options.getMinimumWriteId(), new MyRow(i, 2 * i));
+      writer.addRow(new MyRow(i, 2 * i));
     }
-    ru.close(false);//this deletes the side file
+    writer.close();
 
     OrcInputFormat orcInputFormat = new OrcInputFormat();
     InputSplit[] splits = orcInputFormat.getSplits(conf, 2);
-    assertEquals(2, splits.length);
+    assertEquals(1, splits.length);
     int readOpsBefore = -1;
     for (FileSystem.Statistics statistics : FileSystem.getAllStatistics()) {
       if (statistics.getScheme().equalsIgnoreCase("mock")) {
@@ -3749,8 +3606,14 @@ public class TestInputOutputFormat {
       assertTrue(split.toString().contains("start=3"));
       assertTrue(split.toString().contains("hasFooter=true"));
       assertTrue(split.toString().contains("hasBase=true"));
-      assertTrue("Footer serialize test for ACID reader, hasFooter is not expected in" +
-        " orc splits.", ((OrcSplit) split).hasFooter());
+      // NOTE: don't be surprised if deltas value is different
+      // in older release deltas=2 as min and max transaction are added separately to delta list.
+      // in newer release since both of them are put together deltas=1
+      assertTrue(split.toString().contains("deltas=[{ minTxnId: 1 maxTxnId: 2 stmtIds: [] }]]"));
+      if (split instanceof OrcSplit) {
+        assertTrue("Footer serialize test for ACID reader, hasFooter is not expected in" +
+            " orc splits.", ((OrcSplit) split).hasFooter());
+      }
       orcInputFormat.getRecordReader(split, conf, Reporter.NULL);
     }
 
@@ -3760,7 +3623,10 @@ public class TestInputOutputFormat {
         readOpsDelta = statistics.getReadOps() - readOpsBefore;
       }
     }
-    assertEquals(4, readOpsDelta);
+    // call-1: open to read data - split 1 => mock:/mocktable8/0_0
+    // call-2: open side file (flush length) of delta directory
+    // call-3: fs.exists() check for delta_xxx_xxx/bucket_00000 file
+    assertEquals(3, readOpsDelta);
 
     // revert back to local fs
     conf.set("fs.defaultFS", "file:///");
@@ -3804,7 +3670,7 @@ public class TestInputOutputFormat {
     }
     writer.close(true);
     serde = new OrcSerde();
-    serde.initialize(conf, properties, null);
+    SerDeUtils.initializeSerDe(serde, conf, properties, null);
     assertEquals(OrcSerde.OrcSerdeRow.class, serde.getSerializedClass());
     inspector = (StructObjectInspector) serde.getObjectInspector();
     assertEquals("struct<x:int,y:int>", inspector.getTypeName());
@@ -3849,10 +3715,9 @@ public class TestInputOutputFormat {
    * Test schema evolution when using the reader directly.
    */
   @Test
-  public void testSchemaEvolutionOldDecimal() throws Exception {
+  public void testSchemaEvolution() throws Exception {
     TypeDescription fileSchema =
         TypeDescription.fromString("struct<a:int,b:struct<c:int>,d:string>");
-    conf.set(ConfVars.HIVE_VECTORIZED_INPUT_FORMAT_SUPPORTS_ENABLED.varname, "decimal_64");
     Writer writer = OrcFile.createWriter(testFilePath,
         OrcFile.writerOptions(conf)
             .fileSystem(fs)
@@ -3918,78 +3783,6 @@ public class TestInputOutputFormat {
   }
 
   /**
-   * Test schema evolution when using the reader directly.
-   */
-  @Test
-  public void testSchemaEvolutionDecimal64() throws Exception {
-    TypeDescription fileSchema =
-      TypeDescription.fromString("struct<a:int,b:struct<c:int>,d:string>");
-    conf.set(ConfVars.HIVE_VECTORIZED_INPUT_FORMAT_SUPPORTS_ENABLED.varname, "decimal_64");
-    Writer writer = OrcFile.createWriter(testFilePath,
-      OrcFile.writerOptions(conf)
-        .fileSystem(fs)
-        .setSchema(fileSchema)
-        .compress(org.apache.orc.CompressionKind.NONE));
-    VectorizedRowBatch batch = fileSchema.createRowBatch(TypeDescription.RowBatchVersion.USE_DECIMAL64,1000);
-    batch.size = 1000;
-    LongColumnVector lcv = ((LongColumnVector) ((StructColumnVector) batch.cols[1]).fields[0]);
-    for(int r=0; r < 1000; r++) {
-      ((LongColumnVector) batch.cols[0]).vector[r] = r * 42;
-      lcv.vector[r] = r * 10001;
-      ((BytesColumnVector) batch.cols[2]).setVal(r,
-        Integer.toHexString(r).getBytes(StandardCharsets.UTF_8));
-    }
-    writer.addRowBatch(batch);
-    writer.close();
-    TypeDescription readerSchema = TypeDescription.fromString(
-      "struct<a:int,b:struct<c:int,future1:int>,d:string,future2:int>");
-    Reader reader = OrcFile.createReader(testFilePath,
-      OrcFile.readerOptions(conf).filesystem(fs));
-    RecordReader rows = reader.rowsOptions(new Reader.Options()
-      .schema(readerSchema));
-    batch = readerSchema.createRowBatchV2();
-    lcv = ((LongColumnVector) ((StructColumnVector) batch.cols[1]).fields[0]);
-    LongColumnVector future1 = ((LongColumnVector) ((StructColumnVector) batch.cols[1]).fields[1]);
-    assertEquals(true, rows.nextBatch(batch));
-    assertEquals(1000, batch.size);
-    assertEquals(true, future1.isRepeating);
-    assertEquals(true, future1.isNull[0]);
-    assertEquals(true, batch.cols[3].isRepeating);
-    assertEquals(true, batch.cols[3].isNull[0]);
-    for(int r=0; r < batch.size; ++r) {
-      assertEquals("row " + r, r * 42, ((LongColumnVector) batch.cols[0]).vector[r]);
-      assertEquals("row " + r, r * 10001, lcv.vector[r]);
-      assertEquals("row " + r, r * 10001, lcv.vector[r]);
-      assertEquals("row " + r, Integer.toHexString(r),
-        ((BytesColumnVector) batch.cols[2]).toString(r));
-    }
-    assertEquals(false, rows.nextBatch(batch));
-    rows.close();
-
-    // try it again with an include vector
-    rows = reader.rowsOptions(new Reader.Options()
-      .schema(readerSchema)
-      .include(new boolean[]{false, true, true, true, false, false, true}));
-    batch = readerSchema.createRowBatchV2();
-    lcv = ((LongColumnVector) ((StructColumnVector) batch.cols[1]).fields[0]);
-    future1 = ((LongColumnVector) ((StructColumnVector) batch.cols[1]).fields[1]);
-    assertEquals(true, rows.nextBatch(batch));
-    assertEquals(1000, batch.size);
-    assertEquals(true, future1.isRepeating);
-    assertEquals(true, future1.isNull[0]);
-    assertEquals(true, batch.cols[3].isRepeating);
-    assertEquals(true, batch.cols[3].isNull[0]);
-    assertEquals(true, batch.cols[2].isRepeating);
-    assertEquals(true, batch.cols[2].isNull[0]);
-    for(int r=0; r < batch.size; ++r) {
-      assertEquals("row " + r, r * 42, ((LongColumnVector) batch.cols[0]).vector[r]);
-      assertEquals("row " + r, r * 10001, lcv.vector[r]);
-    }
-    assertEquals(false, rows.nextBatch(batch));
-    rows.close();
-  }
-
-  /**
    * Test column projection when using ACID.
    */
   @Test
@@ -4008,7 +3801,7 @@ public class TestInputOutputFormat {
             .fileSystem(fs)
             .setSchema(fileSchema)
             .compress(org.apache.orc.CompressionKind.NONE));
-    VectorizedRowBatch batch = fileSchema.createRowBatch(TypeDescription.RowBatchVersion.USE_DECIMAL64,1000);
+    VectorizedRowBatch batch = fileSchema.createRowBatch(1000);
     batch.size = 1000;
     StructColumnVector scv = (StructColumnVector)batch.cols[5];
     // operation
@@ -4044,24 +3837,24 @@ public class TestInputOutputFormat {
     long fileLength = fs.getFileStatus(testFilePath).getLen();
 
     // test with same schema with include
-    conf.set(ValidWriteIdList.VALID_WRITEIDS_KEY, "tbl:100:99:");
+    conf.set(ValidTxnList.VALID_TXNS_KEY, "100:99:");
     conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, "a,b,d");
     conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, "int,struct<c:int>,string");
     conf.set(ColumnProjectionUtils.READ_ALL_COLUMNS, "false");
     conf.set(ColumnProjectionUtils.READ_COLUMN_IDS_CONF_STR, "0,2");
     OrcSplit split = new OrcSplit(testFilePath, null, 0, fileLength,
         new String[0], null, false, true,
-        new ArrayList<AcidInputFormat.DeltaMetaData>(), fileLength, fileLength, workDir, null);
+        new ArrayList<AcidInputFormat.DeltaMetaData>(), fileLength, fileLength);
     OrcInputFormat inputFormat = new OrcInputFormat();
     AcidInputFormat.RowReader<OrcStruct> reader = inputFormat.getReader(split,
         new AcidInputFormat.Options(conf));
     int record = 0;
-    OrcRawRecordMerger.ReaderKey id = reader.createKey();
+    RecordIdentifier id = reader.createKey();
     OrcStruct struct = reader.createValue();
     while (reader.next(id, struct)) {
       assertEquals("id " + record, record, id.getRowId());
-      assertEquals("bucket " + record, 0, id.getBucketProperty());
-      assertEquals("writeid " + record, 1, id.getWriteId());
+      assertEquals("bucket " + record, 0, id.getBucketId());
+      assertEquals("trans " + record, 1, id.getTransactionId());
       assertEquals("a " + record,
           42 * record, ((IntWritable) struct.getFieldValue(0)).get());
       assertEquals(null, struct.getFieldValue(1));
@@ -4079,7 +3872,7 @@ public class TestInputOutputFormat {
     conf.set(ColumnProjectionUtils.READ_COLUMN_IDS_CONF_STR, "0,2,3");
     split = new OrcSplit(testFilePath, null, 0, fileLength,
         new String[0], null, false, true,
-        new ArrayList<AcidInputFormat.DeltaMetaData>(), fileLength, fileLength, workDir, null);
+        new ArrayList<AcidInputFormat.DeltaMetaData>(), fileLength, fileLength);
     inputFormat = new OrcInputFormat();
     reader = inputFormat.getReader(split, new AcidInputFormat.Options(conf));
     record = 0;
@@ -4087,8 +3880,8 @@ public class TestInputOutputFormat {
     struct = reader.createValue();
     while (reader.next(id, struct)) {
       assertEquals("id " + record, record, id.getRowId());
-      assertEquals("bucket " + record, 0, id.getBucketProperty());
-      assertEquals("writeid " + record, 1, id.getWriteId());
+      assertEquals("bucket " + record, 0, id.getBucketId());
+      assertEquals("trans " + record, 1, id.getTransactionId());
       assertEquals("a " + record,
           42 * record, ((IntWritable) struct.getFieldValue(0)).get());
       assertEquals(null, struct.getFieldValue(1));
@@ -4101,229 +3894,13 @@ public class TestInputOutputFormat {
     reader.close();
   }
 
-  @Test
-  public void testAcidReadPastLastStripeOffset() throws Exception {
-    Path baseDir = new Path(workDir, "base_00100");
-    testFilePath = new Path(baseDir, "bucket_00000");
-    fs.mkdirs(baseDir);
-    fs.delete(testFilePath, true);
-    TypeDescription fileSchema =
-        TypeDescription.fromString("struct<operation:int," +
-            "originalTransaction:bigint,bucket:int,rowId:bigint," +
-            "currentTransaction:bigint," +
-            "row:struct<a:int,b:struct<c:int>,d:string>>");
+  public void testCreateOptionsForReader_ReaderOptionConfiguration() throws Exception {
+    Configuration conf = new Configuration();
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, "col1");
+    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, "string");
 
-    OrcRecordUpdater.KeyIndexBuilder indexBuilder = new OrcRecordUpdater.KeyIndexBuilder("test");
-    OrcFile.WriterOptions options = OrcFile.writerOptions(conf)
-        .fileSystem(fs)
-        .setSchema(fileSchema)
-        .compress(org.apache.orc.CompressionKind.NONE)
-        .callback(indexBuilder)
-        .stripeSize(128);
-    // Create ORC file with small stripe size so we can write multiple stripes.
-    Writer writer = OrcFile.createWriter(testFilePath, options);
-    VectorizedRowBatch batch = fileSchema.createRowBatch(TypeDescription.RowBatchVersion.USE_DECIMAL64,1000);
-    batch.size = 1000;
-    StructColumnVector scv = (StructColumnVector)batch.cols[5];
-    // operation
-    batch.cols[0].isRepeating = true;
-    ((LongColumnVector) batch.cols[0]).vector[0] = OrcRecordUpdater.INSERT_OPERATION;
-    // original transaction
-    batch.cols[1].isRepeating = true;
-    ((LongColumnVector) batch.cols[1]).vector[0] = 1;
-    // bucket
-    batch.cols[2].isRepeating = true;
-    ((LongColumnVector) batch.cols[2]).vector[0] = BucketCodec.V1.encode(new AcidOutputFormat
-        .Options(conf).bucket(0).statementId(0));
-    // current transaction
-    batch.cols[4].isRepeating = true;
-    ((LongColumnVector) batch.cols[4]).vector[0] = 1;
-
-    LongColumnVector lcv = (LongColumnVector)
-        ((StructColumnVector) scv.fields[1]).fields[0];
-    for(int r=0; r < 1000; r++) {
-      // row id
-      ((LongColumnVector) batch.cols[3]).vector[r] = r;
-      // a
-      ((LongColumnVector) scv.fields[0]).vector[r] = r * 42;
-      // b.c
-      lcv.vector[r] = r * 10001;
-      // d
-      ((BytesColumnVector) scv.fields[2]).setVal(r,
-          Integer.toHexString(r).getBytes(StandardCharsets.UTF_8));
-      indexBuilder.addKey(OrcRecordUpdater.INSERT_OPERATION,
-          1, (int)(((LongColumnVector) batch.cols[2]).vector[0]), r);
-    }
-
-    // Minimum 5000 rows per stripe.
-    for (int idx = 0; idx < 8; ++idx) {
-      writer.addRowBatch(batch);
-      // bucket
-      batch.cols[2].isRepeating = true;
-      ((LongColumnVector) batch.cols[2]).vector[0] = BucketCodec.V1.encode(new AcidOutputFormat
-          .Options(conf).bucket(0).statementId(idx + 1));
-      for(long row_id : ((LongColumnVector) batch.cols[3]).vector) {
-        indexBuilder.addKey(OrcRecordUpdater.INSERT_OPERATION,
-            1, (int)(((LongColumnVector) batch.cols[2]).vector[0]), row_id);
-      }
-    }
-    writer.close();
-    long fileLength = fs.getFileStatus(testFilePath).getLen();
-
-    // Find the last stripe.
-    Reader orcReader = OrcFile.createReader(fs, testFilePath);
-    List<StripeInformation> stripes = orcReader.getStripes();
-    StripeInformation lastStripe = stripes.get(stripes.size() - 1);
-    long lastStripeOffset = lastStripe.getOffset();
-    long lastStripeLength = lastStripe.getLength();
-
-    RecordIdentifier[] keyIndex = OrcRecordUpdater.parseKeyIndex(orcReader);
-    Assert.assertEquals("Index length doesn't match number of stripes",
-        stripes.size(), keyIndex.length);
-    Assert.assertEquals("1st Index entry mismatch",
-        new RecordIdentifier(1, 536870916, 999), keyIndex[0]);
-    Assert.assertEquals("2nd Index entry mismatch",
-        new RecordIdentifier(1, 536870920, 999), keyIndex[1]);
-
-    // test with same schema with include
-    conf.set(ValidTxnList.VALID_TXNS_KEY, "100:99:");
-    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, "a,b,d");
-    conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, "int,struct<c:int>,string");
-    conf.set(ColumnProjectionUtils.READ_ALL_COLUMNS, "false");
-    conf.set(ColumnProjectionUtils.READ_COLUMN_IDS_CONF_STR, "0,2");
-
-    LOG.info("Last stripe " + stripes.size() +
-        ", offset " + lastStripeOffset + ", length " + lastStripeLength);
-    // Specify an OrcSplit that starts beyond the offset of the last stripe.
-    OrcSplit split = new OrcSplit(testFilePath, null, lastStripeOffset + 1, lastStripeLength,
-        new String[0], null, false, true,
-        new ArrayList<AcidInputFormat.DeltaMetaData>(), fileLength, fileLength, workDir, null);
-    OrcInputFormat inputFormat = new OrcInputFormat();
-    AcidInputFormat.RowReader<OrcStruct> reader = inputFormat.getReader(split,
-        new AcidInputFormat.Options(conf));
-
-    int record = 0;
-    OrcRawRecordMerger.ReaderKey id = reader.createKey();
-    OrcStruct struct = reader.createValue();
-    // Iterate through any records.
-    // Because our read offset was past the stripe offset, the rows from the last stripe will
-    // not be read. Thus 0 records.
-    while (reader.next(id, struct)) {
-      record += 1;
-    }
-    assertEquals(0, record);
-
-    reader.close();
-  }
-
-
-  private static List<MockFile> mockDeltaWithSideFileForStreaming(String delta, int contentLength, int flush_length) {
-    final int blockSize = 1000;
-    boolean isDeltaHflushed = contentLength < flush_length;
-
-    List<MockFile> files = new LinkedList<>();
-
-    ByteBuffer bb = ByteBuffer.allocate(Long.BYTES);
-    bb.putLong(flush_length);
-    bb.array();
-
-    MockBlock[] blocks = new MockBlock[(contentLength / blockSize) + 1];
-    for (int i = 0; i < blocks.length; ++i) {
-      blocks[i] = new MockBlock("host1");
-    }
-
-    files.add(new MockFile("mock:/streaming/" + delta + "/bucket_00000", blockSize, new byte[contentLength], isDeltaHflushed,
-        blocks));
-    files.add(new MockFile("mock:/streaming/" + delta + "/bucket_00000_flush_length", blockSize, bb.array(), false,
-        new MockBlock("host1")));
-
-    return files;
-  }
-
-  private List<OrcSplit> splitsForStreamingAcidTable(List<MockFile> files) throws Exception {
-    try {
-      MockFileSystem fs = new MockFileSystem(conf);
-      files.forEach(f -> MockFileSystem.addGlobalFile(f));
-      conf.set("bucket_count", "1");
-      //set up props for read
-      setupAcidProperties(conf, RowType.DUMMYROW);
-      conf.setBoolean(HiveConf.ConfVars.HIVE_VECTORIZATION_ENABLED.varname, true);
-      MockPath mockPath = new MockPath(fs, "mock:/streaming");
-      conf.set("mapred.input.dir", mockPath.toString());
-      conf.set("fs.defaultFS", "mock:///");
-      conf.set("fs.mock.impl", MockFileSystem.class.getName());
-      conf.set(ConfVars.HIVE_ORC_SPLIT_STRATEGY.varname, "BI");
-      OrcInputFormat.Context context = new OrcInputFormat.Context(conf, 0);
-
-      OrcInputFormat.FileGenerator gen =
-          new OrcInputFormat.FileGenerator(context, () -> fs, new MockPath(fs,
-              "mock:/streaming"),
-              false, null);
-      List<OrcInputFormat.SplitStrategy<?>> splitStrategies = createSplitStrategies(context, gen);
-      assertEquals(1, splitStrategies.size());
-      assertEquals(true, splitStrategies.get(0) instanceof OrcInputFormat.ACIDSplitStrategy);
-      return ((OrcInputFormat.ACIDSplitStrategy)splitStrategies.get(0)).getSplits();
-
-    } finally {
-      MockFileSystem.clearGlobalFiles();
-    }
-  }
-
-  @Test
-  public void testAcidTableStreamingBISplitGeneration() throws Exception {
-    List<OrcSplit> result = null;
-    List<MockFile> files = new LinkedList<>();
-
-    // 1 complete delta file + 1 incomplete where more rows were committed than written to disk
-    // (1000) + (15/95)
-    files.addAll(mockDeltaWithSideFileForStreaming("delta_0000001_0000010_0000", 1000, 1000));
-    files.addAll(mockDeltaWithSideFileForStreaming("delta_0000011_0000020_0000", 15, 95));
-    result = splitsForStreamingAcidTable(files);
-    files.clear();
-    assertEquals(1000, result.get(0).getLength());
-    assertEquals(95, result.get(1).getLength());
-
-    // 1 incomplete delta with 2 complete and 1 incomplete blocks: (1000 + 1000 + 500/800)
-    files.addAll(mockDeltaWithSideFileForStreaming("delta_0000021_0000030_0000", 2500, 2800));
-    result = splitsForStreamingAcidTable(files);
-    files.clear();
-    assertEquals(1000, result.get(0).getLength());
-    assertEquals(1000, result.get(1).getLength());
-    assertEquals(800, result.get(2).getLength());
-
-    // 1 complete delta but shorter flush_length - though I think this is almost impossible
-    files.addAll(mockDeltaWithSideFileForStreaming("delta_0000021_0000030_0000", 1000, 450));
-    result = splitsForStreamingAcidTable(files);
-    files.clear();
-    assertEquals(450, result.get(0).getLength());
-
-  }
-
-  enum RowType {
-    DUMMYROW,
-    MYROW,
-    BIGROW;
-  }
-
-  private void setupAcidProperties(JobConf conf, RowType rowType) {
-    switch (rowType){
-
-    case DUMMYROW:
-      conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, TestVectorizedOrcAcidRowBatchReader.DummyRow.getColumnNamesProperty());
-      conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, TestVectorizedOrcAcidRowBatchReader.DummyRow.getColumnTypesProperty());
-      break;
-    case MYROW:
-      conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, MyRow.getColumnNamesProperty());
-      conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, MyRow.getColumnTypesProperty());
-      break;
-    case BIGROW:
-      conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS, BigRow.getColumnNamesProperty());
-      conf.set(IOConstants.SCHEMA_EVOLUTION_COLUMNS_TYPES, BigRow.getColumnTypesProperty());
-      break;
-    }
-    conf.setBoolean(hive_metastoreConstants.TABLE_IS_TRANSACTIONAL, true);
-    conf.set(ValidTxnList.VALID_TXNS_KEY,
-        new ValidReadTxnList(new long[0], new BitSet(), 1000, Long.MAX_VALUE).writeToString());
-    AcidUtils.setAcidOperationalProperties(conf, true, AcidUtils.AcidOperationalProperties.getDefault());
+    conf.set(OrcConf.FORCE_POSITIONAL_EVOLUTION.getHiveConfName(), Boolean.TRUE.toString());
+    Reader.Options options = OrcInputFormat.createOptionsForReader(conf);
+    assertTrue(options.getForcePositionalEvolution());
   }
 }
