@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -20,7 +20,6 @@ package org.apache.hadoop.hive.ql.io.sarg;
 
 import static junit.framework.Assert.assertEquals;
 import static junit.framework.Assert.assertTrue;
-import static org.apache.hadoop.hive.ql.io.sarg.ConvertAstToSearchArg.sargToKryo;
 
 import com.google.common.collect.Sets;
 
@@ -63,12 +62,8 @@ public class TestSearchArgumentImpl {
     return new ExpressionTree(ExpressionTree.Operator.OR, arg);
   }
 
-  private static ExpressionTree leaf(int id) {
-    PredicateLeafImpl result = new PredicateLeafImpl(PredicateLeaf.Operator.EQUALS,
-        PredicateLeaf.Type.LONG,
-        "x", (long) id, null);
-    result.setId(id);
-    return new ExpressionTree(result);
+  private ExpressionTree leaf(int leaf) {
+    return new ExpressionTree(leaf);
   }
 
   private ExpressionTree constant(TruthValue val) {
@@ -90,100 +85,100 @@ public class TestSearchArgumentImpl {
   @Test
   public void testNotPushdown() throws Exception {
     assertEquals("leaf-1", SearchArgumentImpl.BuilderImpl.pushDownNot(leaf(1))
-        .toOldString());
+        .toString());
     assertEquals("(not leaf-1)",
-        SearchArgumentImpl.BuilderImpl.pushDownNot(not(leaf(1))).toOldString());
+        SearchArgumentImpl.BuilderImpl.pushDownNot(not(leaf(1))).toString());
     assertEquals("leaf-1",
         SearchArgumentImpl.BuilderImpl.pushDownNot(not(not(leaf(1))))
-            .toOldString());
+            .toString());
     assertEquals("(not leaf-1)",
         SearchArgumentImpl.BuilderImpl.pushDownNot(not(not(not(leaf(1))))).
-            toOldString());
+            toString());
     assertEquals("(or leaf-1 (not leaf-2))",
         SearchArgumentImpl.BuilderImpl.pushDownNot(not(and(not(leaf(1)),
-            leaf(2)))).toOldString());
+            leaf(2)))).toString());
     assertEquals("(and (not leaf-1) leaf-2)",
         SearchArgumentImpl.BuilderImpl.pushDownNot(not(or(leaf(1),
-            not(leaf(2))))).toOldString());
+            not(leaf(2))))).toString());
     assertEquals("(or (or (not leaf-1) leaf-2) leaf-3)",
         SearchArgumentImpl.BuilderImpl.pushDownNot(or(not(and(leaf(1),
                 not(leaf(2)))),
-            not(not(leaf(3))))).toOldString());
+            not(not(leaf(3))))).toString());
     assertEquals("NO", SearchArgumentImpl.BuilderImpl.pushDownNot(
-        not(constant(TruthValue.YES))).toOldString());
+        not(constant(TruthValue.YES))).toString());
     assertEquals("YES", SearchArgumentImpl.BuilderImpl.pushDownNot(
-        not(constant(TruthValue.NO))).toOldString());
+        not(constant(TruthValue.NO))).toString());
     assertEquals("NULL", SearchArgumentImpl.BuilderImpl.pushDownNot(
-        not(constant(TruthValue.NULL))).toOldString());
+        not(constant(TruthValue.NULL))).toString());
     assertEquals("YES_NO", SearchArgumentImpl.BuilderImpl.pushDownNot(
-        not(constant(TruthValue.YES_NO))).toOldString());
+        not(constant(TruthValue.YES_NO))).toString());
     assertEquals("YES_NULL", SearchArgumentImpl.BuilderImpl.pushDownNot(
-        not(constant(TruthValue.NO_NULL))).toOldString());
+        not(constant(TruthValue.NO_NULL))).toString());
     assertEquals("NO_NULL", SearchArgumentImpl.BuilderImpl.pushDownNot(
-        not(constant(TruthValue.YES_NULL))).toOldString());
+        not(constant(TruthValue.YES_NULL))).toString());
     assertEquals("YES_NO_NULL", SearchArgumentImpl.BuilderImpl.pushDownNot(
-        not(constant(TruthValue.YES_NO_NULL))).toOldString());
+        not(constant(TruthValue.YES_NO_NULL))).toString());
   }
 
   @Test
   public void testFlatten() throws Exception {
-    assertEquals("leaf-1", SearchArgumentImpl.BuilderImpl.flatten(leaf(1)).toOldString());
+    assertEquals("leaf-1", SearchArgumentImpl.BuilderImpl.flatten(leaf(1)).toString());
     assertEquals("NO",
         SearchArgumentImpl.BuilderImpl.flatten(constant(TruthValue.NO)).toString());
     assertEquals("(not (not leaf-1))",
-        SearchArgumentImpl.BuilderImpl.flatten(not(not(leaf(1)))).toOldString());
+        SearchArgumentImpl.BuilderImpl.flatten(not(not(leaf(1)))).toString());
     assertEquals("(and leaf-1 leaf-2)",
-        SearchArgumentImpl.BuilderImpl.flatten(and(leaf(1), leaf(2))).toOldString());
+        SearchArgumentImpl.BuilderImpl.flatten(and(leaf(1), leaf(2))).toString());
     assertEquals("(and (or leaf-1 leaf-2) leaf-3)",
         SearchArgumentImpl.BuilderImpl.flatten(and(or(leaf(1), leaf(2)), leaf(3))
-        ).toOldString());
+        ).toString());
     assertEquals("(and leaf-1 leaf-2 leaf-3 leaf-4)",
         SearchArgumentImpl.BuilderImpl.flatten(and(and(leaf(1), leaf(2)),
-            and(leaf(3), leaf(4)))).toOldString());
+            and(leaf(3), leaf(4)))).toString());
     assertEquals("(or leaf-1 leaf-2 leaf-3 leaf-4)",
         SearchArgumentImpl.BuilderImpl.flatten(or(leaf(1), or(leaf(2), or(leaf(3),
-            leaf(4))))).toOldString());
+            leaf(4))))).toString());
     assertEquals("(or leaf-1 leaf-2 leaf-3 leaf-4)",
         SearchArgumentImpl.BuilderImpl.flatten(or(or(or(leaf(1), leaf(2)), leaf(3)),
-            leaf(4))).toOldString());
+            leaf(4))).toString());
     assertEquals("(or leaf-1 leaf-2 leaf-3 leaf-4 leaf-5 leaf-6)",
         SearchArgumentImpl.BuilderImpl.flatten(or(or(leaf(1), or(leaf(2), leaf(3))),
-            or(or(leaf(4), leaf(5)), leaf(6)))).toOldString());
+            or(or(leaf(4), leaf(5)), leaf(6)))).toString());
     assertEquals("(and (not leaf-1) leaf-2 (not leaf-3) leaf-4 (not leaf-5) leaf-6)",
         SearchArgumentImpl.BuilderImpl.flatten(and(and(not(leaf(1)), and(leaf(2),
                 not(leaf(3)))), and(and(leaf(4), not(leaf(5))), leaf(6)))
-        ).toOldString());
+        ).toString());
     assertEquals("(not (and leaf-1 leaf-2 leaf-3))",
         SearchArgumentImpl.BuilderImpl.flatten(not(and(leaf(1), and(leaf(2), leaf(3))))
-        ).toOldString());
+        ).toString());
   }
 
   @Test
   public void testFoldMaybe() throws Exception {
     assertEquals("(and leaf-1)",
         SearchArgumentImpl.BuilderImpl.foldMaybe(and(leaf(1),
-            constant(TruthValue.YES_NO_NULL))).toOldString());
+            constant(TruthValue.YES_NO_NULL))).toString());
     assertEquals("(and leaf-1 leaf-2)",
         SearchArgumentImpl.BuilderImpl.foldMaybe(and(leaf(1),
-            constant(TruthValue.YES_NO_NULL), leaf(2))).toOldString());
+            constant(TruthValue.YES_NO_NULL), leaf(2))).toString());
     assertEquals("(and leaf-1 leaf-2)",
         SearchArgumentImpl.BuilderImpl.
             foldMaybe(and(constant(TruthValue.YES_NO_NULL),
-                leaf(1), leaf(2), constant(TruthValue.YES_NO_NULL))).toOldString());
+                leaf(1), leaf(2), constant(TruthValue.YES_NO_NULL))).toString());
     assertEquals("YES_NO_NULL",
         SearchArgumentImpl.BuilderImpl.
             foldMaybe(and(constant(TruthValue.YES_NO_NULL),
-                constant(TruthValue.YES_NO_NULL))).toOldString());
+                constant(TruthValue.YES_NO_NULL))).toString());
     assertEquals("YES_NO_NULL",
         SearchArgumentImpl.BuilderImpl.
             foldMaybe(or(leaf(1),
-                constant(TruthValue.YES_NO_NULL))).toOldString());
+                constant(TruthValue.YES_NO_NULL))).toString());
     assertEquals("(or leaf-1 (and leaf-2))",
         SearchArgumentImpl.BuilderImpl.foldMaybe(or(leaf(1),
-            and(leaf(2), constant(TruthValue.YES_NO_NULL)))).toOldString());
+            and(leaf(2), constant(TruthValue.YES_NO_NULL)))).toString());
     assertEquals("(and leaf-1)",
         SearchArgumentImpl.BuilderImpl.foldMaybe(and(or(leaf(2),
-            constant(TruthValue.YES_NO_NULL)), leaf(1))).toOldString());
+            constant(TruthValue.YES_NO_NULL)), leaf(1))).toString());
     assertEquals("(and leaf-100)", SearchArgumentImpl.BuilderImpl.foldMaybe(
         SearchArgumentImpl.BuilderImpl.convertToCNF(and(leaf(100),
             or(and(leaf(0), leaf(1)),
@@ -194,30 +189,30 @@ public class TestSearchArgumentImpl {
                 and(leaf(10), leaf(11)),
                 and(leaf(12), leaf(13)),
                 and(leaf(14), leaf(15)),
-                and(leaf(16), leaf(17)))))).toOldString());
+                and(leaf(16), leaf(17)))))).toString());
   }
 
   @Test
   public void testCNF() throws Exception {
     assertEquals("leaf-1", SearchArgumentImpl.BuilderImpl.convertToCNF(leaf(1)).
-        toOldString());
+        toString());
     assertEquals("NO", SearchArgumentImpl.BuilderImpl.convertToCNF(
         constant(TruthValue.NO)).toString());
     assertEquals("(not leaf-1)", SearchArgumentImpl.BuilderImpl.convertToCNF(
-        not(leaf(1))).toOldString());
+        not(leaf(1))).toString());
     assertEquals("(and leaf-1 leaf-2)", SearchArgumentImpl.BuilderImpl.
         convertToCNF(
-            and(leaf(1), leaf(2))).toOldString());
+            and(leaf(1), leaf(2))).toString());
     assertEquals("(or (not leaf-1) leaf-2)", SearchArgumentImpl.BuilderImpl.
         convertToCNF(
-            or(not(leaf(1)), leaf(2))).toOldString());
+            or(not(leaf(1)), leaf(2))).toString());
     assertEquals("(and (or leaf-1 leaf-2) (not leaf-3))",
         SearchArgumentImpl.BuilderImpl.convertToCNF(
-            and(or(leaf(1), leaf(2)), not(leaf(3)))).toOldString());
+            and(or(leaf(1), leaf(2)), not(leaf(3)))).toString());
     assertEquals("(and (or leaf-1 leaf-3) (or leaf-2 leaf-3)" +
         " (or leaf-1 leaf-4) (or leaf-2 leaf-4))",
         SearchArgumentImpl.BuilderImpl.convertToCNF(
-            or(and(leaf(1), leaf(2)), and(leaf(3), leaf(4)))).toOldString());
+            or(and(leaf(1), leaf(2)), and(leaf(3), leaf(4)))).toString());
     assertEquals("(and" +
         " (or leaf-1 leaf-5) (or leaf-2 leaf-5)" +
         " (or leaf-3 leaf-5) (or leaf-4 leaf-5)" +
@@ -225,7 +220,7 @@ public class TestSearchArgumentImpl {
         " (or leaf-3 leaf-6) (or leaf-4 leaf-6))",
         SearchArgumentImpl.BuilderImpl.convertToCNF(
             or(and(leaf(1), leaf(2), leaf(3), leaf(4)),
-                and(leaf(5), leaf(6)))).toOldString());
+                and(leaf(5), leaf(6)))).toString());
     assertEquals("(and" +
         " (or leaf-5 leaf-6 (not leaf-7) leaf-1 leaf-3)" +
         " (or leaf-5 leaf-6 (not leaf-7) leaf-2 leaf-3)" +
@@ -235,7 +230,7 @@ public class TestSearchArgumentImpl {
             or(and(leaf(1), leaf(2)),
                 and(leaf(3), leaf(4)),
                 or(leaf(5), leaf(6)),
-                not(leaf(7)))).toOldString());
+                not(leaf(7)))).toString());
     assertEquals("(and" +
         " (or leaf-8 leaf-0 leaf-3 leaf-6)" +
         " (or leaf-8 leaf-1 leaf-3 leaf-6)" +
@@ -259,7 +254,7 @@ public class TestSearchArgumentImpl {
                 leaf(2)),
             and(leaf(3), leaf(4), leaf(5)),
             and(leaf(6), leaf(7)),
-            leaf(8))).toOldString());
+            leaf(8))).toString());
     assertEquals("YES_NO_NULL", SearchArgumentImpl.BuilderImpl.
         convertToCNF(or(and(leaf(0), leaf(1)),
             and(leaf(2), leaf(3)),
@@ -280,7 +275,7 @@ public class TestSearchArgumentImpl {
                 and(leaf(10), leaf(11)),
                 and(leaf(12), leaf(13)),
                 and(leaf(14), leaf(15)),
-                and(leaf(16), leaf(17))))).toOldString());
+                and(leaf(16), leaf(17))))).toString());
     assertNoSharedNodes(SearchArgumentImpl.BuilderImpl.
         convertToCNF(or(and(leaf(0), leaf(1), leaf(2)),
             and(leaf(3), leaf(4), leaf(5)),
@@ -305,7 +300,7 @@ public class TestSearchArgumentImpl {
 
   @Test
   public void testBuilder() throws Exception {
-    SearchArgumentImpl sarg = (SearchArgumentImpl)
+    SearchArgument sarg =
         SearchArgumentFactory.newBuilder()
             .startAnd()
             .lessThan("x", PredicateLeaf.Type.LONG, 10L)
@@ -316,8 +311,8 @@ public class TestSearchArgumentImpl {
     assertEquals("leaf-0 = (LESS_THAN x 10), " +
         "leaf-1 = (LESS_THAN_EQUALS y hi), " +
         "leaf-2 = (EQUALS z 1.0), " +
-        "expr = (and leaf-0 leaf-1 leaf-2)", sarg.toOldString());
-    sarg = (SearchArgumentImpl) SearchArgumentFactory.newBuilder()
+        "expr = (and leaf-0 leaf-1 leaf-2)", sarg.toString());
+    sarg = SearchArgumentFactory.newBuilder()
         .startNot()
         .startOr()
         .isNull("x", PredicateLeaf.Type.LONG)
@@ -331,13 +326,12 @@ public class TestSearchArgumentImpl {
         "leaf-1 = (BETWEEN y 10 20), " +
         "leaf-2 = (IN z 1 2 3), " +
         "leaf-3 = (NULL_SAFE_EQUALS a stinger), " +
-        "expr = (and (not leaf-0) (not leaf-1) (not leaf-2) (not leaf-3))",
-        sarg.toOldString());
+        "expr = (and (not leaf-0) (not leaf-1) (not leaf-2) (not leaf-3))", sarg.toString());
   }
 
   @Test
   public void testBuilderComplexTypes() throws Exception {
-    SearchArgumentImpl sarg = (SearchArgumentImpl)
+    SearchArgument sarg =
         SearchArgumentFactory.newBuilder()
             .startAnd()
             .lessThan("x", PredicateLeaf.Type.DATE,
@@ -350,9 +344,9 @@ public class TestSearchArgumentImpl {
     assertEquals("leaf-0 = (LESS_THAN x 1970-01-11), " +
         "leaf-1 = (LESS_THAN_EQUALS y hi        ), " +
         "leaf-2 = (EQUALS z 1), " +
-        "expr = (and leaf-0 leaf-1 leaf-2)", sarg.toOldString());
+        "expr = (and leaf-0 leaf-1 leaf-2)", sarg.toString());
 
-    sarg = (SearchArgumentImpl) SearchArgumentFactory.newBuilder()
+    sarg = SearchArgumentFactory.newBuilder()
         .startNot()
         .startOr()
         .isNull("x", PredicateLeaf.Type.LONG)
@@ -369,12 +363,12 @@ public class TestSearchArgumentImpl {
         "leaf-2 = (IN z 1 2 3), " +
         "leaf-3 = (NULL_SAFE_EQUALS a stinger), " +
         "expr = (and (not leaf-0) (not leaf-1) (not leaf-2) (not leaf-3))",
-        sarg.toOldString());
+        sarg.toString());
   }
 
   @Test
   public void testBuilderComplexTypes2() throws Exception {
-    SearchArgumentImpl sarg = (SearchArgumentImpl)
+    SearchArgument sarg =
         SearchArgumentFactory.newBuilder()
             .startAnd()
             .lessThan("x", PredicateLeaf.Type.DATE, Date.valueOf("2005-3-12"))
@@ -387,9 +381,9 @@ public class TestSearchArgumentImpl {
     assertEquals("leaf-0 = (LESS_THAN x 2005-03-12), " +
         "leaf-1 = (LESS_THAN_EQUALS y hi        ), " +
         "leaf-2 = (EQUALS z 1), " +
-        "expr = (and leaf-0 leaf-1 leaf-2)", sarg.toOldString());
+        "expr = (and leaf-0 leaf-1 leaf-2)", sarg.toString());
 
-    sarg = (SearchArgumentImpl) SearchArgumentFactory.newBuilder()
+    sarg = SearchArgumentFactory.newBuilder()
         .startNot()
         .startOr()
         .isNull("x", PredicateLeaf.Type.LONG)
@@ -406,20 +400,20 @@ public class TestSearchArgumentImpl {
         "leaf-2 = (IN z 1 2 3), " +
         "leaf-3 = (NULL_SAFE_EQUALS a stinger), " +
         "expr = (and (not leaf-0) (not leaf-1) (not leaf-2) (not leaf-3))",
-        sarg.toOldString());
+        sarg.toString());
   }
 
   @Test
   public void testBuilderFloat() throws Exception {
-    SearchArgumentImpl sarg = (SearchArgumentImpl)
+    SearchArgument sarg =
         SearchArgumentFactory.newBuilder()
             .startAnd()
             .lessThan("x", PredicateLeaf.Type.LONG, 22L)
             .lessThan("x1", PredicateLeaf.Type.LONG, 22L)
             .lessThanEquals("y", PredicateLeaf.Type.STRING,
                 new HiveChar("hi", 10).toString())
-            .equals("z", PredicateLeaf.Type.FLOAT, Double.valueOf(0.22))
-            .equals("z1", PredicateLeaf.Type.FLOAT, Double.valueOf(0.22))
+            .equals("z", PredicateLeaf.Type.FLOAT, new Double(0.22))
+            .equals("z1", PredicateLeaf.Type.FLOAT, new Double(0.22))
             .end()
             .build();
     assertEquals("leaf-0 = (LESS_THAN x 22), " +
@@ -427,7 +421,7 @@ public class TestSearchArgumentImpl {
         "leaf-2 = (LESS_THAN_EQUALS y hi        ), " +
         "leaf-3 = (EQUALS z 0.22), " +
         "leaf-4 = (EQUALS z1 0.22), " +
-        "expr = (and leaf-0 leaf-1 leaf-2 leaf-3 leaf-4)", sarg.toOldString());
+        "expr = (and leaf-0 leaf-1 leaf-2 leaf-3 leaf-4)", sarg.toString());
   }
 
   @Test
@@ -444,7 +438,7 @@ public class TestSearchArgumentImpl {
         .end()
         .build();
 
-    String serializedSarg = sargToKryo(sarg);
+    String serializedSarg = TestInputOutputFormat.toKryo(sarg);
     SearchArgument sarg2 = ConvertAstToSearchArg.create(serializedSarg);
 
     Field literalField = PredicateLeafImpl.class.getDeclaredField("literal");
